--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Brug fugtboks til at regulere fugtigheden",
     "same_day": "Samme dag",
     "w_temp_set": "Hvilken temperatur skal indstilles?",
+    "asko": "ASKO",
     "eco_meter": "Økomåler",
     "asko_eco_meter_desc": "## er en nyttig smart indikator til at bestemme din miljøpåvirkning baseret på det valgte program og ekstra muligheder, når det kommer til energi-, vand- og rengøringsmiddelforbrug.",
     "wm86_autodose_desc": "I stedet for at gøre det til en kamp, ​​lad vaskemaskinen måle præcis den rigtige dosering af vaskemiddel. Vores vaskemaskiner med Auto Dose system måler vaskemidlet mod vaskemængde, snavsniveau, vandhårdhed, programtype og temperatur. Altid perfekt dosering og ikke mere overdosering. Her kan du justere dine standardindstillinger for Auto Dose.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Lær mere om de vigtigste funktioner i Smart Support",
     "smart_energy_helps": "Smart Energy hjælper dig med at overvåge og holde enheder i energieffektiv tilstand",
     "smart_energy_helps_1_content": "Aktiv ECO-tilstand for dine apparater. Analyser enhedens energiforbrug statistisk. Overvåg energibesparelsesdata og sæt energiforbrugsmål.",
-    "smart_energy_helps_2": "2.Overvågning af energiforbrug",
-    "smart_energy_helps_2_content": "Beregn hele husets strøm- og vandforbrug på daglig, månedlig og årlig basis. du kan også se forbrugsstatistikken for de enkelte enheder, andelen af ​​energiforbruget for hver enhed inden for den valgte periode, det samlede og individuelle energiforbrug.",
-    "smart_energy_helps_3": "3.Energiassistent",
     "smart_energy_helps_3_content": "Sæt energibesparende mål, og send meddelelser til brugerne, når de fastsatte målværdier er nået.",
     "air_care_helps": "Air care har til formål at løse den intelligente styring af temperatur, luftfugtighed og luft i hele huset",
-    "air_care_helps_1": "1. Luftevaluering",
-    "air_care_helps_1_content": "Overvåg temperatur- og fugtighedsstatus for hvert rum i realtid, og giv komfortevalueringer og påmindelser baseret på aircondition",
-    "air_care_helps_2": "2. Optimering med et enkelt klik",
     "air_care_helps_2_content": "Optimering kan startes med et enkelt klik. Vi tilbyder fem forskellige optimeringsordninger. Hver optimeringstilstand kan justeres efter brugernes behov, hvilket giver brugerne skræddersyede optimeringsløsninger.",
-    "air_care_helps_3": "3.3D værelsesudsigt",
     "air_care_helps_3_content": "Hold øje med dit værelses status og apparater gennem en detaljeret 3D-visualisering af dit hjem.",
     "smart_laundry_key": "Smart vasketøj",
     "smart_laundry_helps": "Smart Laundry tilbyder ekspert vasketips, en intuitiv vaskeassistent og problemfri vaskemiddelhåndtering, hvilket sikrer en uovertruffen vaskeoplevelse",
-    "smart_laundry_helps_1": "1.Tilpasset vaskeri",
     "smart_laundry_helps_1_content": "Personlige cyklusser baseret på brugerprofiler og præferencer med tags til forskellige årstider, udendørs aktiviteter, babypleje og meget mere.",
-    "smart_laundry_helps_2": "2.Vaskemiddelhåndtering",
     "smart_laundry_helps_2_content": "Optimer din vaskerutine med Smart Home Laundry Assistant, genkend automatisk vaskemiddelmærker og administrer doseringen i din vaskemaskine.",
-    "smart_laundry_helps_3": "3. Rapport om brug af vasketøj",
     "smart_laundry_helps_3_content": "Viser ugentlige, månedlige og årlige rapporter om brugerens brug af vaskeprogrammet, samt månedens vand- og elforbrug og tromlengøring.",
     "smart_kitchen_key": "Smart køkken",
     "smart_kitchen_helps": "Smart Kitchen giver dig en hidtil uset intelligent madlavningsoplevelse, herunder intelligente opskrifter, vinparringer, opskriftsassistenter og håndtering af ingredienser, vin og drikkevarer",
-    "smart_kitchen_helps_1": "1.Kokken opskrift",
     "smart_kitchen_helps_1_content": "Oplev mesteropskrifter i unikke smagsvarianter, når de tilberedes i forskellige ovne, som følger opskriftens tilberedningsvejledning med blot et enkelt klik.",
-    "smart_kitchen_helps_2": "2.Opskriftsassistent",
     "smart_kitchen_helps_2_content": "Tilpas og generer opskrifter baseret på dine personlige præferencer, herunder ernæring, køkkener, livsstil og allergier.",
-    "smart_kitchen_helps_3": "3.Fødevarehåndtering",
     "smart_kitchen_helps_3_content": "Tilføj og se detaljer om ofte brugte ingredienser såsom udløbsdato. Match hurtigt passende madopskrifter og sendte manglende ingredienser til indkøbslisten.",
-    "smart_kitchen_helps_4": "Drikkevarehåndtering",
     "smart_kitchen_helps_4_content": "Tilføj drikkevarer og opret en drikkeliste, se detaljerede oplysninger om hver enkelt opbevaret drikkevare.",
-    "smart_kitchen_helps_5": "Vin Beholdning",
     "smart_kitchen_helps_5_content": "Scan for at oprette vinkælderliste fra VIvino, indstil påmindelser for optimal drikkeperiode og anbefal madparring baseret på vintype.",
-    "smart_kitchen_helps_6": "6. Indkøbsliste",
     "smart_kitchen_helps_6_content": "Generer indkøbslisten ud fra opskriften, marker de varer, du allerede ejer og har erhvervet, som din indkøbsreference.",
     "smart_support_key": "Smart support",
     "smart_support_helps": "Smart Support giver omfattende assistance til dine enheder. Du kan få rengørings- og plejetips til daglig vedligeholdelse, selvdiagnosticering med et enkelt klik for at kontrollere status for alle dine enheder og give mulige løsninger til unormale operationer",
-    "smart_support_helps_1": "1.Rengørings- og vedligeholdelsestips",
     "smart_support_helps_1_content": "Giv forslag til daglig rengøring og vedligeholdelse af produktet.",
-    "smart_support_helps_2": "2.Et-klik selv Dignosis",
     "smart_support_helps_2_content": "Et-klik selvinspektion for at forstå status for alle husholdningsapparater. Når et problem opdages, skal du give anbefalede løsninger.",
-    "smart_support_helps_3": "Fejlfinding",
     "smart_support_helps_3_content": "Når enheden har et problem, kan brugere selvhjælpe, fejlfinde og løse problemet i henhold til fejlvejledningen.",
-    "smart_support_helps_4": "4.Rapportér problem",
     "smart_support_helps_4_content": "Hvis der er problemer med APP'en eller produktbrugen, kan brugerne give feedback online for at reducere kommunikationstiden med callcenteret.",
-    "smart_support_helps_5": "5.Kontakt os",
     "smart_support_helps_5_content": "Brugere kan kontakte os via telefon, e-mail og officielle hjemmeside.",
     "block_key": "Blok",
     "guide_tips_device_1": "Dette er fanen <b> ny startside. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Enheden har brug for opmærksomhed.",
     "CL_DV_RF_next_cleaning_will_be": "Næste rengøring vil være **",
     "CL_DV_RF_last_clean_was": "Sidste rengøring var **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Rengørings- og plejetips",
     "CL_CF_AS_needs_attention": "Enheden har brug for opmærksomhed.",
     "CL_CF_AS_run_normal_condition": "Din enhed kører i normal tilstand.",
     "CL_DV_WM_offline_content1": "Tjek, om dit apparat er tilsluttet, og om strømmen er tændt.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Ekstra varmt",
     "CL_CF_HP_card": "Kort",
     "CL_CF_HP_enter_card_name": "Indtast kortnavn...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Vælg venligst mindst én ingrediens.",
     "CL_CF_FM_no_shopping_items": "Ingen indkøbsvarer",
     "CL_CF_FM_add_food_from_below": "Tilføj mad nedefra",
     "CL_CF_FM_x_has_been_removed": "** er blevet fjernet.",
-    "CL_CF_CO_waiting": "venter"
+    "CL_CF_CO_waiting": "venter",
+    "CL_CF_HP_delete_card_tips": "Er du sikker på, at du vil slette kortet?",
+    "smart_energy_helps_1": "1. Et-klik Eco",
+    "smart_energy_helps_2": "2. Energiforbrugsovervågning",
+    "smart_energy_helps_3": "3. Energiassistent",
+    "air_care_helps_1": "1. Luftevaluering",
+    "smart_laundry_helps_2": "2. Vaskemiddelhåndtering",
+    "air_care_helps_2": "2. Optimering med et enkelt klik",
+    "air_care_helps_3": "3. 3D Room View",
+    "smart_laundry_helps_1": "1. Tilpasset vaskeri",
+    "smart_laundry_helps_3": "3. Rapport om brug af vasketøj",
+    "smart_kitchen_helps_1": "1. Kokkeopskrift",
+    "smart_kitchen_helps_2": "2. Opskriftsassistent",
+    "smart_kitchen_helps_3": "3. Fødevareforvaltning",
+    "smart_kitchen_helps_4": "4. Drikkevarehåndtering",
+    "smart_kitchen_helps_5": "5. Vin Beholdning",
+    "smart_kitchen_helps_6": "6. Indkøbsliste",
+    "smart_support_helps_1": "1. Rengørings- og vedligeholdelsestips",
+    "smart_support_helps_2": "2. Et-klik selv Dignosis",
+    "smart_support_helps_4": "4. Rapportér problem",
+    "smart_support_helps_5": "5. Kontakt os",
+    "air_care_helps_1_content": "Overvåg temperatur- og luftfugtighedsstatus for hvert rum i realtid, og giv komfortevalueringer og påmindelser baseret på aircondition.",
+    "smart_energy_helps_2_content": "Beregn hele husets strøm- og vandforbrug på daglig, månedlig og årlig basis. Du kan også se forbrugsstatistikken for de enkelte enheder, andelen af ​​energiforbruget for hver enhed inden for den valgte periode, det samlede og individuelle energiforbrug.",
+    "smart_support_helps_3": "3. Fejlfinding",
+    "CL_SL_CM_about_usage_month_desc": "De viste data er skøn, ikke nøjagtige mål.\n Vores estimater er baseret på kontrollerede tests, så dine faktiske resultater kan variere.\n Virkelig energiforbrug afhænger af dit specifikke miljø og dine vaner.",
+    "CL_CF_HP_no_card_key": "Intet kort"
 }
