--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Χρησιμοποιήστε το κουτί υγρασίας για να ρυθμίσετε την υγρασία",
     "same_day": "Την ίδια μέρα",
     "w_temp_set": "Ποια θερμοκρασία να ρυθμιστεί?",
+    "asko": "ΑΣΚΟ",
     "eco_meter": "Οικολογικός μετρητής",
     "asko_eco_meter_desc": "Το ## είναι ένας χρήσιμος έξυπνος δείκτης για τον προσδιορισμό των περιβαλλοντικών σας επιπτώσεων με βάση το επιλεγμένο πρόγραμμα και τις πρόσθετες επιλογές όσον αφορά την κατανάλωση ενέργειας, νερού και απορρυπαντικού.",
     "wm86_autodose_desc": "Αντί να παλεύετε, αφήστε το πλυντήριο να μετρήσει ακριβώς τη σωστή δόση απορρυπαντικού. Τα πλυντήρια μας με σύστημα Auto Dose μετρούν το απορρυπαντικό σε σχέση με το φορτίο πλύσης, το επίπεδο βρωμιάς, τη σκληρότητα του νερού, τον τύπο προγράμματος και τη θερμοκρασία. Πάντα τέλεια δοσολογία και όχι άλλη υπερδοσολογία. Εδώ μπορείτε να προσαρμόσετε τις προεπιλεγμένες ρυθμίσεις σας για την Αυτόματη δόση.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Μάθετε περισσότερα σχετικά με τις βασικές δυνατότητες της Έξυπνης Υποστήριξης",
     "smart_energy_helps": "Το Smart Energy σάς βοηθά να παρακολουθείτε και να διατηρείτε τις συσκευές σε ενεργειακά αποδοτική κατάσταση",
     "smart_energy_helps_1_content": "Ενεργή λειτουργία ECO των συσκευών σας. Αναλύστε στατιστικά την κατανάλωση ενέργειας της συσκευής. Παρακολούθηση δεδομένων εξοικονόμησης ενέργειας και Ορισμός στόχου χρήσης ενέργειας.",
-    "smart_energy_helps_2": "2.Παρακολούθηση Κατανάλωσης Ενέργειας",
-    "smart_energy_helps_2_content": "Υπολογίστε την κατανάλωση ενέργειας και νερού ολόκληρου του σπιτιού σε ημερήσια, μηνιαία και ετήσια βάση. μπορείτε επίσης να δείτε τα στατιστικά στοιχεία κατανάλωσης μεμονωμένων συσκευών, το ποσοστό κατανάλωσης ενέργειας κάθε συσκευής εντός της επιλεγμένης περιόδου, τη συνολική και μεμονωμένη κατανάλωση ενέργειας.",
-    "smart_energy_helps_3": "3.Ενεργειακός Βοηθός",
     "smart_energy_helps_3_content": "Θέστε στόχους εξοικονόμησης ενέργειας και στείλτε ειδοποιήσεις στους χρήστες όταν επιτευχθούν οι καθορισμένες τιμές-στόχοι.",
     "air_care_helps": "Η φροντίδα αέρα στοχεύει να λύσει τον έξυπνο έλεγχο της θερμοκρασίας, της υγρασίας και του αέρα σε ολόκληρο το σπίτι",
-    "air_care_helps_1": "1.Αξιολόγηση αέρα",
-    "air_care_helps_1_content": "Παρακολουθήστε την κατάσταση θερμοκρασίας και υγρασίας κάθε δωματίου σε πραγματικό χρόνο και παρέχετε αξιολογήσεις άνεσης και υπενθυμίσεις βάσει του κλιματισμού",
-    "air_care_helps_2": "2. Βελτιστοποίηση με ένα κλικ",
     "air_care_helps_2_content": "Η βελτιστοποίηση μπορεί να ξεκινήσει με ένα κλικ. Παρέχουμε πέντε διαφορετικά σχήματα βελτιστοποίησης. Κάθε λειτουργία βελτιστοποίησης μπορεί να προσαρμοστεί ανάλογα με τις ανάγκες του χρήστη, παρέχοντας στους χρήστες εξατομικευμένες λύσεις βελτιστοποίησης.",
-    "air_care_helps_3": "3.3D θέα στο δωμάτιο",
     "air_care_helps_3_content": "Παρακολουθήστε την κατάσταση και τις συσκευές του δωματίου σας μέσω μιας λεπτομερούς τρισδιάστατης απεικόνισης του σπιτιού σας.",
     "smart_laundry_key": "Έξυπνο πλυντήριο",
     "smart_laundry_helps": "Το Smart Laundry προσφέρει εξειδικευμένες συμβουλές πλυσίματος, έξυπνο βοηθό πλυντηρίου και απρόσκοπτη διαχείριση απορρυπαντικού, εξασφαλίζοντας μια απαράμιλλη εμπειρία πλυσίματος ρούχων",
-    "smart_laundry_helps_1": "1.Προσαρμοσμένο πλυντήριο",
     "smart_laundry_helps_1_content": "Εξατομικευμένοι κύκλοι με βάση τα προφίλ και τις προτιμήσεις των χρηστών, με ετικέτες για διαφορετικές εποχές, υπαίθριες δραστηριότητες, βρεφική φροντίδα και πολλά άλλα.",
-    "smart_laundry_helps_2": "2.Διαχείριση απορρυπαντικών",
     "smart_laundry_helps_2_content": "Βελτιστοποιήστε τη ρουτίνα πλύσης σας με το Smart Home Laundry Assistant, αναγνωρίζετε αυτόματα τις μάρκες απορρυπαντικών και διαχειρίζεστε τη δόση στο πλυντήριό σας.",
-    "smart_laundry_helps_3": "3.Αναφορά χρήσης πλυντηρίου",
     "smart_laundry_helps_3_content": "Εμφανίζει εβδομαδιαίες, μηνιαίες και ετήσιες αναφορές σχετικά με τη χρήση του προγράμματος πλύσης ρούχων από τον χρήστη, καθώς και τη χρήση νερού και ηλεκτρισμού του μήνα και τον καθαρισμό τυμπάνων.",
     "smart_kitchen_key": "Έξυπνη Κουζίνα",
     "smart_kitchen_helps": "Το Smart Kitchen σας προσφέρει μια άνευ προηγουμένου έξυπνη μαγειρική εμπειρία, συμπεριλαμβανομένων έξυπνων συνταγών, συνδυασμών κρασιών, βοηθών συνταγών και διαχείρισης συστατικών, κρασιού και ποτών",
-    "smart_kitchen_helps_1": "1.Συνταγή σεφ",
     "smart_kitchen_helps_1_content": "Απολαύστε συνταγές master σε μοναδικές γεύσεις όταν μαγειρεύονται σε διαφορετικούς φούρνους, οι οποίες ακολουθούν τις οδηγίες μαγειρέματος της συνταγής με ένα μόνο κλικ.",
-    "smart_kitchen_helps_2": "2.Βοηθός Συνταγών",
     "smart_kitchen_helps_2_content": "Προσαρμόστε και δημιουργήστε συνταγές με βάση τις προσωπικές σας προτιμήσεις, συμπεριλαμβανομένων της διατροφής, της κουζίνας, του τρόπου ζωής και των αλλεργιών.",
-    "smart_kitchen_helps_3": "3.Διαχείριση Τροφίμων",
     "smart_kitchen_helps_3_content": "Προσθέστε και προβάλετε λεπτομέρειες συστατικών που χρησιμοποιούνται συχνά, όπως ημερομηνία λήξης. Ταιριάξτε γρήγορα κατάλληλες συνταγές τροφίμων και στείλτε τα συστατικά που λείπουν στη λίστα αγορών.",
-    "smart_kitchen_helps_4": "Διαχείριση ποτών",
     "smart_kitchen_helps_4_content": "Προσθέστε ποτά και δημιουργήστε μια λίστα ποτών, δείτε λεπτομερείς πληροφορίες για κάθε αποθηκευμένο ποτό.",
-    "smart_kitchen_helps_5": "Απογραφή κρασιού",
     "smart_kitchen_helps_5_content": "Σαρώστε για να δημιουργήσετε μια λίστα κάβας από το VIvino, ορίστε υπενθυμίσεις για τη βέλτιστη περίοδο κατανάλωσης και προτείνετε συνδυασμό φαγητού με βάση τον τύπο κρασιού.",
-    "smart_kitchen_helps_6": "6.Λίστα αγορών",
     "smart_kitchen_helps_6_content": "Δημιουργήστε τη λίστα αγορών με βάση τη συνταγή, επισημάνετε τα είδη που έχετε ήδη και αποκτήσετε ως αναφορά αγορών.",
     "smart_support_key": "Έξυπνη υποστήριξη",
     "smart_support_helps": "Η Smart Support παρέχει ολοκληρωμένη βοήθεια για τις συσκευές σας. Μπορείτε να λάβετε συμβουλές καθαρισμού και φροντίδας για καθημερινή συντήρηση, αυτοδιάγνωση με ένα κλικ για να ελέγξετε την κατάσταση όλων των συσκευών σας και να παρέχετε πιθανές λύσεις για τυχόν μη φυσιολογικές λειτουργίες",
-    "smart_support_helps_1": "1. Συμβουλές καθαρισμού και συντήρησης",
     "smart_support_helps_1_content": "Δώστε προτάσεις για καθημερινό καθαρισμό και συντήρηση του προϊόντος.",
-    "smart_support_helps_2": "2.Αυτοδιάγνωση με ένα κλικ",
     "smart_support_helps_2_content": "Αυτοεπιθεώρηση με ένα κλικ για να κατανοήσετε την κατάσταση όλων των οικιακών συσκευών. Όταν εντοπιστεί πρόβλημα, δώστε προτεινόμενες λύσεις.",
-    "smart_support_helps_3": "Αντιμετώπιση προβλημάτων",
     "smart_support_helps_3_content": "Όταν η συσκευή έχει πρόβλημα, οι χρήστες μπορούν να αυτοβοηθήσουν, να αντιμετωπίσουν και να λύσουν το πρόβλημα σύμφωνα με τον οδηγό σφαλμάτων.",
-    "smart_support_helps_4": "4. Αναφορά θέματος",
     "smart_support_helps_4_content": "Εάν υπάρχουν προβλήματα με τη χρήση της εφαρμογής ή του προϊόντος, οι χρήστες μπορούν να σχολιάσουν online για να μειώσουν τον χρόνο επικοινωνίας με το τηλεφωνικό κέντρο.",
-    "smart_support_helps_5": "5.Επικοινωνήστε μαζί μας",
     "smart_support_helps_5_content": "Οι χρήστες μπορούν να επικοινωνήσουν μαζί μας μέσω τηλεφώνου, email και επίσημης ιστοσελίδας.",
     "block_key": "Φραγμός",
     "guide_tips_device_1": "Αυτή είναι η <b> νέα καρτέλα αρχικής σελίδας. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Η συσκευή θέλει προσοχή.",
     "CL_DV_RF_next_cleaning_will_be": "Ο επόμενος καθαρισμός θα είναι **",
     "CL_DV_RF_last_clean_was": "Ο τελευταίος καθαρισμός ήταν **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Συμβουλές καθαρισμού και φροντίδας",
     "CL_CF_AS_needs_attention": "Η συσκευή θέλει προσοχή.",
     "CL_CF_AS_run_normal_condition": "Η συσκευή σας λειτουργεί σε κανονική κατάσταση.",
     "CL_DV_WM_offline_content1": "Ελέγξτε εάν η συσκευή σας είναι συνδεδεμένη και η τροφοδοσία είναι ενεργοποιημένη.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Εξαιρετικά ζεστό",
     "CL_CF_HP_card": "Κάρτα",
     "CL_CF_HP_enter_card_name": "Εισαγάγετε το όνομα της κάρτας...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Επιλέξτε τουλάχιστον ένα συστατικό.",
     "CL_CF_FM_no_shopping_items": "Δεν υπάρχουν είδη αγορών",
     "CL_CF_FM_add_food_from_below": "Προσθέστε φαγητό από κάτω",
     "CL_CF_FM_x_has_been_removed": "** έχει αφαιρεθεί.",
-    "CL_CF_CO_waiting": "αναμονή"
+    "CL_CF_CO_waiting": "αναμονή",
+    "CL_CF_HP_delete_card_tips": "Είστε βέβαιοι ότι θέλετε να διαγράψετε την κάρτα;",
+    "smart_energy_helps_1": "1. Eco με ένα κλικ",
+    "smart_energy_helps_2": "2. Παρακολούθηση Κατανάλωσης Ενέργειας",
+    "smart_energy_helps_3": "3. Ενεργειακός Βοηθός",
+    "air_care_helps_1": "1. Αξιολόγηση αέρα",
+    "smart_laundry_helps_2": "2. Διαχείριση απορρυπαντικού",
+    "air_care_helps_2": "2. Βελτιστοποίηση με ένα κλικ",
+    "air_care_helps_3": "3. Τρισδιάστατη θέα στο δωμάτιο",
+    "smart_laundry_helps_1": "1. Προσαρμοσμένο πλυντήριο",
+    "smart_laundry_helps_3": "3. Αναφορά χρήσης πλυντηρίου",
+    "smart_kitchen_helps_1": "1. Συνταγή σεφ",
+    "smart_kitchen_helps_2": "2. Βοηθός Συνταγών",
+    "smart_kitchen_helps_3": "3. Διαχείριση Τροφίμων",
+    "smart_kitchen_helps_4": "4. Διαχείριση ποτών",
+    "smart_kitchen_helps_5": "5. Απογραφή κρασιού",
+    "smart_kitchen_helps_6": "6. Λίστα αγορών",
+    "smart_support_helps_1": "1. Συμβουλές καθαρισμού και συντήρησης",
+    "smart_support_helps_2": "2. Αυτοδιάγνωση με ένα κλικ",
+    "smart_support_helps_4": "4. Αναφορά θέματος",
+    "smart_support_helps_5": "5. Επικοινωνήστε μαζί μας",
+    "air_care_helps_1_content": "Παρακολουθήστε την κατάσταση θερμοκρασίας και υγρασίας κάθε δωματίου σε πραγματικό χρόνο και παρέχετε αξιολογήσεις άνεσης και υπενθυμίσεις με βάση το air condition.",
+    "smart_energy_helps_2_content": "Υπολογίστε την κατανάλωση ενέργειας και νερού ολόκληρου του σπιτιού σε ημερήσια, μηνιαία και ετήσια βάση. Μπορείτε επίσης να δείτε τα στατιστικά στοιχεία κατανάλωσης μεμονωμένων συσκευών, το ποσοστό κατανάλωσης ενέργειας κάθε συσκευής εντός της επιλεγμένης περιόδου, τη συνολική και μεμονωμένη κατανάλωση ενέργειας.",
+    "smart_support_helps_3": "3. Αντιμετώπιση προβλημάτων",
+    "CL_SL_CM_about_usage_month_desc": "Τα δεδομένα που εμφανίζονται είναι εκτιμήσεις και όχι ακριβείς μετρήσεις.\n Οι εκτιμήσεις μας βασίζονται σε ελεγχόμενες δοκιμές, επομένως τα πραγματικά σας αποτελέσματα ενδέχεται να διαφέρουν.\n Η χρήση ενέργειας στον πραγματικό κόσμο εξαρτάται από το συγκεκριμένο περιβάλλον και τις συνήθειές σας.",
+    "CL_CF_HP_no_card_key": "Χωρίς κάρτα"
 }
