--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "از جعبه رطوبت برای تنظیم رطوبت استفاده کنید",
     "same_day": "همان روز",
     "w_temp_set": "چه دمایی تنظیم شود",
+    "asko": "ASKO",
     "eco_meter": "اکو متر",
     "asko_eco_meter_desc": "## یک شاخص هوشمند مفید برای تعیین تأثیرات زیست محیطی شما بر اساس برنامه انتخابی و گزینه های اضافی در مورد مصرف انرژی، آب و مواد شوینده است.",
     "wm86_autodose_desc": "اجازه دهید ماشین لباسشویی به جای اینکه درگیر مبارزه باشد، دوز مناسب مواد شوینده را اندازه گیری کند. ماشین‌های لباسشویی ما با سیستم Auto Dose، مواد شوینده را در برابر بار شستشو، سطح کثیفی، سختی آب، نوع برنامه و دما اندازه‌گیری می‌کنند. همیشه دوز کامل و بدون مصرف بیش از حد. در اینجا می توانید تنظیمات پیش فرض خود را برای دوز خودکار تنظیم کنید.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "درباره ویژگی های کلیدی پشتیبانی هوشمند بیشتر بدانید",
     "smart_energy_helps": "Smart Energy به شما کمک می‌کند دستگاه‌ها را در وضعیت کارآمدی انرژی نظارت و نگه دارید",
     "smart_energy_helps_1_content": "حالت ECO فعال لوازم شما. تجزیه و تحلیل آماری مصرف انرژی دستگاه نظارت بر داده های صرفه جویی در انرژی و تعیین هدف مصرف انرژی.",
-    "smart_energy_helps_2": "2. نظارت بر مصرف انرژی",
-    "smart_energy_helps_2_content": "مصرف برق و آب کل خانه را به صورت روزانه، ماهانه و سالانه محاسبه کنید. همچنین می توانید آمار مصرف هر دستگاه، نسبت مصرف انرژی هر دستگاه در دوره انتخابی، مصرف انرژی کلی و فردی را مشاهده کنید.",
-    "smart_energy_helps_3": "3. دستیار انرژی",
     "smart_energy_helps_3_content": "اهداف صرفه جویی در مصرف انرژی را تعیین کنید و هنگامی که به مقادیر هدف تعیین شده رسیدند، اعلان هایی را برای کاربران ارسال کنید.",
     "air_care_helps": "هدف مراقبت از هوا حل کنترل هوشمند دما، رطوبت و هوا در کل خانه است",
-    "air_care_helps_1": "1. ارزیابی هوا",
-    "air_care_helps_1_content": "وضعیت دما و رطوبت هر اتاق را در زمان واقعی نظارت کنید و ارزیابی‌ها و یادآوری‌های آسایش را بر اساس وضعیت هوا ارائه دهید.",
-    "air_care_helps_2": "2.One-click Optimization",
     "air_care_helps_2_content": "بهینه سازی را می توان با یک کلیک شروع کرد. ما پنج طرح مختلف بهینه سازی را ارائه می دهیم. هر حالت بهینه سازی را می توان با توجه به نیازهای کاربر تنظیم کرد و راه حل های بهینه سازی سفارشی را در اختیار کاربران قرار داد.",
-    "air_care_helps_3": "نمای اتاق 3.3D",
     "air_care_helps_3_content": "از طریق یک تجسم سه بعدی دقیق از خانه خود، مراقب وضعیت اتاق و وسایل خود باشید.",
     "smart_laundry_key": "لباسشویی هوشمند",
     "smart_laundry_helps": "لباسشویی هوشمند نکات شستشوی متخصص، دستیار لباسشویی بصری و مدیریت یکپارچه مواد شوینده را ارائه می دهد که تجربه شست و شوی بی نظیری را تضمین می کند.",
-    "smart_laundry_helps_1": "1. لباسشویی سفارشی",
     "smart_laundry_helps_1_content": "چرخه‌های شخصی‌شده بر اساس پروفایل‌های کاربر و ترجیحات، با برچسب‌هایی برای فصول مختلف، فعالیت‌های خارج از منزل، مراقبت از نوزاد و موارد دیگر.",
-    "smart_laundry_helps_2": "2. مدیریت مواد شوینده",
     "smart_laundry_helps_2_content": "روتین لباسشویی خود را با دستیار شستشوی خانه هوشمند بهینه کنید، مارک های مواد شوینده را به طور خودکار تشخیص دهید و دوز را در ماشین لباسشویی خود مدیریت کنید.",
-    "smart_laundry_helps_3": "3.گزارش استفاده از لباسشویی",
     "smart_laundry_helps_3_content": "گزارش های هفتگی، ماهانه و سالانه در مورد استفاده کاربر از برنامه لباسشویی و همچنین میزان مصرف آب و برق ماهانه و تمیز کردن درام را نمایش می دهد.",
     "smart_kitchen_key": "آشپزخانه هوشمند",
     "smart_kitchen_helps": "آشپزخانه هوشمند تجربه آشپزی هوشمند بی سابقه ای از جمله دستور العمل های هوشمند، جفت شراب، دستیاران دستور پخت، و مدیریت مواد تشکیل دهنده، شراب و نوشیدنی را برای شما فراهم می کند.",
-    "smart_kitchen_helps_1": "1. دستور آشپز",
     "smart_kitchen_helps_1_content": "دستور پخت استاد را با طعم های منحصربفرد هنگام پخت در فرهای مختلف تجربه کنید که تنها با یک کلیک از دستورالعمل های آشپزی پیروی می کنند.",
-    "smart_kitchen_helps_2": "2.دستیار دستور غذا",
     "smart_kitchen_helps_2_content": "دستور العمل ها را بر اساس ترجیحات شخصی خود از جمله تغذیه، غذاها، شیوه زندگی و آلرژی ها سفارشی کنید و تولید کنید.",
-    "smart_kitchen_helps_3": "3. مدیریت غذا",
     "smart_kitchen_helps_3_content": "جزئیات مواد پرکاربرد مانند تاریخ انقضا را اضافه کنید و مشاهده کنید. به سرعت دستور العمل های غذایی مناسب را مطابقت دهید و مواد گمشده را به لیست خرید ارسال کنید.",
-    "smart_kitchen_helps_4": "مدیریت نوشیدنی",
     "smart_kitchen_helps_4_content": "نوشیدنی ها را اضافه کنید و یک لیست نوشیدنی ایجاد کنید، اطلاعات دقیق هر نوشیدنی ذخیره شده را مشاهده کنید.",
-    "smart_kitchen_helps_5": "فهرست موجودی نوشیدنی",
     "smart_kitchen_helps_5_content": "برای ایجاد لیست انبار شراب توسط VIvino اسکن کنید، یادآورهایی را برای دوره نوشیدن بهینه تنظیم کنید و جفت غذا را بر اساس نوع شراب توصیه کنید.",
-    "smart_kitchen_helps_6": "6. لیست خرید",
     "smart_kitchen_helps_6_content": "لیست خرید را بر اساس دستور غذا ایجاد کنید، اقلامی را که قبلاً مالک و به دست آورده اید به عنوان مرجع خرید خود علامت بزنید.",
     "smart_support_key": "پشتیبانی هوشمند",
     "smart_support_helps": "پشتیبانی هوشمند کمک جامعی را برای دستگاه های شما ارائه می دهد. می توانید نکات تمیز کردن و مراقبت را برای نگهداری روزانه دریافت کنید، با یک کلیک خود تشخیص دهید تا وضعیت همه دستگاه های خود را بررسی کنید و راه حل های ممکن را برای هر گونه عملیات غیرعادی ارائه دهید.",
-    "smart_support_helps_1": "1. نکات تمیز کردن و نگهداری",
     "smart_support_helps_1_content": "برای تمیز کردن و نگهداری روزانه محصول پیشنهاداتی ارائه دهید.",
-    "smart_support_helps_2": "2. تشخیص خود با یک کلیک",
     "smart_support_helps_2_content": "با یک کلیک خود بازرسی برای درک وضعیت همه لوازم خانگی. هنگامی که مشکلی شناسایی شد، راه حل های توصیه شده را ارائه دهید.",
-    "smart_support_helps_3": "عیب یابی",
     "smart_support_helps_3_content": "هنگامی که دستگاه دچار مشکل می شود، کاربران می توانند طبق راهنمای خطا به خود کمک کنند، عیب یابی و مشکل را حل کنند.",
-    "smart_support_helps_4": "4.گزارش مسئله",
     "smart_support_helps_4_content": "اگر در استفاده از برنامه یا محصول مشکلی وجود داشته باشد، کاربران می توانند به صورت آنلاین بازخورد خود را برای کاهش زمان ارتباط با مرکز تماس ارائه دهند.",
-    "smart_support_helps_5": "5. تماس با ما",
     "smart_support_helps_5_content": "کاربران می توانند از طریق تلفن، ایمیل و وب سایت رسمی با ما تماس بگیرند.",
     "block_key": "مسدود کردن",
     "guide_tips_device_1": "این تب <b> صفحه اصلی جدید است. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "دستگاه نیاز به توجه دارد.",
     "CL_DV_RF_next_cleaning_will_be": "پاکسازی بعدی خواهد بود **",
     "CL_DV_RF_last_clean_was": "آخرین نظافت بود **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "نکات تمیز کردن و مراقبت",
     "CL_CF_AS_needs_attention": "دستگاه نیاز به توجه دارد.",
     "CL_CF_AS_run_normal_condition": "دستگاه شما در شرایط عادی کار می کند.",
     "CL_DV_WM_offline_content1": "بررسی کنید که دستگاه شما متصل شده و برق روشن است.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "فوق العاده داغ",
     "CL_CF_HP_card": "کارت",
     "CL_CF_HP_enter_card_name": "نام کارت را وارد کنید...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "لطفا حداقل یک ماده را انتخاب کنید.",
     "CL_CF_FM_no_shopping_items": "بدون اقلام خرید",
     "CL_CF_FM_add_food_from_below": "غذا را از زیر اضافه کنید",
     "CL_CF_FM_x_has_been_removed": "** حذف شده است.",
-    "CL_CF_CO_waiting": "در انتظار"
+    "CL_CF_CO_waiting": "در انتظار",
+    "CL_CF_HP_delete_card_tips": "آیا مطمئن هستید که می خواهید کارت را حذف کنید؟",
+    "smart_energy_helps_1": "1. یک کلیک Eco",
+    "smart_energy_helps_2": "2. نظارت بر مصرف انرژی",
+    "smart_energy_helps_3": "3. دستیار انرژی",
+    "air_care_helps_1": "1. ارزیابی هوا",
+    "smart_laundry_helps_2": "2. مدیریت مواد شوینده",
+    "air_care_helps_2": "2. با یک کلیک Optimization",
+    "air_care_helps_3": "3. نمای اتاق سه بعدی",
+    "smart_laundry_helps_1": "1. لباسشویی سفارشی",
+    "smart_laundry_helps_3": "3. گزارش استفاده از لباسشویی",
+    "smart_kitchen_helps_1": "1. دستور آشپز",
+    "smart_kitchen_helps_2": "2. دستیار دستور غذا",
+    "smart_kitchen_helps_3": "3. مدیریت غذا",
+    "smart_kitchen_helps_4": "4. مدیریت نوشیدنی",
+    "smart_kitchen_helps_5": "5. فهرست موجودی نوشیدنی",
+    "smart_kitchen_helps_6": "6. لیست خرید",
+    "smart_support_helps_1": "1. نکات تمیز کردن و نگهداری",
+    "smart_support_helps_2": "2. تشخیص خود با یک کلیک",
+    "smart_support_helps_4": "4. گزارش مسئله",
+    "smart_support_helps_5": "5. تماس با ما",
+    "air_care_helps_1_content": "وضعیت دما و رطوبت هر اتاق را در زمان واقعی نظارت کنید و ارزیابی‌ها و یادآوری‌های راحتی را بر اساس وضعیت هوا ارائه دهید.",
+    "smart_energy_helps_2_content": "کل برق و آب مصرفی خانه را به صورت روزانه، ماهانه و سالانه محاسبه کنید. همچنین می توانید آمار مصرف تک تک دستگاه ها، نسبت مصرف انرژی هر دستگاه در بازه زمانی انتخاب شده، مصرف انرژی کلی و فردی را مشاهده کنید.",
+    "smart_support_helps_3": "3. عیب یابی",
+    "CL_SL_CM_about_usage_month_desc": "داده های نشان داده شده تخمین هستند، نه اندازه گیری دقیق.\n تخمین های ما بر اساس آزمایش های کنترل شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد.\n مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد.",
+    "CL_CF_HP_no_card_key": "بدون کارت"
 }
