--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Utiliser une boîte à humidité pour réguler l'humidité",
     "same_day": "Le même jour",
     "w_temp_set": "Quelle température dois-je régler?",
+    "asko": "ASKO",
     "eco_meter": "Écomètre",
     "asko_eco_meter_desc": "## est un indicateur intelligent utile pour déterminer votre impact environnemental en fonction du programme choisi et des options supplémentaires en matière de consommation d'énergie, d'eau et de détergent.",
     "wm86_autodose_desc": "Au lieu de vous battre pour obtenir le dosage exact de lessive, laissez la machine à laver mesurer le dosage exact de lessive. Nos machines à laver avec système Auto Dose mesurent le dosage de lessive en fonction de la charge de lavage, du degré de saleté, de la dureté de l'eau, du type de programme et de la température. Un dosage toujours parfait et plus de surdosage. Vous pouvez ici ajuster vos paramètres par défaut pour Auto Dose.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "En savoir plus sur les principales fonctionnalités de Smart Support",
     "smart_energy_helps": "Smart Energy vous aide à surveiller et à maintenir les appareils dans un état d'efficacité énergétique",
     "smart_energy_helps_1_content": "Activez le mode ECO de vos appareils. Analysez statistiquement la consommation énergétique des appareils. Surveillez les données d'économie d'énergie et définissez un objectif de consommation d'énergie.",
-    "smart_energy_helps_2": "2. Suivi de la consommation énergétique",
-    "smart_energy_helps_2_content": "Calculez la consommation d'électricité et d'eau de toute la maison sur une base quotidienne, mensuelle et annuelle. Vous pouvez également consulter les statistiques de consommation des appareils individuels, la proportion de consommation d'énergie de chaque appareil au cours de la période sélectionnée, la consommation d'énergie globale et individuelle.",
-    "smart_energy_helps_3": "3.Assistant énergétique",
     "smart_energy_helps_3_content": "Définissez des objectifs d’économie d’énergie et envoyez des notifications aux utilisateurs lorsque les valeurs cibles définies sont atteintes.",
     "air_care_helps": "Air Care vise à résoudre le contrôle intelligent de la température, de l'humidité et de l'air dans toute la maison",
-    "air_care_helps_1": "1. Évaluation de l'air",
-    "air_care_helps_1_content": "Surveillez l'état de température et d'humidité de chaque pièce en temps réel et fournissez des évaluations de confort et des rappels en fonction de la climatisation",
-    "air_care_helps_2": "2. Optimisation en un clic",
     "air_care_helps_2_content": "L'optimisation peut être lancée en un seul clic. Nous proposons cinq schémas d'optimisation différents. Chaque mode d'optimisation peut être ajusté en fonction des besoins de l'utilisateur, offrant ainsi aux utilisateurs des solutions d'optimisation personnalisées.",
-    "air_care_helps_3": "Vue de la pièce 3.3D",
     "air_care_helps_3_content": "Gardez un œil sur l'état de votre pièce et de vos appareils grâce à une visualisation 3D détaillée de votre maison.",
     "smart_laundry_key": "Blanchisserie intelligente",
     "smart_laundry_helps": "Smart Laundry propose des conseils de lavage d'experts, un assistant de lessive intuitif et une gestion transparente des détergents, garantissant une expérience de lessive inégalée",
-    "smart_laundry_helps_1": "1. Blanchisserie personnalisée",
     "smart_laundry_helps_1_content": "Cycles personnalisés en fonction des profils et des préférences des utilisateurs, avec des balises pour différentes saisons, activités de plein air, soins de bébé, etc.",
-    "smart_laundry_helps_2": "2. Gestion des détergents",
     "smart_laundry_helps_2_content": "Optimisez votre routine de lessive avec Smart Home Laundry Assistant, reconnaissez automatiquement les marques de détergent et gérez le dosage dans votre machine à laver.",
-    "smart_laundry_helps_3": "3. Rapport d'utilisation du linge",
     "smart_laundry_helps_3_content": "Affiche des rapports hebdomadaires, mensuels et annuels sur l'utilisation du programme de lessive par l'utilisateur, ainsi que sur la consommation mensuelle d'eau et d'électricité et le nettoyage du tambour.",
     "smart_kitchen_key": "Cuisine intelligente",
     "smart_kitchen_helps": "Smart Kitchen vous offre une expérience de cuisine intelligente sans précédent, comprenant des recettes intelligentes, des accords mets et vins, des assistants de recettes et une gestion des ingrédients, des vins et des boissons",
-    "smart_kitchen_helps_1": "1.Recette du chef",
     "smart_kitchen_helps_1_content": "Découvrez des recettes de maître aux saveurs uniques cuites dans différents fours, qui suivent les instructions de cuisson de la recette en un seul clic.",
-    "smart_kitchen_helps_2": "2. Assistant de recettes",
     "smart_kitchen_helps_2_content": "Personnalisez et générez des recettes en fonction de vos préférences personnelles, notamment en matière de nutrition, de cuisine, de style de vie et d'allergies.",
-    "smart_kitchen_helps_3": "3. Gestion alimentaire",
     "smart_kitchen_helps_3_content": "Ajoutez et consultez les détails des ingrédients fréquemment utilisés, tels que la date d'expiration. Associez rapidement des recettes alimentaires adaptées et envoyez les ingrédients manquants à la liste de courses.",
-    "smart_kitchen_helps_4": "Gestion des boissons",
     "smart_kitchen_helps_4_content": "Ajoutez des boissons et créez une liste de boissons, affichez des informations détaillées sur chaque boisson enregistrée.",
-    "smart_kitchen_helps_5": "Vin inventaire",
     "smart_kitchen_helps_5_content": "Scannez pour créer une liste de cave à vin par VIvino, définissez des rappels pour une période de consommation optimale et recommandez des accords mets et vins en fonction du type de vin.",
-    "smart_kitchen_helps_6": "6. Liste de courses",
     "smart_kitchen_helps_6_content": "Générez la liste de courses en fonction de la recette, marquez les articles que vous possédez déjà et acquis comme référence d'achat.",
     "smart_support_key": "Assistance intelligente",
     "smart_support_helps": "Smart Support vous offre une assistance complète pour vos appareils. Vous pouvez obtenir des conseils de nettoyage et d'entretien pour la maintenance quotidienne, un autodiagnostic en un clic pour vérifier l'état de tous vos appareils et proposer des solutions possibles en cas de fonctionnement anormal",
-    "smart_support_helps_1": "1. Conseils de nettoyage et d'entretien",
     "smart_support_helps_1_content": "Donnez des suggestions pour le nettoyage et l’entretien quotidien du produit.",
-    "smart_support_helps_2": "2. Autodiagnostic en un clic",
     "smart_support_helps_2_content": "Auto-inspection en un clic pour connaître l'état de tous les appareils électroménagers. Lorsqu'un problème est détecté, fournissez des solutions recommandées.",
-    "smart_support_helps_3": "Dépannage",
     "smart_support_helps_3_content": "Lorsque l'appareil rencontre un problème, les utilisateurs peuvent s'auto-aider, dépanner et résoudre le problème en suivant le guide des pannes.",
-    "smart_support_helps_4": "4.Signaler un problème",
     "smart_support_helps_4_content": "En cas de problèmes avec l'application ou l'utilisation du produit, les utilisateurs peuvent donner leur avis en ligne pour réduire le temps de communication avec le centre d'appels.",
-    "smart_support_helps_5": "5. Contactez-nous",
     "smart_support_helps_5_content": "Les utilisateurs peuvent nous contacter par téléphone, e-mail et site Web officiel.",
     "block_key": "Bloc",
     "guide_tips_device_1": "Il s'agit du <b> nouvel onglet de la page d'accueil. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "L'appareil a besoin d'attention.",
     "CL_DV_RF_next_cleaning_will_be": "Le prochain nettoyage sera **",
     "CL_DV_RF_last_clean_was": "Le dernier nettoyage était **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Conseils de nettoyage et d'entretien",
     "CL_CF_AS_needs_attention": "L'appareil a besoin d'attention.",
     "CL_CF_AS_run_normal_condition": "Votre appareil fonctionne dans des conditions normales.",
     "CL_DV_WM_offline_content1": "Vérifiez si votre appareil est branché et que l'alimentation est allumée.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Très chaud",
     "CL_CF_HP_card": "Carte",
     "CL_CF_HP_enter_card_name": "Entrez le nom de la carte...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Veuillez sélectionner au moins un ingrédient.",
     "CL_CF_FM_no_shopping_items": "Aucun article d'achat",
     "CL_CF_FM_add_food_from_below": "Ajoutez de la nourriture par le bas",
     "CL_CF_FM_x_has_been_removed": "** a été supprimé.",
-    "CL_CF_CO_waiting": "en attendant"
+    "CL_CF_CO_waiting": "en attendant",
+    "CL_CF_HP_delete_card_tips": "Etes-vous sûr de vouloir supprimer la carte ?",
+    "smart_energy_helps_1": "1. Éco en un clic",
+    "smart_energy_helps_2": "2. Suivi de la consommation énergétique",
+    "smart_energy_helps_3": "3. Assistant énergétique",
+    "air_care_helps_1": "1. Évaluation de l'air",
+    "smart_laundry_helps_2": "2. Gestion des détergents",
+    "air_care_helps_2": "2. Optimisation en un clic",
+    "air_care_helps_3": "3. Vue 3D de la pièce",
+    "smart_laundry_helps_1": "1. Blanchisserie personnalisée",
+    "smart_laundry_helps_3": "3. Rapport d'utilisation de la lessive",
+    "smart_kitchen_helps_1": "1. Recette du chef",
+    "smart_kitchen_helps_2": "2. Assistant de recettes",
+    "smart_kitchen_helps_3": "3. Gestion des aliments",
+    "smart_kitchen_helps_4": "4. Gestion des boissons",
+    "smart_kitchen_helps_5": "5. Vin inventaire",
+    "smart_kitchen_helps_6": "6. Liste de courses",
+    "smart_support_helps_1": "1. Conseils de nettoyage et d'entretien",
+    "smart_support_helps_2": "2. Autodiagnostic en un clic",
+    "smart_support_helps_4": "4. Signaler un problème",
+    "smart_support_helps_5": "5. Contactez-nous",
+    "air_care_helps_1_content": "Surveillez l'état de température et d'humidité de chaque pièce en temps réel et fournissez des évaluations de confort et des rappels en fonction de la climatisation.",
+    "smart_energy_helps_2_content": "Calculez la consommation d'électricité et d'eau de toute la maison sur une base quotidienne, mensuelle et annuelle. Vous pouvez également consulter les statistiques de consommation des appareils individuels, la proportion de consommation d'énergie de chaque appareil au cours de la période sélectionnée, la consommation d'énergie globale et individuelle.",
+    "smart_support_helps_3": "3. Dépannage",
+    "CL_SL_CM_about_usage_month_desc": "Les données présentées sont des estimations et non des mesures exactes.\n Nos estimations sont basées sur des tests contrôlés, vos résultats réels peuvent donc varier.\n La consommation d’énergie réelle dépend de votre environnement et de vos habitudes spécifiques.",
+    "CL_CF_HP_no_card_key": "Pas de carte"
 }
