--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Gunakan kotak kelembapan untuk mengatur kelembapan",
     "same_day": "Di hari yang sama",
     "w_temp_set": "Suhu berapa yang perlu diatur?",
+    "asko": "ASKO",
     "eco_meter": "Meteran Ramah Lingkungan",
     "asko_eco_meter_desc": "## adalah indikator cerdas yang berguna untuk menentukan dampak lingkungan Anda berdasarkan program yang dipilih dan opsi tambahan terkait konsumsi energi, air, dan deterjen.",
     "wm86_autodose_desc": "Alih-alih membuatnya sulit, biarkan mesin cuci mengukur dosis deterjen yang tepat. Mesin cuci kami dengan sistem Dosis Otomatis mengukur deterjen berdasarkan beban cucian, tingkat kekotoran, kesadahan air, jenis program, dan suhu. Dosis selalu tepat dan tidak ada lagi dosis berlebih. Di sini Anda dapat menyesuaikan pengaturan default untuk Dosis Otomatis.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Pelajari lebih lanjut tentang fitur utama Smart Support",
     "smart_energy_helps": "Energi Cerdas membantu Anda memantau dan menjaga perangkat dalam kondisi hemat energi",
     "smart_energy_helps_1_content": "Mode ECO aktif pada peralatan Anda. Analisis konsumsi energi perangkat secara statistik. Pantau data penghematan energi dan Tetapkan target penggunaan energi.",
-    "smart_energy_helps_2": "2. Pemantauan Konsumsi Energi",
-    "smart_energy_helps_2_content": "Hitung konsumsi daya dan air seluruh rumah setiap hari, setiap bulan, dan setiap tahun. Anda juga dapat melihat statistik konsumsi masing-masing perangkat, proporsi konsumsi energi setiap perangkat dalam periode yang dipilih, serta konsumsi energi keseluruhan dan masing-masing perangkat.",
-    "smart_energy_helps_3": "3. Asisten Energi",
     "smart_energy_helps_3_content": "Tetapkan sasaran penghematan energi, dan kirimkan pemberitahuan kepada pengguna saat nilai target yang ditetapkan tercapai.",
     "air_care_helps": "Perawatan udara bertujuan untuk memecahkan kontrol cerdas suhu, kelembaban dan udara di seluruh rumah",
-    "air_care_helps_1": "1. Evaluasi Udara",
-    "air_care_helps_1_content": "Memantau status suhu dan kelembaban setiap ruangan secara real time, dan memberikan evaluasi kenyamanan dan pengingat berdasarkan kondisi udara",
-    "air_care_helps_2": "2. Optimasi Satu Klik",
     "air_care_helps_2_content": "Pengoptimalan dapat dimulai dengan satu klik. Kami menyediakan lima skema pengoptimalan yang berbeda. Setiap mode pengoptimalan dapat disesuaikan menurut kebutuhan pengguna, sehingga memberikan solusi pengoptimalan yang disesuaikan bagi pengguna.",
-    "air_care_helps_3": "Tampilan Ruangan 3.3D",
     "air_care_helps_3_content": "Pantau kondisi kamar dan peralatan Anda melalui visualisasi 3D rumah Anda yang terperinci.",
     "smart_laundry_key": "Pencucian Cerdas",
     "smart_laundry_helps": "Smart Laundry menawarkan tips mencuci dari ahlinya, asisten binatu yang intuitif, dan manajemen deterjen yang lancar, memastikan pengalaman mencuci yang tak tertandingi",
-    "smart_laundry_helps_1": "1.Pencucian yang Disesuaikan",
     "smart_laundry_helps_1_content": "Siklus yang dipersonalisasi berdasarkan profil dan preferensi pengguna, dengan tag untuk berbagai musim, aktivitas luar ruangan, perawatan bayi, dan banyak lagi.",
-    "smart_laundry_helps_2": "2. Manajemen Deterjen",
     "smart_laundry_helps_2_content": "Optimalkan rutinitas mencuci Anda dengan Smart Home Laundry Assistant, kenali merek deterjen secara otomatis dan kelola dosis di mesin cuci Anda.",
-    "smart_laundry_helps_3": "3.Laporan Penggunaan Binatu",
     "smart_laundry_helps_3_content": "Menampilkan laporan mingguan, bulanan, dan tahunan tentang penggunaan program binatu oleh pengguna, serta penggunaan air dan listrik serta pembersihan tabung pada bulan tersebut.",
     "smart_kitchen_key": "Dapur Pintar",
     "smart_kitchen_helps": "Dapur Pintar memberi Anda pengalaman memasak cerdas yang belum pernah ada sebelumnya, termasuk resep cerdas, pasangan anggur, asisten resep, dan manajemen bahan, anggur, dan minuman.",
-    "smart_kitchen_helps_1": "1. Resep koki",
     "smart_kitchen_helps_1_content": "Nikmati resep-resep master dengan cita rasa unik saat dimasak di oven berbeda, yang mengikuti petunjuk memasak resep hanya dengan satu klik.",
-    "smart_kitchen_helps_2": "2. Asisten Resep",
     "smart_kitchen_helps_2_content": "Sesuaikan dan buat resep berdasarkan preferensi pribadi Anda termasuk nutrisi, masakan, gaya hidup, dan alergi.",
-    "smart_kitchen_helps_3": "3. Manajemen Makanan",
     "smart_kitchen_helps_3_content": "Tambahkan dan lihat detail bahan yang sering digunakan seperti tanggal kedaluwarsa. Cocokkan resep makanan yang sesuai dengan cepat dan kirimkan bahan yang kurang ke daftar belanja.",
-    "smart_kitchen_helps_4": "Manajemen Minuman",
     "smart_kitchen_helps_4_content": "Tambahkan minuman dan buat daftar minuman, lihat informasi terperinci setiap minuman yang disimpan.",
-    "smart_kitchen_helps_5": "Inventaris Anggur",
     "smart_kitchen_helps_5_content": "Pindai untuk membuat daftar gudang anggur oleh VIvino, atur pengingat untuk periode minum yang optimal dan rekomendasikan pasangan makanan berdasarkan jenis anggur.",
-    "smart_kitchen_helps_6": "6.Daftar Belanja",
     "smart_kitchen_helps_6_content": "Buat daftar belanja berdasarkan resep, tandai barang-barang yang sudah Anda miliki dan peroleh sebagai referensi belanja Anda.",
     "smart_support_key": "Dukungan Cerdas",
     "smart_support_helps": "Dukungan Cerdas menyediakan bantuan menyeluruh untuk perangkat Anda. Anda bisa mendapatkan tips pembersihan dan perawatan untuk perawatan harian, diagnostik mandiri satu klik untuk memeriksa status semua perangkat Anda, dan memberikan solusi yang memungkinkan untuk setiap operasi yang tidak normal.",
-    "smart_support_helps_1": "1.Tips Pembersihan dan Perawatan",
     "smart_support_helps_1_content": "Berikan saran untuk pembersihan dan pemeliharaan produk setiap hari.",
-    "smart_support_helps_2": "2.Diagnosis mandiri satu klik",
     "smart_support_helps_2_content": "Inspeksi mandiri satu klik untuk mengetahui status semua peralatan rumah tangga. Saat masalah terdeteksi, berikan solusi yang direkomendasikan.",
-    "smart_support_helps_3": "Penyelesaian masalah",
     "smart_support_helps_3_content": "Saat perangkat bermasalah, pengguna dapat membantu sendiri, memecahkan masalah, dan menyelesaikan masalah sesuai panduan kesalahan.",
-    "smart_support_helps_4": "4.Laporkan Masalah",
     "smart_support_helps_4_content": "Jika terjadi masalah dengan penggunaan APP atau produk, pengguna dapat memberikan umpan balik secara daring untuk mengurangi waktu komunikasi dengan pusat panggilan.",
-    "smart_support_helps_5": "5.Hubungi Kami",
     "smart_support_helps_5_content": "Pengguna dapat menghubungi kami melalui telepon, email, dan situs web resmi.",
     "block_key": "Memblokir",
     "guide_tips_device_1": "Ini adalah <b> tab beranda baru. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Perangkat ini perlu perhatian.",
     "CL_DV_RF_next_cleaning_will_be": "Pembersihan selanjutnya akan **",
     "CL_DV_RF_last_clean_was": "Pembersihan terakhir adalah **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Tips Membersihkan dan Merawat",
     "CL_CF_AS_needs_attention": "Perangkat ini perlu perhatian.",
     "CL_CF_AS_run_normal_condition": "Perangkat Anda berjalan dalam kondisi normal.",
     "CL_DV_WM_offline_content1": "Periksa apakah perangkat Anda terhubung dan daya sudah dinyalakan.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Ekstra panas",
     "CL_CF_HP_card": "Kartu",
     "CL_CF_HP_enter_card_name": "Masukkan nama kartu...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Harap pilih setidaknya satu bahan.",
     "CL_CF_FM_no_shopping_items": "Tidak ada barang belanjaan",
     "CL_CF_FM_add_food_from_below": "Tambahkan makanan dari bawah",
     "CL_CF_FM_x_has_been_removed": "** telah dihapus.",
-    "CL_CF_CO_waiting": "menunggu"
+    "CL_CF_CO_waiting": "menunggu",
+    "CL_CF_HP_delete_card_tips": "Apakah Anda yakin ingin menghapus kartu?",
+    "smart_energy_helps_1": "1. Eco Satu Klik",
+    "smart_energy_helps_2": "2. Pemantauan Konsumsi Energi",
+    "smart_energy_helps_3": "3. Asisten Energi",
+    "air_care_helps_1": "1. Evaluasi Udara",
+    "smart_laundry_helps_2": "2. Manajemen Deterjen",
+    "air_care_helps_2": "2. Optimasi Satu Klik",
+    "air_care_helps_3": "3. Tampilan Ruangan 3D",
+    "smart_laundry_helps_1": "1. Binatu yang Disesuaikan",
+    "smart_laundry_helps_3": "3. Laporan Penggunaan Binatu",
+    "smart_kitchen_helps_1": "1. Resep koki",
+    "smart_kitchen_helps_2": "2. Asisten Resep",
+    "smart_kitchen_helps_3": "3. Manajemen Makanan",
+    "smart_kitchen_helps_4": "4. Manajemen Minuman",
+    "smart_kitchen_helps_5": "5. Inventaris Anggur",
+    "smart_kitchen_helps_6": "6. Daftar Belanja",
+    "smart_support_helps_1": "1. Tips Pembersihan dan Perawatan",
+    "smart_support_helps_2": "2. Diagnosis Diri dengan Satu Klik",
+    "smart_support_helps_4": "4. Laporkan Masalah",
+    "smart_support_helps_5": "5. Hubungi Kami",
+    "air_care_helps_1_content": "Pantau status suhu dan kelembapan setiap ruangan secara real-time, serta berikan evaluasi dan pengingat kenyamanan berdasarkan kondisi udara.",
+    "smart_energy_helps_2_content": "Hitung konsumsi daya dan air seluruh rumah setiap hari, bulan, dan tahun. Anda juga dapat melihat statistik konsumsi masing-masing perangkat, proporsi konsumsi energi setiap perangkat dalam periode yang dipilih, konsumsi energi keseluruhan dan individual.",
+    "smart_support_helps_3": "3. Penyelesaian masalah",
+    "CL_SL_CM_about_usage_month_desc": "Data yang ditampilkan merupakan estimasi, bukan pengukuran yang tepat.\n Perkiraan kami didasarkan pada pengujian yang terkendali, sehingga hasil aktual Anda mungkin berbeda.\n Penggunaan energi di dunia nyata bergantung pada lingkungan dan kebiasaan spesifik Anda.",
+    "CL_CF_HP_no_card_key": "Tidak Ada Kartu"
 }
