--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Користете кутија за влажност за да ја регулирате влажноста",
     "same_day": "Во истиот ден",
     "w_temp_set": "Која температура треба да се постави?",
+    "asko": "АСКО",
     "eco_meter": "Еко метар",
     "asko_eco_meter_desc": "## е корисен паметен индикатор за одредување на вашето влијание врз животната средина врз основа на избраната програма и дополнителните опции кога станува збор за потрошувачката на енергија, вода и детергент.",
     "wm86_autodose_desc": "Наместо да се борите, оставете машината за перење точно да ја измери вистинската доза на детергент. Нашите машини за перење со систем за автоматска доза го мерат детергентот во однос на оптоварувањето на миењето, нивото на нечистотија, тврдоста на водата, типот на програмата и температурата. Секогаш совршена доза и нема повеќе предозирање. Овде можете да ги приспособите вашите стандардни поставки за автоматска доза.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Дознајте повеќе за клучните карактеристики на Smart Support",
     "smart_energy_helps": "Smart Energy ви помага да ги следите и одржувате уредите во енергетска ефикасна состојба",
     "smart_energy_helps_1_content": "Активен ЕКО режим на вашите апарати. Статистички анализирајте ја потрошувачката на енергија на уредот. Следете ги податоците за заштеда на енергија и поставете цел за користење на енергија.",
-    "smart_energy_helps_2": "2.Следење на потрошувачката на енергија",
-    "smart_energy_helps_2_content": "Пресметајте ја потрошувачката на енергија и вода во целата куќа на дневна, месечна и годишна основа. исто така можете да ја видите статистиката за потрошувачка на поединечни уреди, процентот на потрошувачка на енергија на секој уред во избраниот период, вкупната и индивидуалната потрошувачка на енергија.",
-    "smart_energy_helps_3": "3.Енергетски асистент",
     "smart_energy_helps_3_content": "Поставете цели за заштеда на енергија и испраќајте известувања до корисниците кога ќе се постигнат поставените целни вредности.",
     "air_care_helps": "Нега на воздухот има за цел да ја реши интелигентната контрола на температурата, влажноста и воздухот во целата куќа",
-    "air_care_helps_1": "1. Евалуација на воздухот",
-    "air_care_helps_1_content": "Следете ја состојбата на температурата и влажноста на секоја соба во реално време и обезбедете проценки за удобност и потсетници врз основа на климатизацијата",
-    "air_care_helps_2": "2.Оптимизација со еден клик",
     "air_care_helps_2_content": "Оптимизацијата може да се започне со еден клик. Обезбедуваме пет различни шеми за оптимизација. Секој режим на оптимизација може да се прилагоди според потребите на корисниците, обезбедувајќи им на корисниците приспособени решенија за оптимизација.",
-    "air_care_helps_3": "3.3D поглед на собата",
     "air_care_helps_3_content": "Внимавајте на статусот и уредите на вашата соба преку детална 3D визуелизација на вашиот дом.",
     "smart_laundry_key": "Паметно перење",
     "smart_laundry_helps": "Smart Laundry нуди стручни совети за перење, интуитивен асистент за перење и непречено управување со детергентот, обезбедувајќи неспоредливо искуство при перење",
-    "smart_laundry_helps_1": "1.Прилагодено перење",
     "smart_laundry_helps_1_content": "Персонализирани циклуси засновани на кориснички профили и преференци, со ознаки за различни сезони, активности на отворено, нега на бебиња и многу повеќе.",
-    "smart_laundry_helps_2": "2. Управување со детергент",
     "smart_laundry_helps_2_content": "Оптимизирајте ја вашата рутина за перење алишта со Smart Home Laundry Assistant, автоматски ги препознава брендовите на детергенти и управувајте со дозата во вашата машина за перење.",
-    "smart_laundry_helps_3": "3.Извештај за употреба на алишта",
     "smart_laundry_helps_3_content": "Прикажува неделни, месечни и годишни извештаи за користењето на програмата за перење алишта од страна на корисникот, како и месечната потрошувачка на вода и електрична енергија и чистење на барабанот.",
     "smart_kitchen_key": "Паметна кујна",
     "smart_kitchen_helps": "Smart Kitchen ви овозможува невидено интелигентно искуство за готвење, вклучувајќи интелигентни рецепти, парови на вино, помошници за рецепти и управување со состојки, вино и пијалоци",
-    "smart_kitchen_helps_1": "1. Рецепт за готвач",
     "smart_kitchen_helps_1_content": "Искусете ги мајсторските рецепти во уникатни вкусови кога се готват во различни рерни, кои ги следат упатствата за готвење на рецептот со само еден клик.",
-    "smart_kitchen_helps_2": "2.Помошник за рецепти",
     "smart_kitchen_helps_2_content": "Прилагодете ги и генерирајте рецепти засновани на вашите лични преференци, вклучувајќи исхрана, кујни, начин на живот и алергии.",
-    "smart_kitchen_helps_3": "3. Управување со храна",
     "smart_kitchen_helps_3_content": "Додадете и прегледувајте ги деталите за често користените состојки како што е датумот на истекување. Брзо усогласете ги соодветните рецепти за храна и испратете ги состојките што недостасуваат на списокот за купување.",
-    "smart_kitchen_helps_4": "Управување со пијалоци",
     "smart_kitchen_helps_4_content": "Додадете пијалоци и креирајте листа за пиење, прегледајте детални информации за секое складирано пиење.",
-    "smart_kitchen_helps_5": "Инвентар на вино",
     "smart_kitchen_helps_5_content": "Скенирајте за да создадете список со винарска визба од VIvino, поставете потсетници за оптимален период на пиење и препорачајте спарување на храна врз основа на типот на вино.",
-    "smart_kitchen_helps_6": "6.Шопинг листа",
     "smart_kitchen_helps_6_content": "Генерирајте го списокот за купување врз основа на рецептот, означете ги артиклите што веќе ги поседувате и сте ги купиле како ваша референца за купување.",
     "smart_support_key": "Паметна поддршка",
     "smart_support_helps": "Паметната поддршка обезбедува сеопфатна помош за вашите уреди. Може да добиете совети за чистење и нега за секојдневно одржување, самодијагностика со еден клик за да го проверите статусот на сите ваши уреди и да обезбедите можни решенија за какви било абнормални операции",
-    "smart_support_helps_1": "1. Совети за чистење и одржување",
     "smart_support_helps_1_content": "Давајте предлози за секојдневно чистење и одржување на производот.",
-    "smart_support_helps_2": "2. Самодигноза со еден клик",
     "smart_support_helps_2_content": "Само-инспекција со еден клик за да го сфатите статусот на сите апарати за домаќинство. Кога ќе се открие проблем, обезбедете препорачани решенија.",
-    "smart_support_helps_3": "Решавање проблеми",
     "smart_support_helps_3_content": "Кога уредот има проблем, корисниците можат сами да помагаат, да го решат и решат проблемот според водичот за дефекти.",
-    "smart_support_helps_4": "4.Пријавете го проблемот",
     "smart_support_helps_4_content": "Ако има проблеми со употребата на АПП или производот, корисниците можат да даваат повратни информации преку Интернет за да го намалат времето за комуникација со центарот за повици.",
-    "smart_support_helps_5": "5. Контактирајте со нас",
     "smart_support_helps_5_content": "Корисниците можат да не контактираат преку телефон, е-пошта и официјална веб-страница.",
     "block_key": "Блокирај",
     "guide_tips_device_1": "Ова е <b> новото јазиче почетната страница. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "На уредот му треба внимание.",
     "CL_DV_RF_next_cleaning_will_be": "Следното чистење ќе биде **",
     "CL_DV_RF_last_clean_was": "Последното чистење беше **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Совети за чистење и нега",
     "CL_CF_AS_needs_attention": "На уредот му треба внимание.",
     "CL_CF_AS_run_normal_condition": "Вашиот уред работи во нормална состојба.",
     "CL_DV_WM_offline_content1": "Проверете дали уредот е приклучен и дали има струја.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Екстра жешко",
     "CL_CF_HP_card": "Картичка",
     "CL_CF_HP_enter_card_name": "Внесете име на картичката...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Изберете барем една состојка.",
     "CL_CF_FM_no_shopping_items": "Нема артикли за купување",
     "CL_CF_FM_add_food_from_below": "Додадете храна одоздола",
     "CL_CF_FM_x_has_been_removed": "** е отстранета.",
-    "CL_CF_CO_waiting": "чекање"
+    "CL_CF_CO_waiting": "чекање",
+    "CL_CF_HP_delete_card_tips": "Дали сте сигурни дека сакате да ја избришете картичката?",
+    "smart_energy_helps_1": "1. Еко со еден клик",
+    "smart_energy_helps_2": "2. Следење на потрошувачката на енергија",
+    "smart_energy_helps_3": "3. Енергетски асистент",
+    "air_care_helps_1": "1. Евалуација на воздухот",
+    "smart_laundry_helps_2": "2. Управување со детергент",
+    "air_care_helps_2": "2. Оптимизација со еден клик",
+    "air_care_helps_3": "3. 3D поглед на собата",
+    "smart_laundry_helps_1": "1. Прилагодено перење",
+    "smart_laundry_helps_3": "3. Извештај за употреба на алишта",
+    "smart_kitchen_helps_1": "1. Рецепт за готвач",
+    "smart_kitchen_helps_2": "2. Помошник за рецепти",
+    "smart_kitchen_helps_3": "3. Управување со храна",
+    "smart_kitchen_helps_4": "4. Управување со пијалоци",
+    "smart_kitchen_helps_5": "5. Инвентар на вино",
+    "smart_kitchen_helps_6": "6. Список за купување",
+    "smart_support_helps_1": "1. Совети за чистење и одржување",
+    "smart_support_helps_2": "2. Самодигноза со еден клик",
+    "smart_support_helps_4": "4. Пријавете го проблемот",
+    "smart_support_helps_5": "5. Контактирајте со нас",
+    "air_care_helps_1_content": "Следете ја состојбата на температурата и влажноста на секоја соба во реално време и обезбедете проценки за удобност и потсетници врз основа на климатизацијата.",
+    "smart_energy_helps_2_content": "Пресметајте ја потрошувачката на енергија и вода во целата куќа на дневна, месечна и годишна основа. Можете исто така да ја видите статистиката за потрошувачка на поединечни уреди, процентот на потрошувачка на енергија на секој уред во избраниот период, вкупната и индивидуалната потрошувачка на енергија.",
+    "smart_support_helps_3": "3. Решавање проблеми",
+    "CL_SL_CM_about_usage_month_desc": "Прикажаните податоци се проценки, а не точни мерења.\n Нашите проценки се засноваат на контролирани тестови, така што вашите вистински резултати може да се разликуваат.\n Употребата на енергија во реалниот свет зависи од вашата специфична околина и навики.",
+    "CL_CF_HP_no_card_key": "Нема картичка"
 }
