--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Gunakan kotak kelembapan untuk mengawal kelembapan",
     "same_day": "Pada hari yang sama",
     "w_temp_set": "Suhu apa yang perlu ditetapkan?",
+    "asko": "ASKO",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## ialah penunjuk pintar yang berguna untuk menentukan kesan alam sekitar anda berdasarkan program yang dipilih dan pilihan tambahan apabila melibatkan penggunaan tenaga, air dan detergen.",
     "wm86_autodose_desc": "Daripada bersusah payah, biarkan mesin basuh mengukur dengan tepat dos detergen yang betul. Mesin basuh kami dengan sistem Auto Dose mengukur detergen terhadap beban cucian, tahap kekotoran, kekerasan air, jenis program dan suhu. Dos sentiasa sempurna dan tiada lagi dos berlebihan. Di sini anda boleh melaraskan tetapan lalai anda untuk Auto Dos.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Ketahui lebih lanjut tentang ciri utama Sokongan Pintar",
     "smart_energy_helps": "Tenaga Pintar membantu anda memantau dan memastikan peranti dalam keadaan cekap tenaga",
     "smart_energy_helps_1_content": "Mod ECO aktif peralatan anda. Analisis statistik penggunaan tenaga peranti. Pantau data penjimatan tenaga dan Tetapkan sasaran penggunaan tenaga.",
-    "smart_energy_helps_2": "2.Pemantauan Penggunaan Tenaga",
-    "smart_energy_helps_2_content": "Kira tenaga dan penggunaan air seluruh rumah pada asas harian, bulanan dan tahunan. anda juga boleh melihat statistik penggunaan peranti individu, perkadaran penggunaan tenaga setiap peranti dalam tempoh yang dipilih, penggunaan tenaga keseluruhan dan individu.",
-    "smart_energy_helps_3": "3.Pembantu Tenaga",
     "smart_energy_helps_3_content": "Tetapkan matlamat penjimatan tenaga dan hantar pemberitahuan kepada pengguna apabila nilai sasaran yang ditetapkan tercapai.",
     "air_care_helps": "Penjagaan udara bertujuan untuk menyelesaikan kawalan pintar suhu, kelembapan dan udara di seluruh rumah",
-    "air_care_helps_1": "1.Penilaian Udara",
-    "air_care_helps_1_content": "Pantau status suhu dan kelembapan setiap bilik dalam masa nyata, dan berikan penilaian keselesaan dan peringatan berdasarkan keadaan udara",
-    "air_care_helps_2": "2. Pengoptimuman satu klik",
     "air_care_helps_2_content": "Pengoptimuman boleh dimulakan dengan satu klik. Kami menyediakan lima skim pengoptimuman yang berbeza. Setiap mod pengoptimuman boleh dilaraskan mengikut keperluan pengguna, memberikan pengguna penyelesaian pengoptimuman tersuai.",
-    "air_care_helps_3": "Pemandangan Bilik 3.3D",
     "air_care_helps_3_content": "Pantau status dan peralatan bilik anda melalui visualisasi 3D terperinci rumah anda.",
     "smart_laundry_key": "Cucian Pintar",
     "smart_laundry_helps": "Smart Laundry menawarkan petua mencuci pakar, pembantu dobi yang intuitif dan pengurusan detergen yang lancar, memastikan pengalaman dobi yang tiada tandingan",
-    "smart_laundry_helps_1": "1. Cucian Tersuai",
     "smart_laundry_helps_1_content": "Kitaran diperibadikan berdasarkan profil dan pilihan pengguna, dengan tag untuk musim yang berbeza, aktiviti luar, penjagaan bayi dan banyak lagi.",
-    "smart_laundry_helps_2": "2.Pengurusan Detergen",
     "smart_laundry_helps_2_content": "Optimumkan rutin cucian anda dengan Pembantu Cucian Rumah Pintar, kenal pasti jenama detergen secara automatik dan uruskan dos dalam mesin basuh anda.",
-    "smart_laundry_helps_3": "3.Laporan Penggunaan Dobi",
     "smart_laundry_helps_3_content": "Memaparkan laporan mingguan, bulanan dan tahunan tentang penggunaan program dobi oleh pengguna, serta penggunaan air dan elektrik dan pembersihan dram bulan.",
     "smart_kitchen_key": "Dapur Pintar",
     "smart_kitchen_helps": "Dapur Pintar memberi anda pengalaman memasak pintar yang belum pernah berlaku sebelum ini, termasuk resipi pintar, gandingan wain, pembantu resipi dan pengurusan ramuan, wain dan minuman",
-    "smart_kitchen_helps_1": "1. Resipi chef",
     "smart_kitchen_helps_1_content": "Alami resipi induk dalam perisa unik apabila dimasak dalam ketuhar yang berbeza, yang mengikut arahan memasak resipi dengan hanya satu klik.",
-    "smart_kitchen_helps_2": "2.Pembantu Resipi",
     "smart_kitchen_helps_2_content": "Sesuaikan dan jana resipi berdasarkan pilihan peribadi anda termasuk pemakanan, masakan, gaya hidup dan alahan.",
-    "smart_kitchen_helps_3": "3.Pengurusan Makanan",
     "smart_kitchen_helps_3_content": "Tambah dan lihat butiran bahan yang kerap digunakan seperti tarikh luput. Padankan dengan pantas resipi makanan yang sesuai dan hantar bahan yang hilang ke senarai beli-belah.",
-    "smart_kitchen_helps_4": "Pengurusan Minuman",
     "smart_kitchen_helps_4_content": "Tambah minuman dan buat senarai minuman, lihat maklumat terperinci bagi setiap minuman yang disimpan.",
-    "smart_kitchen_helps_5": "Inventori Wain",
     "smart_kitchen_helps_5_content": "Imbas untuk membuat senarai bilik bawah tanah wain oleh VIvino, tetapkan peringatan untuk tempoh minum yang optimum dan cadangkan gandingan makanan berdasarkan jenis wain.",
-    "smart_kitchen_helps_6": "6. Senarai Membeli-belah",
     "smart_kitchen_helps_6_content": "Hasilkan senarai beli-belah berdasarkan resipi, tandakan item yang anda sudah miliki dan peroleh sebagai rujukan beli-belah anda.",
     "smart_support_key": "Sokongan Pintar",
     "smart_support_helps": "Sokongan Pintar menyediakan bantuan komprehensif untuk peranti anda. Anda boleh mendapatkan petua pembersihan dan penjagaan untuk penyelenggaraan harian, diagnostik kendiri satu klik untuk menyemak status semua peranti anda dan menyediakan penyelesaian yang mungkin untuk sebarang operasi yang tidak normal",
-    "smart_support_helps_1": "1.Petua Pembersihan dan Penyelenggaraan",
     "smart_support_helps_1_content": "Berikan cadangan untuk pembersihan dan penyelenggaraan harian produk.",
-    "smart_support_helps_2": "2.Dignosis diri satu klik",
     "smart_support_helps_2_content": "Pemeriksaan kendiri satu klik untuk memahami status semua peralatan rumah. Apabila masalah dikesan, berikan penyelesaian yang disyorkan.",
-    "smart_support_helps_3": "Penyelesaian masalah",
     "smart_support_helps_3_content": "Apabila peranti menghadapi masalah, pengguna boleh menolong diri sendiri, menyelesaikan masalah dan menyelesaikan masalah mengikut panduan kesalahan.",
-    "smart_support_helps_4": "4. Laporkan Isu",
     "smart_support_helps_4_content": "Jika terdapat masalah dengan APP atau penggunaan produk, pengguna boleh maklum balas dalam talian untuk mengurangkan masa komunikasi dengan pusat panggilan.",
-    "smart_support_helps_5": "5.Hubungi Kami",
     "smart_support_helps_5_content": "Pengguna boleh menghubungi kami melalui telefon, e-mel dan tapak web rasmi.",
     "block_key": "Sekat",
     "guide_tips_device_1": "Ini ialah <b> tab halaman utama baharu. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Peranti memerlukan perhatian.",
     "CL_DV_RF_next_cleaning_will_be": "Pembersihan seterusnya ialah **",
     "CL_DV_RF_last_clean_was": "Pembersihan terakhir ialah **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Petua Pembersihan dan Penjagaan",
     "CL_CF_AS_needs_attention": "Peranti memerlukan perhatian.",
     "CL_CF_AS_run_normal_condition": "Peranti anda berjalan dalam keadaan normal.",
     "CL_DV_WM_offline_content1": "Periksa sama ada peralatan anda disambungkan dan kuasa dihidupkan.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Lebih panas",
     "CL_CF_HP_card": "Kad",
     "CL_CF_HP_enter_card_name": "Masukkan nama kad...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Sila pilih sekurang-kurangnya satu bahan.",
     "CL_CF_FM_no_shopping_items": "Tiada barang belanja",
     "CL_CF_FM_add_food_from_below": "Tambah makanan dari bawah",
     "CL_CF_FM_x_has_been_removed": "** telah dikeluarkan.",
-    "CL_CF_CO_waiting": "menunggu"
+    "CL_CF_CO_waiting": "menunggu",
+    "CL_CF_HP_delete_card_tips": "Adakah anda pasti mahu memadamkan kad itu?",
+    "smart_energy_helps_1": "1. Eco Satu Klik",
+    "smart_energy_helps_2": "2. Pemantauan Penggunaan Tenaga",
+    "smart_energy_helps_3": "3. Pembantu Tenaga",
+    "air_care_helps_1": "1. Penilaian Udara",
+    "smart_laundry_helps_2": "2. Pengurusan Detergen",
+    "air_care_helps_2": "2. Pengoptimuman satu klik",
+    "air_care_helps_3": "3. Pemandangan Bilik 3D",
+    "smart_laundry_helps_1": "1. Dobi Tersuai",
+    "smart_laundry_helps_3": "3. Laporan Penggunaan Dobi",
+    "smart_kitchen_helps_1": "1. Resipi chef",
+    "smart_kitchen_helps_2": "2. Pembantu Resipi",
+    "smart_kitchen_helps_3": "3. Pengurusan Makanan",
+    "smart_kitchen_helps_4": "4. Pengurusan Minuman",
+    "smart_kitchen_helps_5": "5. Inventori Wain",
+    "smart_kitchen_helps_6": "6. Senarai Beli Belah",
+    "smart_support_helps_1": "1. Petua Pembersihan dan Penyelenggaraan",
+    "smart_support_helps_2": "2. Dignosis diri satu klik",
+    "smart_support_helps_4": "4. Laporan Isu",
+    "smart_support_helps_5": "5. Hubungi Kami",
+    "air_care_helps_1_content": "Pantau status suhu dan kelembapan setiap bilik dalam masa nyata, dan berikan penilaian keselesaan dan peringatan berdasarkan keadaan udara.",
+    "smart_energy_helps_2_content": "Kira tenaga dan penggunaan air seluruh rumah pada asas harian, bulanan dan tahunan. Anda juga boleh melihat statistik penggunaan peranti individu, perkadaran penggunaan tenaga setiap peranti dalam tempoh yang dipilih, penggunaan tenaga keseluruhan dan individu.",
+    "smart_support_helps_3": "3. Penyelesaian masalah",
+    "CL_SL_CM_about_usage_month_desc": "Data yang ditunjukkan adalah anggaran, bukan ukuran tepat.\n Anggaran kami adalah berdasarkan ujian terkawal, jadi keputusan sebenar anda mungkin berbeza-beza.\n Penggunaan tenaga dunia sebenar bergantung pada persekitaran dan tabiat khusus anda.",
+    "CL_CF_HP_no_card_key": "Tiada Kad"
 }
