--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Utilizar a caixa de humidade para regular a humidade",
     "same_day": "No mesmo dia",
     "w_temp_set": "Qual a temperatura a definir?",
+    "asko": "ASKO",
     "eco_meter": "Medidor Ecológico",
     "asko_eco_meter_desc": "## é um indicador inteligente útil para determinar o seu impacto ambiental com base no programa escolhido e nas opções adicionais no que diz respeito ao consumo de energia, água e detergente.",
     "wm86_autodose_desc": "Em vez de fazer isso com dificuldade, deixe a máquina de lavar medir exatamente a dosagem correta de detergente. As nossas máquinas de lavar com sistema Auto Dose medem o detergente em relação à carga, nível de sujidade, dureza da água, tipo de programa e temperatura. A dosagem é perfeita e evita a sobredosagem. Aqui pode ajustar as configurações para o Auto Dose.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Saiba mais sobre os principais recursos do Smart Support",
     "smart_energy_helps": "O Smart Energy ajuda você a monitorar e manter os dispositivos em estado de eficiência energética",
     "smart_energy_helps_1_content": "Modo ECO ativo dos seus aparelhos. Analise estatisticamente o consumo de energia do dispositivo. Monitore dados de economia de energia e defina meta de uso de energia.",
-    "smart_energy_helps_2": "2. Monitoramento do consumo de energia",
-    "smart_energy_helps_2_content": "Calcule o consumo total de energia e água da casa diariamente, mensalmente e anualmente. Você também pode visualizar as estatísticas de consumo de dispositivos individuais, a proporção do consumo de energia de cada dispositivo dentro do período selecionado, o consumo geral e individual de energia.",
-    "smart_energy_helps_3": "3.Assistente de energia",
     "smart_energy_helps_3_content": "Defina metas de economia de energia e envie notificações aos usuários quando os valores-alvo definidos forem atingidos.",
     "air_care_helps": "O Air Care visa solucionar o controle inteligente da temperatura, umidade e ar em toda a casa",
-    "air_care_helps_1": "1. Avaliação do ar",
-    "air_care_helps_1_content": "Monitore o status de temperatura e umidade de cada cômodo em tempo real e forneça avaliações de conforto e lembretes com base nas condições do ar",
-    "air_care_helps_2": "2. Otimização com um clique",
     "air_care_helps_2_content": "A otimização pode ser iniciada com um clique. Fornecemos cinco esquemas de otimização diferentes. Cada modo de otimização pode ser ajustado de acordo com as necessidades do usuário, fornecendo aos usuários soluções de otimização personalizadas.",
-    "air_care_helps_3": "3.3D Vista da sala",
     "air_care_helps_3_content": "Fique de olho no estado do seu cômodo e dos eletrodomésticos por meio de uma visualização 3D detalhada da sua casa.",
     "smart_laundry_key": "Lavanderia Inteligente",
     "smart_laundry_helps": "A Smart Laundry oferece dicas de lavagem de especialistas, um assistente de lavanderia intuitivo e gerenciamento de detergente perfeito, garantindo uma experiência de lavanderia incomparável",
-    "smart_laundry_helps_1": "1. Lavanderia Personalizada",
     "smart_laundry_helps_1_content": "Ciclos personalizados com base nos perfis e preferências do usuário, com tags para diferentes estações, atividades ao ar livre, cuidados com o bebê e muito mais.",
-    "smart_laundry_helps_2": "2.Gestão de Detergentes",
     "smart_laundry_helps_2_content": "Otimize sua rotina de lavanderia com o Smart Home Laundry Assistant, reconheça automaticamente as marcas de detergente e gerencie a dosagem na sua máquina de lavar.",
-    "smart_laundry_helps_3": "3. Relatório de uso da lavanderia",
     "smart_laundry_helps_3_content": "Exibe relatórios semanais, mensais e anuais sobre o uso do programa de lavanderia pelo usuário, bem como o uso mensal de água e eletricidade e a limpeza do tambor.",
     "smart_kitchen_key": "Cozinha Inteligente",
     "smart_kitchen_helps": "A Smart Kitchen oferece uma experiência de cozinha inteligente sem precedentes, incluindo receitas inteligentes, harmonizações de vinhos, assistentes de receitas e gerenciamento de ingredientes, vinhos e bebidas",
-    "smart_kitchen_helps_1": "1. Receita do Chef",
     "smart_kitchen_helps_1_content": "Experimente receitas de mestres com sabores únicos quando preparadas em diferentes fornos, que seguem as instruções de cozimento da receita com apenas um clique.",
-    "smart_kitchen_helps_2": "Assistente de receitas",
     "smart_kitchen_helps_2_content": "Personalize e gere receitas com base em suas preferências pessoais, incluindo nutrição, culinária, estilo de vida e alergias.",
-    "smart_kitchen_helps_3": "Inventário",
     "smart_kitchen_helps_3_content": "Adicione e visualize detalhes de ingredientes usados com frequência, como data de validade. Combine rapidamente receitas de alimentos adequados e envie ingredientes faltantes para a lista de compras.",
-    "smart_kitchen_helps_4": "Gestão de bebidas",
     "smart_kitchen_helps_4_content": "Adicione bebidas e crie uma lista de bebidas, visualize informações detalhadas de cada bebida armazenada.",
-    "smart_kitchen_helps_5": "Inventário de vinhos",
     "smart_kitchen_helps_5_content": "Digitalize para criar uma lista de adega da VIvino, defina lembretes para o período ideal de consumo e recomende harmonizações de alimentos com base no tipo de vinho.",
-    "smart_kitchen_helps_6": "Lista de compras",
     "smart_kitchen_helps_6_content": "Crie a lista de compras com base na receita, marque os itens que você já possui e adquiriu como sua referência de compra.",
     "smart_support_key": "Suporte Inteligente",
     "smart_support_helps": "O Smart Support fornece assistência abrangente para seus dispositivos. Você pode obter dicas de limpeza e cuidados para manutenção diária, autodiagnóstico de um clique para verificar o status de todos os seus dispositivos e fornecer possíveis soluções para quaisquer operações anormais",
-    "smart_support_helps_1": "1.Dicas de limpeza e manutenção",
     "smart_support_helps_1_content": "Dê sugestões para limpeza e manutenção diária do produto.",
-    "smart_support_helps_2": "2. Autodiagnóstico com um clique",
     "smart_support_helps_2_content": "Autoinspeção de um clique para entender o status de todos os eletrodomésticos. Quando um problema for detectado, forneça soluções recomendadas.",
-    "smart_support_helps_3": "Resolução de problemas",
     "smart_support_helps_3_content": "Quando o dispositivo apresenta um problema, os usuários podem se autoajudar, solucionar problemas e resolver o problema de acordo com o guia de falhas.",
-    "smart_support_helps_4": "4. Relatar problema",
     "smart_support_helps_4_content": "Caso haja problemas com o APP ou com o uso do produto, os usuários podem enviar feedback on-line para reduzir o tempo de comunicação com a central de atendimento.",
-    "smart_support_helps_5": "5.Entre em contato conosco",
     "smart_support_helps_5_content": "Os usuários podem entrar em contato conosco por telefone, e-mail e site oficial.",
     "block_key": "Bloquear",
     "guide_tips_device_1": "Esta é a <b> nova aba da página inicial. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "O dispositivo precisa de atenção.",
     "CL_DV_RF_next_cleaning_will_be": "A próxima limpeza será **",
     "CL_DV_RF_last_clean_was": "A última limpeza foi **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Dicas de limpeza e cuidados",
     "CL_CF_AS_needs_attention": "O dispositivo precisa de atenção.",
     "CL_CF_AS_run_normal_condition": "Seu dispositivo funciona em condições normais.",
     "CL_DV_WM_offline_content1": "Verifique se o seu equipamento está ligado à corrente e se está a funcionar.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Extra quente",
     "CL_CF_HP_card": "Cartão",
     "CL_CF_HP_enter_card_name": "Digite o nome do cartão...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Selecione pelo menos um ingrediente.",
     "CL_CF_FM_no_shopping_items": "Nenhum item de compras",
     "CL_CF_FM_add_food_from_below": "Adicione comida de baixo",
     "CL_CF_FM_x_has_been_removed": "** foi removido.",
-    "CL_CF_CO_waiting": "esperando"
+    "CL_CF_CO_waiting": "esperando",
+    "CL_CF_HP_delete_card_tips": "Tem certeza de que deseja excluir o cartão?",
+    "smart_energy_helps_1": "1. Eco de um clique",
+    "smart_energy_helps_2": "2. Monitoramento do consumo de energia",
+    "smart_energy_helps_3": "3. Assistente de energia",
+    "air_care_helps_1": "1. Avaliação do ar",
+    "smart_laundry_helps_2": "2. Gestão de Detergentes",
+    "air_care_helps_2": "2. Otimização com um clique",
+    "air_care_helps_3": "3. Vista da sala 3D",
+    "smart_laundry_helps_1": "1. Lavanderia Personalizada",
+    "smart_laundry_helps_3": "3. Relatório de uso de lavanderia",
+    "smart_kitchen_helps_1": "1. Receita do Chef",
+    "smart_kitchen_helps_2": "Assistente de receitas",
+    "smart_kitchen_helps_3": "Inventário",
+    "smart_kitchen_helps_4": "4. Gestão de bebidas",
+    "smart_kitchen_helps_5": "5. Inventário de vinhos",
+    "smart_kitchen_helps_6": "6. Lista de compras",
+    "smart_support_helps_1": "1. Dicas de limpeza e manutenção",
+    "smart_support_helps_2": "2. Autodiagnóstico com um clique",
+    "smart_support_helps_4": "4. Relatar problema",
+    "smart_support_helps_5": "5. Contate-nos",
+    "air_care_helps_1_content": "Monitore o status de temperatura e umidade de cada cômodo em tempo real e forneça avaliações de conforto e lembretes com base nas condições do ar.",
+    "smart_energy_helps_2_content": "Calcule o consumo de energia e água de toda a casa em uma base diária, mensal e anual. Você também pode visualizar as estatísticas de consumo de dispositivos individuais, a proporção do consumo de energia de cada dispositivo dentro do período selecionado, o consumo de energia geral e individual.",
+    "smart_support_helps_3": "3. Resolução de problemas",
+    "CL_SL_CM_about_usage_month_desc": "Os dados mostrados são estimativas, não medidas exatas.\n Nossas estimativas são baseadas em testes controlados, portanto seus resultados reais podem variar.\n O uso real de energia depende do seu ambiente e hábitos específicos.",
+    "CL_CF_HP_no_card_key": "Sem cartão"
 }
