--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Na reguláciu vlhkosti použite vlhkostný box",
     "same_day": "V ten istý deň",
     "w_temp_set": "Akú teplotu nastaviť?",
+    "asko": "ASKO",
     "eco_meter": "Eco meter",
     "asko_eco_meter_desc": "## je užitočný inteligentný indikátor na určenie vášho vplyvu na životné prostredie na základe zvoleného programu a doplnkových možností, pokiaľ ide o spotrebu energie, vody a pracieho prostriedku.",
     "wm86_autodose_desc": "Namiesto toho, aby ste museli bojovať, nechajte práčku odmerať presne tú správnu dávku pracieho prostriedku. Naše práčky so systémom Auto Dose merajú prací prostriedok podľa náplne prania, stupňa znečistenia, tvrdosti vody, typu programu a teploty. Vždy dokonalé dávkovanie a už žiadne predávkovanie. Tu môžete upraviť predvolené nastavenia pre automatickú dávku.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Získajte viac informácií o kľúčových funkciách inteligentnej podpory",
     "smart_energy_helps": "Smart Energy vám pomáha monitorovať a udržiavať zariadenia v energeticky úspornom stave",
     "smart_energy_helps_1_content": "Aktívny ECO režim vašich spotrebičov. Štatisticky analyzujte spotrebu energie zariadenia. Sledujte údaje o úspore energie a nastavte cieľ spotreby energie.",
-    "smart_energy_helps_2": "2. Monitorovanie spotreby energie",
-    "smart_energy_helps_2_content": "Vypočítajte spotrebu energie a vody v celom dome na dennej, mesačnej a ročnej báze. môžete si prezerať aj štatistiku spotreby jednotlivých zariadení, podiel spotreby energie každého zariadenia za zvolené obdobie, celkovú a individuálnu spotrebu energie.",
-    "smart_energy_helps_3": "3.Energetický asistent",
     "smart_energy_helps_3_content": "Nastavte ciele v oblasti úspory energie a po dosiahnutí stanovených cieľových hodnôt odosielajte používateľom upozornenia.",
     "air_care_helps": "Starostlivosť o vzduch má za cieľ vyriešiť inteligentné riadenie teploty, vlhkosti a vzduchu v celom dome",
-    "air_care_helps_1": "1.Hodnotenie ovzdušia",
-    "air_care_helps_1_content": "Monitorujte stav teploty a vlhkosti v každej miestnosti v reálnom čase a poskytujte hodnotenia komfortu a pripomienky na základe klimatizácie",
-    "air_care_helps_2": "2. Optimalizácia jedným kliknutím",
     "air_care_helps_2_content": "Optimalizáciu je možné spustiť jedným kliknutím. Ponúkame päť rôznych optimalizačných schém. Každý režim optimalizácie je možné upraviť podľa potrieb používateľa a poskytnúť používateľom prispôsobené riešenia optimalizácie.",
-    "air_care_helps_3": "3.3D zobrazenie miestnosti",
     "air_care_helps_3_content": "Sledujte stav svojej izby a spotrebičov prostredníctvom podrobnej 3D vizualizácie vášho domova.",
     "smart_laundry_key": "Inteligentná práčovňa",
     "smart_laundry_helps": "Smart Laundry ponúka odborné tipy na pranie, intuitívneho asistenta prania a bezproblémovú správu pracieho prostriedku, čo zaisťuje jedinečný zážitok z prania",
-    "smart_laundry_helps_1": "1. Práčovňa na mieru",
     "smart_laundry_helps_1_content": "Prispôsobené cykly založené na užívateľských profiloch a preferenciách so štítkami pre rôzne ročné obdobia, outdoorové aktivity, starostlivosť o bábätko a ďalšie.",
-    "smart_laundry_helps_2": "2. Manažment detergentov",
     "smart_laundry_helps_2_content": "Optimalizujte svoje pranie pomocou Smart Home Laundry Assistant, automaticky rozpoznávajte značky pracieho prostriedku a spravujte dávkovanie vo vašej práčke.",
-    "smart_laundry_helps_3": "3. Správa o používaní bielizne",
     "smart_laundry_helps_3_content": "Zobrazuje týždenné, mesačné a ročné správy o používaní programu prania používateľom, ako aj mesačnú spotrebu vody a elektriny a čistenie bubna.",
     "smart_kitchen_key": "Inteligentná kuchyňa",
     "smart_kitchen_helps": "Smart Kitchen vám poskytuje bezprecedentný inteligentný zážitok z varenia vrátane inteligentných receptov, párovania vína, asistentov receptov a správy ingrediencií, vína a nápojov.",
-    "smart_kitchen_helps_1": "1.Recept šéfkuchára",
     "smart_kitchen_helps_1_content": "Vyskúšajte majstrovské recepty v jedinečných príchutiach pri varení v rôznych rúrach, ktoré sa riadia pokynmi na varenie jediným kliknutím.",
-    "smart_kitchen_helps_2": "2.Asistent receptov",
     "smart_kitchen_helps_2_content": "Prispôsobte a generujte recepty na základe vašich osobných preferencií vrátane výživy, kuchyne, životného štýlu a alergií.",
-    "smart_kitchen_helps_3": "3. Food Management",
     "smart_kitchen_helps_3_content": "Pridajte a zobrazte podrobnosti o často používaných prísadách, ako je dátum spotreby. Rýchlo priraďte vhodné recepty na jedlo a odošlite chýbajúce ingrediencie do nákupného zoznamu.",
-    "smart_kitchen_helps_4": "Nápojový manažment",
     "smart_kitchen_helps_4_content": "Pridajte nápoje a vytvorte si nápojový lístok, zobrazte podrobné informácie o každom jednom uloženom nápoji.",
-    "smart_kitchen_helps_5": "Víno Inventár",
     "smart_kitchen_helps_5_content": "Skenovaním vytvorte zoznam vínnych pivníc od spoločnosti VIvino, nastavte pripomienky na optimálny čas pitia a odporučte párovanie jedál na základe typu vína.",
-    "smart_kitchen_helps_6": "6.Nákupný zoznam",
     "smart_kitchen_helps_6_content": "Vytvorte nákupný zoznam na základe receptu, označte položky, ktoré už vlastníte a ktoré ste získali, ako nákupnú referenciu.",
     "smart_support_key": "Inteligentná podpora",
     "smart_support_helps": "Smart Support poskytuje komplexnú pomoc pre vaše zariadenia. Môžete získať tipy na čistenie a starostlivosť o každodennú údržbu, autodiagnostiku jedným kliknutím na kontrolu stavu všetkých vašich zariadení a poskytnutie možných riešení pre akékoľvek abnormálne operácie.",
-    "smart_support_helps_1": "1. Tipy na čistenie a údržbu",
     "smart_support_helps_1_content": "Poskytnite návrhy na každodenné čistenie a údržbu produktu.",
-    "smart_support_helps_2": "2. Samostatná Dignosis jedným kliknutím",
     "smart_support_helps_2_content": "Samokontrola na jedno kliknutie na pochopenie stavu všetkých domácich spotrebičov. Keď sa zistí problém, poskytnite odporúčané riešenia.",
-    "smart_support_helps_3": "Riešenie problémov",
     "smart_support_helps_3_content": "Keď má zariadenie problém, používatelia si môžu svojpomocne pomôcť, vyriešiť problém a vyriešiť problém podľa sprievodcu poruchami.",
-    "smart_support_helps_4": "4. Nahláste problém",
     "smart_support_helps_4_content": "Ak sa vyskytnú problémy s používaním aplikácie alebo produktu, používatelia môžu spätnú väzbu online, aby skrátili čas komunikácie s call centrom.",
-    "smart_support_helps_5": "5. Kontaktujte nás",
     "smart_support_helps_5_content": "Používatelia nás môžu kontaktovať prostredníctvom telefónu, e-mailu a oficiálnej webovej stránky.",
     "block_key": "Blokovať",
     "guide_tips_device_1": "Toto je <b> nová karta domovskej stránky. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Zariadenie vyžaduje pozornosť.",
     "CL_DV_RF_next_cleaning_will_be": "Ďalšie čistenie bude **",
     "CL_DV_RF_last_clean_was": "Posledné čistenie bolo **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Tipy na čistenie a starostlivosť",
     "CL_CF_AS_needs_attention": "",
     "CL_CF_AS_run_normal_condition": "",
     "CL_DV_WM_offline_content1": "Skontrolujte, či je vaše zariadenie zapojené a napájanie je zapnuté.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "",
     "CL_CF_HP_card": "kard",
     "CL_CF_HP_enter_card_name": "Zadajte názov karty...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Vyberte aspoň jednu ingredienciu.",
     "CL_CF_FM_no_shopping_items": "Žiadne nákupné položky",
     "CL_CF_FM_add_food_from_below": "Pridajte jedlo zospodu",
     "CL_CF_FM_x_has_been_removed": "** bol odstránený.",
-    "CL_CF_CO_waiting": "čakanie"
+    "CL_CF_CO_waiting": "čakanie",
+    "CL_CF_HP_delete_card_tips": "Naozaj chcete vymazať kartu?",
+    "smart_energy_helps_1": "1. Eco jedným kliknutím",
+    "smart_energy_helps_2": "2. Monitorovanie spotreby energie",
+    "smart_energy_helps_3": "3. Energetický asistent",
+    "air_care_helps_1": "1. Hodnotenie ovzdušia",
+    "smart_laundry_helps_2": "2. Správa detergentov",
+    "air_care_helps_2": "2. Optimalizácia jedným kliknutím",
+    "air_care_helps_3": "3. 3D zobrazenie miestnosti",
+    "smart_laundry_helps_1": "1. Práčovňa na mieru",
+    "smart_laundry_helps_3": "3. Správa o používaní práčovne",
+    "smart_kitchen_helps_1": "1. Recept šéfkuchára",
+    "smart_kitchen_helps_2": "2. Asistent receptov",
+    "smart_kitchen_helps_3": "3. Potravinový manažment",
+    "smart_kitchen_helps_4": "4. Nápojový manažment",
+    "smart_kitchen_helps_5": "5. Víno Inventár",
+    "smart_kitchen_helps_6": "6. Nákupný zoznam",
+    "smart_support_helps_1": "1. Tipy na čistenie a údržbu",
+    "smart_support_helps_2": "2. Samostatná Dignosis jedným kliknutím",
+    "smart_support_helps_4": "4. Nahlásiť problém",
+    "smart_support_helps_5": "5. Kontaktujte nás",
+    "air_care_helps_1_content": "Monitorujte stav teploty a vlhkosti v každej miestnosti v reálnom čase a poskytujte hodnotenia komfortu a pripomienky na základe klimatizácie.",
+    "smart_energy_helps_2_content": "Vypočítajte spotrebu energie a vody v celom dome na dennej, mesačnej a ročnej báze. Môžete si tiež zobraziť štatistiky spotreby jednotlivých zariadení, podiel spotreby energie každého zariadenia za zvolené obdobie, celkovú a individuálnu spotrebu energie.",
+    "smart_support_helps_3": "3. Riešenie problémov",
+    "CL_SL_CM_about_usage_month_desc": "Zobrazené údaje sú odhady, nie presné merania.\n Naše odhady sú založené na kontrolovaných testoch, takže vaše skutočné výsledky sa môžu líšiť.\n Spotreba energie v reálnom svete závisí od vášho konkrétneho prostredia a zvykov.",
+    "CL_CF_HP_no_card_key": "Žiadna karta"
 }
