--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Använd fuktlåda för att reglera luftfuktig",
     "same_day": "Samma dag",
     "w_temp_set": "Vilken temperatur ska jag ställa in?",
+    "asko": "ASKO",
     "eco_meter": "Ekomätare",
     "asko_eco_meter_desc": "## är en användbar smart indikator för att bestämma din miljöpåverkan baserat på valt program och extra alternativ när det gäller energi-, vatten- och tvättmedelsförbrukning.",
     "wm86_autodose_desc": "Istället för att göra det till en kamp, ​​låt tvättmaskinen mäta exakt rätt dosering av tvättmedel. Våra tvättmaskiner med Auto Dose-system mäter tvättmedlet mot tvättmängd, smutsnivå, vattnets hårdhet, programtyp och temperatur. Alltid perfekt dosering och ingen mer överdosering. Här kan du justera dina standardinställningar för Auto Dose.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Läs mer om nyckelfunktionerna i Smart Support",
     "smart_energy_helps": "Smart Energy hjälper dig att övervaka och hålla enheter i energieffektivt tillstånd",
     "smart_energy_helps_1_content": "Aktivt ECO-läge för dina apparater. Analysera enhetens energiförbrukning statistiskt. Övervaka energispardata och ställ in energianvändningsmål.",
-    "smart_energy_helps_2": "2. Övervakning av energiförbrukning",
-    "smart_energy_helps_2_content": "Beräkna hela husets energi- och vattenförbrukning på en daglig, månads- och årsbasis. Du kan också se förbrukningsstatistik för enskilda enheter, andelen energiförbrukning för varje enhet inom den valda perioden, den totala och individuella energiförbrukningen.",
-    "smart_energy_helps_3": "3.Energiassistent",
     "smart_energy_helps_3_content": "Sätt energibesparande mål och skicka meddelanden till användarna när de uppsatta målvärdena uppnås.",
     "air_care_helps": "Luftvård syftar till att lösa den intelligenta styrningen av temperatur, luftfuktighet och luft i hela huset",
-    "air_care_helps_1": "1. Luftutvärdering",
-    "air_care_helps_1_content": "Övervaka temperatur- och luftfuktighetsstatusen för varje rum i realtid och ge komfortutvärderingar och påminnelser baserat på luftkonditioneringen",
-    "air_care_helps_2": "2. Optimering med ett klick",
     "air_care_helps_2_content": "Optimering kan startas med ett klick. Vi tillhandahåller fem olika optimeringsscheman. Varje optimeringsläge kan justeras efter användarnas behov, vilket ger användarna skräddarsydda optimeringslösningar.",
-    "air_care_helps_3": "Rumsvy i 3.3D",
     "air_care_helps_3_content": "Håll ett öga på ditt rums status och utrustning genom en detaljerad 3D-visualisering av ditt hem.",
     "smart_laundry_key": "Smart tvätt",
     "smart_laundry_helps": "Smart Laundry erbjuder experttips för tvätt, en intuitiv tvättassistent och sömlös tvättmedelshantering, vilket säkerställer en oöverträffad tvättupplevelse",
-    "smart_laundry_helps_1": "1. Anpassad tvätt",
     "smart_laundry_helps_1_content": "Personliga cykler baserade på användarprofiler och preferenser, med taggar för olika årstider, utomhusaktiviteter, babyvård med mera.",
-    "smart_laundry_helps_2": "2.Tvättmedelshantering",
     "smart_laundry_helps_2_content": "Optimera din tvättrutin med Smart Home Laundry Assistant, identifiera automatiskt tvättmedelsmärken och hantera doseringen i din tvättmaskin.",
-    "smart_laundry_helps_3": "3.Tvättanvändningsrapport",
     "smart_laundry_helps_3_content": "Visar vecko-, månads- och årsrapporter om användarens användning av tvättprogrammet, samt månadens vatten- och elanvändning och trumrengöring.",
     "smart_kitchen_key": "Smart kök",
     "smart_kitchen_helps": "Smart Kitchen ger dig en oöverträffad intelligent matlagningsupplevelse, inklusive intelligenta recept, vinkombinationer, receptassistenter och hantering av ingredienser, vin och drycker",
-    "smart_kitchen_helps_1": "1. Kock recept",
     "smart_kitchen_helps_1_content": "Upplev mästarecept i unika smaker när de tillagas i olika ugnar, som följer receptets tillagningsanvisningar med bara ett klick.",
-    "smart_kitchen_helps_2": "2.Receptassistent",
     "smart_kitchen_helps_2_content": "Anpassa och generera recept baserat på dina personliga preferenser inklusive näring, kök, livsstil och allergier.",
-    "smart_kitchen_helps_3": "3. Livsmedelshantering",
     "smart_kitchen_helps_3_content": "Lägg till och visa detaljer om ofta använda ingredienser som utgångsdatum. Matcha snabbt lämpliga matrecept och skickade saknade ingredienser till inköpslistan.",
-    "smart_kitchen_helps_4": "Övervaka",
     "smart_kitchen_helps_4_content": "Lägg till drycker och skapa en dryckeslista, se detaljerad information om varje lagrad dryck.",
-    "smart_kitchen_helps_5": "Vin förteckning",
     "smart_kitchen_helps_5_content": "Skanna för att skapa vinkällarlista av VIvino, ställ in påminnelser för optimal dricksperiod och rekommendera matparning baserat på vintyp.",
-    "smart_kitchen_helps_6": "6. Inköpslista",
     "smart_kitchen_helps_6_content": "Skapa inköpslistan utifrån receptet, markera de varor du redan äger och köpt som din shoppingreferens.",
     "smart_support_key": "Smart support",
     "smart_support_helps": "Smart Support ger omfattande hjälp för dina enheter. Du kan få rengörings- och skötseltips för dagligt underhåll, självdiagnostik med ett klick för att kontrollera statusen för alla dina enheter och tillhandahålla möjliga lösningar för eventuella onormala operationer",
-    "smart_support_helps_1": "1.Rengörings- och underhållstips",
     "smart_support_helps_1_content": "Ge förslag på daglig rengöring och underhåll av produkten.",
-    "smart_support_helps_2": "2.Själv Dignosis med ett klick",
     "smart_support_helps_2_content": "Självinspektion med ett klick för att förstå statusen för alla hushållsapparater. När ett problem upptäcks, ge rekommenderade lösningar.",
-    "smart_support_helps_3": "Felsökning",
     "smart_support_helps_3_content": "När enheten har ett problem kan användare självhjälpa, felsöka och lösa problemet enligt felguiden.",
-    "smart_support_helps_4": "4.Rapportera problem",
     "smart_support_helps_4_content": "Om det finns problem med APP eller produktanvändning kan användare återkoppla online för att minska kommunikationstiden med callcentret.",
-    "smart_support_helps_5": "5.Kontakta oss",
     "smart_support_helps_5_content": "Användare kan kontakta oss via telefon, e-post och officiella webbplats.",
     "block_key": "Blockera",
     "guide_tips_device_1": "Det här är den <b> nya fliken på startsidan. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Enheten behöver uppmärksamhet.",
     "CL_DV_RF_next_cleaning_will_be": "Nästa städning blir **",
     "CL_DV_RF_last_clean_was": "Senaste städningen var **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Rengörings- och skötseltips",
     "CL_CF_AS_needs_attention": "Enheten behöver uppmärksamhet.",
     "CL_CF_AS_run_normal_condition": "Din enhet fungerar i normalt skick.",
     "CL_DV_WM_offline_content1": "Kontrollera om din apparat är inkopplad och att strömmen är på.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Extra varmt",
     "CL_CF_HP_card": "Kort",
     "CL_CF_HP_enter_card_name": "Ange kortnamn...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Välj minst en ingrediens.",
     "CL_CF_FM_no_shopping_items": "Inga shoppingartiklar",
     "CL_CF_FM_add_food_from_below": "Lägg till mat underifrån",
     "CL_CF_FM_x_has_been_removed": "** har tagits bort.",
-    "CL_CF_CO_waiting": "väntan"
+    "CL_CF_CO_waiting": "väntan",
+    "CL_CF_HP_delete_card_tips": "Är du säker på att du vill ta bort kortet?",
+    "smart_energy_helps_1": "1. Ett klick Eco",
+    "smart_energy_helps_2": "2. Övervakning av energiförbrukning",
+    "smart_energy_helps_3": "3. Energiassistent",
+    "air_care_helps_1": "1. Luftutvärdering",
+    "smart_laundry_helps_2": "2. Tvättmedelshantering",
+    "air_care_helps_2": "2. Optimering med ett klick",
+    "air_care_helps_3": "3. Rumsvy i 3D",
+    "smart_laundry_helps_1": "1. Skräddarsydd tvätt",
+    "smart_laundry_helps_3": "3. Rapport om tvättanvändning",
+    "smart_kitchen_helps_1": "1. Kockrecept",
+    "smart_kitchen_helps_2": "2. Receptassistent",
+    "smart_kitchen_helps_3": "3. Livsmedelshantering",
+    "smart_kitchen_helps_4": "4. Övervaka",
+    "smart_kitchen_helps_5": "5. Vin förteckning",
+    "smart_kitchen_helps_6": "6. Inköpslista",
+    "smart_support_helps_1": "1. Rengörings- och underhållstips",
+    "smart_support_helps_2": "2. Självdiagnos med ett klick",
+    "smart_support_helps_4": "4. Rapportera problem",
+    "smart_support_helps_5": "5. Kontakta oss",
+    "air_care_helps_1_content": "Övervaka temperaturen och luftfuktigheten i varje rum i realtid och ge komfortutvärderingar och påminnelser baserat på luftkonditioneringen.",
+    "smart_energy_helps_2_content": "Beräkna hela husets energi- och vattenförbrukning på en daglig, månads- och årsbasis. Du kan också se förbrukningsstatistik för enskilda enheter, andelen energiförbrukning för varje enhet inom den valda perioden, den totala och individuella energiförbrukningen.",
+    "smart_support_helps_3": "3. Felsökning",
+    "CL_SL_CM_about_usage_month_desc": "Data som visas är uppskattningar, inte exakta mätningar.\n Våra uppskattningar är baserade på kontrollerade tester, så dina faktiska resultat kan variera.\n Den verkliga energianvändningen beror på din specifika miljö och dina vanor.",
+    "CL_CF_HP_no_card_key": "Inget kort"
 }
