--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "आर्द्रता को नियंत्रित करने के लिए आर्द्रता बॉक्स का उपयोग करें",
     "same_day": "उसी दिन",
     "w_temp_set": "कौन सा तापमान सेट करना है?",
+    "asko": "आस्को",
     "eco_meter": "इको मीटर",
     "asko_eco_meter_desc": "## ऊर्जा, पानी और डिटर्जेंट की खपत के मामले में चुने गए कार्यक्रम और अतिरिक्त विकल्पों के आधार पर आपके पर्यावरणीय प्रभाव को निर्धारित करने के लिए एक उपयोगी स्मार्ट संकेतक है।",
     "wm86_autodose_desc": "इसे संघर्ष में डालने के बजाय वॉशिंग मशीन को डिटर्जेंट की सही मात्रा मापने दें। ऑटो डोज़ सिस्टम वाली हमारी वॉशिंग मशीनें वाश लोड, गंदगी के स्तर, पानी की कठोरता, प्रोग्राम के प्रकार और तापमान के अनुसार डिटर्जेंट को मापती हैं। हमेशा सही मात्रा और अब ओवरडोज़ नहीं। यहाँ आप ऑटो डोज़ के लिए अपनी डिफ़ॉल्ट सेटिंग समायोजित कर सकते हैं।",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "स्मार्ट सपोर्ट की प्रमुख विशेषताओं के बारे में अधिक जानें",
     "smart_energy_helps": "स्मार्ट एनर्जी आपको उपकरणों की निगरानी करने और उन्हें ऊर्जा कुशल स्थिति में रखने में मदद करती है",
     "smart_energy_helps_1_content": "अपने उपकरणों का सक्रिय ECO मोड। डिवाइस ऊर्जा खपत का सांख्यिकीय विश्लेषण करें। ऊर्जा बचत डेटा की निगरानी करें और ऊर्जा उपयोग लक्ष्य निर्धारित करें।",
-    "smart_energy_helps_2": "2.ऊर्जा खपत निगरानी",
-    "smart_energy_helps_2_content": "दैनिक, मासिक और वार्षिक आधार पर पूरे घर की बिजली और पानी की खपत की गणना करें। आप व्यक्तिगत उपकरणों की खपत के आंकड़े, चयनित अवधि के भीतर प्रत्येक उपकरण की ऊर्जा खपत का अनुपात, समग्र और व्यक्तिगत ऊर्जा खपत भी देख सकते हैं।",
-    "smart_energy_helps_3": "3.ऊर्जा सहायक",
     "smart_energy_helps_3_content": "ऊर्जा-बचत लक्ष्य निर्धारित करें, तथा निर्धारित लक्ष्य मान प्राप्त होने पर उपयोगकर्ताओं को सूचनाएं भेजें।",
     "air_care_helps": "एयर केयर का उद्देश्य पूरे घर में तापमान, आर्द्रता और हवा के बुद्धिमान नियंत्रण को हल करना है",
-    "air_care_helps_1": "1.वायु मूल्यांकन",
-    "air_care_helps_1_content": "प्रत्येक कमरे के तापमान और आर्द्रता की स्थिति की वास्तविक समय में निगरानी करें, तथा वायु की स्थिति के आधार पर आरामदायक मूल्यांकन और अनुस्मारक प्रदान करें",
-    "air_care_helps_2": "2.एक-क्लिक अनुकूलन",
     "air_care_helps_2_content": "अनुकूलन एक क्लिक से शुरू किया जा सकता है। हम पाँच अलग-अलग अनुकूलन योजनाएँ प्रदान करते हैं। प्रत्येक अनुकूलन मोड को उपयोगकर्ता की ज़रूरतों के अनुसार समायोजित किया जा सकता है, जिससे उपयोगकर्ताओं को अनुकूलित अनुकूलन समाधान मिल सके।",
-    "air_care_helps_3": "3.3D कक्ष दृश्य",
     "air_care_helps_3_content": "अपने घर के विस्तृत 3D विज़ुअलाइज़ेशन के माध्यम से अपने कमरे की स्थिति और उपकरणों पर नज़र रखें।",
     "smart_laundry_key": "स्मार्ट लॉन्ड्री",
     "smart_laundry_helps": "स्मार्ट लॉन्ड्री विशेषज्ञ धुलाई युक्तियाँ, एक सहज लॉन्ड्री सहायक और निर्बाध डिटर्जेंट प्रबंधन प्रदान करता है, जो एक अद्वितीय कपड़े धोने का अनुभव सुनिश्चित करता है",
-    "smart_laundry_helps_1": "1. अनुकूलित कपड़े धोने",
     "smart_laundry_helps_1_content": "उपयोगकर्ता प्रोफाइल और प्राथमिकताओं के आधार पर वैयक्तिकृत साइकिलें, जिनमें विभिन्न मौसमों, बाहरी गतिविधियों, शिशु देखभाल आदि के लिए टैग शामिल हैं।",
-    "smart_laundry_helps_2": "2.डिटर्जेंट प्रबंधन",
     "smart_laundry_helps_2_content": "स्मार्ट होम लॉन्ड्री असिस्टेंट के साथ अपने कपड़े धोने की दिनचर्या को अनुकूलित करें, स्वचालित रूप से डिटर्जेंट ब्रांडों को पहचानें और अपनी वॉशिंग मशीन में खुराक का प्रबंधन करें।",
-    "smart_laundry_helps_3": "3.लॉन्ड्री उपयोग रिपोर्ट",
     "smart_laundry_helps_3_content": "उपयोगकर्ता द्वारा कपड़े धोने के कार्यक्रम के उपयोग के साथ-साथ महीने के पानी और बिजली के उपयोग और ड्रम की सफाई पर साप्ताहिक, मासिक और वार्षिक रिपोर्ट प्रदर्शित करता है।",
     "smart_kitchen_key": "स्मार्ट किचन",
     "smart_kitchen_helps": "स्मार्ट किचन आपको एक अभूतपूर्व बुद्धिमान खाना पकाने का अनुभव प्रदान करता है, जिसमें बुद्धिमान व्यंजन, वाइन पेयरिंग, रेसिपी सहायक और सामग्री, वाइन और पेय प्रबंधन शामिल है",
-    "smart_kitchen_helps_1": "1.शेफ रेसिपी",
     "smart_kitchen_helps_1_content": "विभिन्न ओवन में पकाए जाने पर अद्वितीय स्वादों में मास्टर व्यंजनों का अनुभव करें, जो केवल एक क्लिक के साथ नुस्खा के खाना पकाने के निर्देशों का पालन करते हैं।",
-    "smart_kitchen_helps_2": "2.रेसिपी सहायक",
     "smart_kitchen_helps_2_content": "पोषण, व्यंजन, जीवनशैली और एलर्जी सहित अपनी व्यक्तिगत प्राथमिकताओं के आधार पर व्यंजनों को अनुकूलित और तैयार करें।",
-    "smart_kitchen_helps_3": "3.खाद्य प्रबंधन",
     "smart_kitchen_helps_3_content": "अक्सर इस्तेमाल होने वाली सामग्री का विवरण जैसे कि समाप्ति तिथि आदि जोड़ें और देखें। उपयुक्त खाद्य व्यंजनों का तुरंत मिलान करें और खरीदारी सूची में गुम सामग्री भेजें।",
-    "smart_kitchen_helps_4": "पेय प्रबंधन",
     "smart_kitchen_helps_4_content": "पेय जोड़ें और पीने की सूची बनाएं, प्रत्येक संग्रहीत पेय की विस्तृत जानकारी देखें।",
-    "smart_kitchen_helps_5": "शराब सूची",
     "smart_kitchen_helps_5_content": "VIvino द्वारा वाइन सेलर सूची बनाने के लिए स्कैन करें, इष्टतम पीने की अवधि के लिए अनुस्मारक सेट करें और वाइन के प्रकार के आधार पर भोजन की जोड़ी की सिफारिश करें।",
-    "smart_kitchen_helps_6": "6. खरीदारी सूची",
     "smart_kitchen_helps_6_content": "रेसिपी के आधार पर खरीदारी की सूची बनाएं, उन वस्तुओं को चिह्नित करें जो आपके पास पहले से हैं और जिन्हें आपने खरीदारी के संदर्भ के रूप में खरीदा है।",
     "smart_support_key": "स्मार्ट सपोर्ट",
     "smart_support_helps": "स्मार्ट सपोर्ट आपके डिवाइस के लिए व्यापक सहायता प्रदान करता है। आप दैनिक रखरखाव के लिए सफाई और देखभाल संबंधी सुझाव प्राप्त कर सकते हैं, अपने सभी डिवाइस की स्थिति की जांच करने के लिए एक-क्लिक सेल्फ-डायग्नोस्टिक और किसी भी असामान्य संचालन के लिए संभावित समाधान प्रदान कर सकते हैं",
-    "smart_support_helps_1": "1.सफाई और रखरखाव युक्तियाँ",
     "smart_support_helps_1_content": "उत्पाद की दैनिक सफाई और रखरखाव के लिए सुझाव दें।",
-    "smart_support_helps_2": "2.एक क्लिक से स्वयं निदान",
     "smart_support_helps_2_content": "सभी घरेलू उपकरणों की स्थिति जानने के लिए एक-क्लिक स्व-निरीक्षण। जब कोई समस्या पाई जाती है, तो सुझाए गए समाधान प्रदान करें।",
-    "smart_support_helps_3": "समस्या निवारण",
     "smart_support_helps_3_content": "जब डिवाइस में कोई समस्या आती है, तो उपयोगकर्ता स्वयं सहायता कर सकते हैं, समस्या निवारण कर सकते हैं और दोष गाइड के अनुसार समस्या को हल कर सकते हैं।",
-    "smart_support_helps_4": "4.समस्या की रिपोर्ट करें",
     "smart_support_helps_4_content": "यदि ऐप या उत्पाद के उपयोग में कोई समस्या है, तो उपयोगकर्ता कॉल सेंटर के साथ संचार समय को कम करने के लिए ऑनलाइन फीडबैक दे सकते हैं।",
-    "smart_support_helps_5": "5.हमसे संपर्क करें",
     "smart_support_helps_5_content": "उपयोगकर्ता हमसे फोन, ईमेल और आधिकारिक वेबसाइट के माध्यम से संपर्क कर सकते हैं।",
     "block_key": "अवरोध पैदा करना",
     "guide_tips_device_1": "यह <b> नया होमपेज टैब है. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "डिवाइस पर ध्यान देने की आवश्यकता है।",
     "CL_DV_RF_next_cleaning_will_be": "अगली सफ़ाई ** होगी",
     "CL_DV_RF_last_clean_was": "पिछली सफ़ाई ** थी",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "सफाई और देखभाल के सुझाव",
     "CL_CF_AS_needs_attention": "डिवाइस पर ध्यान देने की आवश्यकता है।",
     "CL_CF_AS_run_normal_condition": "आपका डिवाइस सामान्य स्थिति में चलता है.",
     "CL_DV_WM_offline_content1": "यह सुनिश्चित करें कि आपका यंत्र प्लग इन किया गया है और पावर चालू है।",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "अतिरिक्त गर्म",
     "CL_CF_HP_card": "कार्ड",
     "CL_CF_HP_enter_card_name": "कार्ड का नाम दर्ज करें...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "कृपया कम से कम एक घटक का चयन करें.",
     "CL_CF_FM_no_shopping_items": "कोई खरीदारी आइटम नहीं",
     "CL_CF_FM_add_food_from_below": "नीचे से खाना डालें",
     "CL_CF_FM_x_has_been_removed": "** हटा दिया गया है।",
-    "CL_CF_CO_waiting": "इंतज़ार में"
+    "CL_CF_CO_waiting": "इंतज़ार में",
+    "CL_CF_HP_delete_card_tips": "क्या आप वाकई कार्ड हटाना चाहते हैं?",
+    "smart_energy_helps_1": "1. वन-क्लिक इको",
+    "smart_energy_helps_2": "2. ऊर्जा खपत की निगरानी",
+    "smart_energy_helps_3": "3. ऊर्जा सहायक",
+    "air_care_helps_1": "1. वायु मूल्यांकन",
+    "smart_laundry_helps_2": "2. डिटर्जेंट प्रबंधन",
+    "air_care_helps_2": "2. एक-क्लिक अनुकूलन",
+    "air_care_helps_3": "3. 3D कक्ष दृश्य",
+    "smart_laundry_helps_1": "1. कस्टमाइज्ड लॉन्ड्री",
+    "smart_laundry_helps_3": "3. कपड़े धोने की उपयोग रिपोर्ट",
+    "smart_kitchen_helps_1": "1. शेफ रेसिपी",
+    "smart_kitchen_helps_2": "2. रेसिपी सहायक",
+    "smart_kitchen_helps_3": "3. खाद्य प्रबंधन",
+    "smart_kitchen_helps_4": "4. पेय प्रबंधन",
+    "smart_kitchen_helps_5": "5. शराब सूची",
+    "smart_kitchen_helps_6": "6. खरीदारी की सूची",
+    "smart_support_helps_1": "1. सफाई और रखरखाव के सुझाव",
+    "smart_support_helps_2": "2. एक क्लिक से स्वयं निदान",
+    "smart_support_helps_4": "4. समस्या की रिपोर्ट करें",
+    "smart_support_helps_5": "5. हमसे संपर्क करें",
+    "air_care_helps_1_content": "प्रत्येक कमरे के तापमान और आर्द्रता की स्थिति की वास्तविक समय में निगरानी करें, तथा वायु की स्थिति के आधार पर आरामदायक मूल्यांकन और अनुस्मारक प्रदान करें।",
+    "smart_energy_helps_2_content": "पूरे घर की बिजली और पानी की खपत की गणना दैनिक, मासिक और वार्षिक आधार पर करें। आप अलग-अलग डिवाइस की खपत के आँकड़े, चयनित अवधि के भीतर प्रत्येक डिवाइस की ऊर्जा खपत का अनुपात, समग्र और व्यक्तिगत ऊर्जा खपत भी देख सकते हैं।",
+    "smart_support_helps_3": "3. समस्या निवारण",
+    "CL_SL_CM_about_usage_month_desc": "दिखाए गए आंकड़े अनुमान हैं, सटीक माप नहीं।\n हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं।\n वास्तविक विश्व में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है।",
+    "CL_CF_HP_no_card_key": "कोई कार्ड नहीं"
 }
