--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Koristite kutiju za vlažnost za regulaciju vlažnosti",
     "same_day": "Isti dan",
     "w_temp_set": "Koju temperaturu postaviti?",
+    "asko": "ASKO",
     "eco_meter": "Eko mjerač",
     "asko_eco_meter_desc": "## je koristan pametni indikator za određivanje vašeg utjecaja na okoliš na temelju odabranog programa i dodatnih opcija kada je riječ o potrošnji energije, vode i deterdženta.",
     "wm86_autodose_desc": "Olakšajte si i dozvolite perilici da izmjeri točnu dozu deterdženta. Naše perilice rublja sa sustavom automatskoga doziranja deterdžent doziraju prema količini pranja, razini zaprljanosti, tvrdoći vode, vrsti programa i temperaturi. Uvijek savršena doza. Ovdje možete prilagoditi zadane postavke za automatsko doziranje.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Saznajte više o ključnim značajkama Smart Support",
     "smart_energy_helps": "Smart Energy pomaže vam u nadzoru i održavanju uređaja u energetski učinkovitom stanju",
     "smart_energy_helps_1_content": "Aktivni ECO način rada vaših uređaja. Statistički analizirati potrošnju energije uređaja. Pratite podatke o uštedi energije i postavite ciljanu potrošnju energije.",
-    "smart_energy_helps_2": "2. Praćenje potrošnje energije",
-    "smart_energy_helps_2_content": "Izračunajte potrošnju struje i vode u cijeloj kući na dnevnoj, mjesečnoj i godišnjoj bazi. također možete vidjeti statistiku potrošnje pojedinih uređaja, udio potrošnje energije svakog uređaja unutar odabranog razdoblja, ukupnu i pojedinačnu potrošnju energije.",
-    "smart_energy_helps_3": "3.Asistent za energetiku",
     "smart_energy_helps_3_content": "Postavite ciljeve uštede energije i pošaljite obavijesti korisnicima kada se postignu zadane ciljne vrijednosti.",
     "air_care_helps": "Air care ima za cilj riješiti inteligentnu kontrolu temperature, vlage i zraka u cijeloj kući",
-    "air_care_helps_1": "1. Ocjena zraka",
-    "air_care_helps_1_content": "Pratite status temperature i vlažnosti svake sobe u stvarnom vremenu i pružite procjene udobnosti i podsjetnike na temelju klimatizacije",
-    "air_care_helps_2": "2.One-click optimizacija",
     "air_care_helps_2_content": "Optimizacija se može pokrenuti jednim klikom. Nudimo pet različitih shema optimizacije. Svaki način optimizacije može se prilagoditi prema potrebama korisnika, pružajući korisnicima prilagođena rješenja optimizacije.",
-    "air_care_helps_3": "3.3D pogled na sobu",
     "air_care_helps_3_content": "Pratite stanje svoje sobe i kućanskih aparata kroz detaljnu 3D vizualizaciju vašeg doma.",
     "smart_laundry_key": "Pametna praonica rublja",
     "smart_laundry_helps": "Smart Laundry nudi stručne savjete za pranje, intuitivnog pomoćnika za pranje rublja i besprijekorno upravljanje deterdžentom, osiguravajući neusporedivo iskustvo pranja rublja",
-    "smart_laundry_helps_1": "1. Praonica rublja po narudžbi",
     "smart_laundry_helps_1_content": "Personalizirani ciklusi temeljeni na korisničkim profilima i preferencijama, s oznakama za različita godišnja doba, aktivnosti na otvorenom, njegu bebe i više.",
-    "smart_laundry_helps_2": "2. Upravljanje deterdžentima",
     "smart_laundry_helps_2_content": "Optimizirajte svoju rutinu pranja rublja uz Smart Home Laundry Assistant, automatski prepoznajte marke deterdženta i upravljajte dozom u vašoj perilici rublja.",
-    "smart_laundry_helps_3": "3. Izvješće o korištenju rublja",
     "smart_laundry_helps_3_content": "Prikazuje tjedna, mjesečna i godišnja izvješća o korisnikovom korištenju programa za pranje rublja, kao i mjesečnu potrošnju vode i struje te čišćenje bubnja.",
     "smart_kitchen_key": "Pametna kuhinja",
     "smart_kitchen_helps": "Smart Kitchen pruža vam neviđeno inteligentno iskustvo kuhanja, uključujući inteligentne recepte, sparivanja vina, pomoćnike za recepte i upravljanje sastojcima, vinom i pićem",
-    "smart_kitchen_helps_1": "1.Chef recept",
     "smart_kitchen_helps_1_content": "Doživite majstorske recepte u jedinstvenim okusima kada se kuhaju u različitim pećnicama, koje slijede upute za kuhanje recepta samo jednim klikom.",
-    "smart_kitchen_helps_2": "2.Pomoćnik za recepte",
     "smart_kitchen_helps_2_content": "Prilagodite i generirajte recepte na temelju svojih osobnih preferencija, uključujući prehranu, kuhinje, stil života i alergije.",
-    "smart_kitchen_helps_3": "3. Upravljanje hranom",
     "smart_kitchen_helps_3_content": "Dodajte i pregledajte pojedinosti o često korištenim sastojcima kao što je datum isteka. Brzo spojite odgovarajuće recepte za hranu i pošaljite sastojke koji nedostaju na popis za kupovinu.",
-    "smart_kitchen_helps_4": "Upravljanje ",
     "smart_kitchen_helps_4_content": "Dodajte pića i izradite popis pića, pogledajte detaljne informacije o svakom pohranjenom piću.",
-    "smart_kitchen_helps_5": "Vino zalihe",
     "smart_kitchen_helps_5_content": "Skenirajte da biste VIvino izradili popis vinskih podruma, postavili podsjetnike za optimalno razdoblje pijenja i preporučili sparivanje hrane na temelju vrste vina.",
-    "smart_kitchen_helps_6": "6. Shopping List",
     "smart_kitchen_helps_6_content": "Generirajte popis za kupovinu na temelju recepta, označite artikle koje već posjedujete i nabavili kao referencu za kupovinu.",
     "smart_support_key": "Pametna podrška",
     "smart_support_helps": "Smart Support pruža sveobuhvatnu pomoć za vaše uređaje. Možete dobiti savjete za čišćenje i njegu za svakodnevno održavanje, samodijagnostiku jednim klikom za provjeru statusa svih vaših uređaja i pružanje mogućih rješenja za sve nenormalne operacije",
-    "smart_support_helps_1": "1. Savjeti za čišćenje i održavanje",
     "smart_support_helps_1_content": "Dajte prijedloge za svakodnevno čišćenje i održavanje proizvoda.",
-    "smart_support_helps_2": "2. Samodijagnoza jednim klikom",
     "smart_support_helps_2_content": "Samoprovjera jednim klikom za uvid u stanje svih kućanskih aparata. Kada se otkrije problem, navedite preporučena rješenja.",
-    "smart_support_helps_3": "Rješavanje problema",
     "smart_support_helps_3_content": "Kada uređaj ima problema, korisnici si mogu sami pomoći, otkloniti kvar i riješiti problem prema vodiču za greške.",
-    "smart_support_helps_4": "4. Prijavite problem",
     "smart_support_helps_4_content": "Ako postoje problemi s aplikacijom ili upotrebom proizvoda, korisnici mogu dati povratne informacije na mreži kako bi smanjili vrijeme komunikacije s pozivnim centrom.",
-    "smart_support_helps_5": "5.Kontaktirajte nas",
     "smart_support_helps_5_content": "Korisnici nas mogu kontaktirati putem telefona, e-pošte i službene web stranice.",
     "block_key": "Blokirati",
     "guide_tips_device_1": "Ovo je <b> nova kartica početne stranice. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Uređaj zahtijeva pažnju.",
     "CL_DV_RF_next_cleaning_will_be": "Sljedeće čišćenje će biti **",
     "CL_DV_RF_last_clean_was": "Zadnje čišćenje je bilo **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Savjeti za čišćenje i njegu",
     "CL_CF_AS_needs_attention": "Uređaj zahtijeva pažnju.",
     "CL_CF_AS_run_normal_condition": "Vaš uređaj radi u normalnom stanju.",
     "CL_DV_WM_offline_content1": "Provjerite je li uređaj priključen i ima li napajanje.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Ekstra vruće",
     "CL_CF_HP_card": "Kartica",
     "CL_CF_HP_enter_card_name": "Unesite naziv kartice...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Odaberite barem jedan sastojak.",
     "CL_CF_FM_no_shopping_items": "Nema artikala za kupovinu",
     "CL_CF_FM_add_food_from_below": "Dodajte hranu odozdo",
     "CL_CF_FM_x_has_been_removed": "** je uklonjeno.",
-    "CL_CF_CO_waiting": "čekajući"
+    "CL_CF_CO_waiting": "čekajući",
+    "CL_CF_HP_delete_card_tips": "Jeste li sigurni da želite izbrisati karticu?",
+    "smart_energy_helps_1": "1. One-Click Eco",
+    "smart_energy_helps_2": "2. Praćenje potrošnje energije",
+    "smart_energy_helps_3": "3. Energetski asistent",
+    "air_care_helps_1": "1. Ocjena zraka",
+    "smart_laundry_helps_2": "2. Upravljanje deterdžentima",
+    "air_care_helps_2": "2. Optimizacija jednim klikom",
+    "air_care_helps_3": "3. 3D prikaz sobe",
+    "smart_laundry_helps_1": "1. Praonica rublja po narudžbi",
+    "smart_laundry_helps_3": "3. Izvješće o korištenju rublja",
+    "smart_kitchen_helps_1": "1. Recept kuhara",
+    "smart_kitchen_helps_2": "2. Pomoćnik za recepte",
+    "smart_kitchen_helps_3": "3. Upravljanje hranom",
+    "smart_kitchen_helps_4": "4. Upravljanje ",
+    "smart_kitchen_helps_5": "5. Vino zalihe",
+    "smart_kitchen_helps_6": "6. Popis za kupovinu",
+    "smart_support_helps_1": "1. Savjeti za čišćenje i održavanje",
+    "smart_support_helps_2": "2. Samodijagnoza jednim klikom",
+    "smart_support_helps_4": "4. Prijavite problem",
+    "smart_support_helps_5": "5. Kontaktirajte nas",
+    "air_care_helps_1_content": "Pratite status temperature i vlažnosti svake sobe u stvarnom vremenu i pružite procjene udobnosti i podsjetnike na temelju stanja zraka.",
+    "smart_energy_helps_2_content": "Izračunajte potrošnju struje i vode u cijeloj kući na dnevnoj, mjesečnoj i godišnjoj bazi. Također možete vidjeti statistiku potrošnje pojedinih uređaja, udio potrošnje energije svakog uređaja unutar odabranog razdoblja, ukupnu i pojedinačnu potrošnju energije.",
+    "smart_support_helps_3": "3. Rješavanje problema",
+    "CL_SL_CM_about_usage_month_desc": "Prikazani podaci su procjene, a ne točna mjerenja.\n Naše se procjene temelje na kontroliranim testovima, tako da vaši stvarni rezultati mogu varirati.\n Korištenje energije u stvarnom svijetu ovisi o vašem specifičnom okruženju i navikama.",
+    "CL_CF_HP_no_card_key": "Nema kartice"
 }
