--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Utilizzare la scatola dell'umidità per regolare l'umidità",
     "same_day": "Lo stesso giorno",
     "w_temp_set": "Che temperatura impostare?",
+    "asko": "ASKO",
     "eco_meter": "Ecometro",
     "asko_eco_meter_desc": "## è un utile indicatore intelligente per determinare il tuo impatto ambientale in base al programma scelto e alle opzioni extra in termini di consumo di energia, acqua e detersivo.",
     "wm86_autodose_desc": "Invece di fare fatica, lasciate che la lavatrice misuri esattamente il giusto dosaggio di detersivo. Le nostre lavatrici con sistema Auto Dose misurano il detersivo in base al carico di lavaggio, al livello di sporco, alla durezza dell'acqua, al tipo di programma e alla temperatura. Un dosaggio sempre perfetto e niente più sovradosaggi. Qui è possibile regolare le impostazioni predefinite per il dosaggio automatico.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Scopri di più sulle funzionalità principali di Smart Support",
     "smart_energy_helps": "Smart Energy ti aiuta a monitorare e mantenere i dispositivi in uno stato di efficienza energetica",
     "smart_energy_helps_1_content": "Modalità ECO attiva dei tuoi elettrodomestici. Analizza statisticamente il consumo energetico del dispositivo. Monitora i dati di risparmio energetico e imposta un obiettivo di utilizzo energetico.",
-    "smart_energy_helps_2": "2. Monitoraggio del consumo energetico",
-    "smart_energy_helps_2_content": "Calcola il consumo di energia e acqua dell'intera casa su base giornaliera, mensile e annuale. Puoi anche visualizzare le statistiche di consumo dei singoli dispositivi, la percentuale di consumo energetico di ciascun dispositivo nel periodo selezionato, il consumo energetico complessivo e individuale.",
-    "smart_energy_helps_3": "3. Assistente energetico",
     "smart_energy_helps_3_content": "Imposta obiettivi di risparmio energetico e invia notifiche agli utenti quando vengono raggiunti i valori target impostati.",
     "air_care_helps": "Air Care si propone di risolvere il controllo intelligente della temperatura, dell'umidità e dell'aria in tutta la casa",
-    "air_care_helps_1": "1.Valutazione dell'aria",
-    "air_care_helps_1_content": "Monitora in tempo reale lo stato di temperatura e umidità di ogni stanza e fornisci valutazioni e promemoria sul comfort in base alle condizioni dell'aria",
-    "air_care_helps_2": "2.Ottimizzazione con un clic",
     "air_care_helps_2_content": "L'ottimizzazione può essere avviata con un clic. Forniamo cinque diversi schemi di ottimizzazione. Ogni modalità di ottimizzazione può essere regolata in base alle esigenze dell'utente, fornendo agli utenti soluzioni di ottimizzazione personalizzate.",
-    "air_care_helps_3": "Vista della stanza 3.3D",
     "air_care_helps_3_content": "Tieni sotto controllo lo stato della tua stanza e degli elettrodomestici attraverso una visualizzazione 3D dettagliata della tua casa.",
     "smart_laundry_key": "Lavanderia intelligente",
     "smart_laundry_helps": "Smart Laundry offre consigli di lavaggio esperti, un assistente di lavanderia intuitivo e una gestione del detersivo senza soluzione di continuità, garantendo un'esperienza di lavanderia senza pari",
-    "smart_laundry_helps_1": "1.Lavanderia personalizzata",
     "smart_laundry_helps_1_content": "Cicli personalizzati in base ai profili e alle preferenze dell'utente, con tag per diverse stagioni, attività all'aperto, cura del bambino e altro ancora.",
-    "smart_laundry_helps_2": "2. Gestione dei detersivi",
     "smart_laundry_helps_2_content": "Ottimizza la tua routine di lavaggio con Smart Home Laundry Assistant, riconosci automaticamente le marche di detersivo e gestisci il dosaggio nella tua lavatrice.",
-    "smart_laundry_helps_3": "3.Rapporto sull'utilizzo della lavanderia",
     "smart_laundry_helps_3_content": "Visualizza report settimanali, mensili e annuali sull'utilizzo del programma di lavaggio da parte dell'utente, nonché sul consumo mensile di acqua ed elettricità e sulla pulizia del cestello.",
     "smart_kitchen_key": "Cucina intelligente",
     "smart_kitchen_helps": "Smart Kitchen ti offre un'esperienza di cucina intelligente senza precedenti, che include ricette intelligenti, abbinamenti di vini, assistenti di ricette e gestione di ingredienti, vini e bevande",
-    "smart_kitchen_helps_1": "1.Ricetta dello chef",
     "smart_kitchen_helps_1_content": "Prova le ricette dei maestri con sapori unici cucinati in forni diversi, ognuno dei quali segue le istruzioni di cottura della ricetta con un solo clic.",
-    "smart_kitchen_helps_2": "2. Assistente alle ricette",
     "smart_kitchen_helps_2_content": "Personalizza e genera ricette in base alle tue preferenze personali, tra cui alimentazione, cucina, stile di vita e allergie.",
-    "smart_kitchen_helps_3": "3. Gestione alimentare",
     "smart_kitchen_helps_3_content": "Aggiungi e visualizza i dettagli degli ingredienti usati di frequente, come la data di scadenza. Abbina rapidamente le ricette alimentari adatte e invia gli ingredienti mancanti alla lista della spesa.",
-    "smart_kitchen_helps_4": "Gestione delle bevande",
     "smart_kitchen_helps_4_content": "Aggiungi bevande e crea una lista delle bevande, visualizza informazioni dettagliate su ogni singola bevanda memorizzata.",
-    "smart_kitchen_helps_5": "Vino Inventario",
     "smart_kitchen_helps_5_content": "Esegui la scansione per creare un elenco di cantine vinicole con VIno, imposta promemoria per il periodo ottimale di consumo e consiglia abbinamenti gastronomici in base al tipo di vino.",
-    "smart_kitchen_helps_6": "6. Lista della spesa",
     "smart_kitchen_helps_6_content": "Genera la lista della spesa in base alla ricetta, contrassegna gli articoli che già possiedi e hai acquistato come riferimento per la spesa.",
     "smart_support_key": "Supporto intelligente",
     "smart_support_helps": "Smart Support fornisce assistenza completa per i tuoi dispositivi. Puoi ottenere consigli di pulizia e cura per la manutenzione quotidiana, autodiagnosi con un clic per controllare lo stato di tutti i tuoi dispositivi e fornire possibili soluzioni per eventuali operazioni anomale",
-    "smart_support_helps_1": "1. Suggerimenti per la pulizia e la manutenzione",
     "smart_support_helps_1_content": "Fornire suggerimenti per la pulizia e la manutenzione quotidiana del prodotto.",
-    "smart_support_helps_2": "2. Autodiagnosi con un clic",
     "smart_support_helps_2_content": "Autoispezione con un clic per comprendere lo stato di tutti gli elettrodomestici. Quando viene rilevato un problema, fornire soluzioni consigliate.",
-    "smart_support_helps_3": "Risoluzione dei problemi",
     "smart_support_helps_3_content": "Quando il dispositivo presenta un problema, gli utenti possono intervenire autonomamente, individuando e risolvendo il problema in base alla guida ai guasti.",
-    "smart_support_helps_4": "4.Segnala il problema",
     "smart_support_helps_4_content": "In caso di problemi con l'APP o con l'utilizzo del prodotto, gli utenti possono inviare un feedback online per ridurre i tempi di comunicazione con il call center.",
-    "smart_support_helps_5": "5.Contattaci",
     "smart_support_helps_5_content": "Gli utenti possono contattarci telefonicamente, via email e tramite il sito web ufficiale.",
     "block_key": "Bloccare",
     "guide_tips_device_1": "Questa è la <b> nuova scheda della home page. </b>",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Molto caldo",
     "CL_CF_HP_card": "Carta",
     "CL_CF_HP_enter_card_name": "Inserisci il nome della carta...",
-    "smart_energy_helps_1": "1. One-Click Eco",
     "CL_CF_FM_select_at_list_one_ingredient": "Seleziona almeno un ingrediente.",
     "CL_CF_FM_no_shopping_items": "Nessun articolo da acquistare",
     "CL_CF_FM_add_food_from_below": "Aggiungere il cibo dal basso",
     "CL_CF_FM_x_has_been_removed": "** è stato rimosso.",
-    "CL_CF_CO_waiting": "in attesa"
+    "CL_CF_CO_waiting": "in attesa",
+    "CL_CF_HP_delete_card_tips": "Sei sicuro di voler eliminare la carta?",
+    "smart_energy_helps_1": "1. One-Click Eco",
+    "smart_energy_helps_2": "2. Monitoraggio del consumo energetico",
+    "smart_energy_helps_3": "3. Assistente energetico",
+    "air_care_helps_1": "1. Valutazione dell'aria",
+    "smart_laundry_helps_2": "2. Gestione dei detersivi",
+    "air_care_helps_2": "2. Ottimizzazione con un clic",
+    "air_care_helps_3": "3. Vista della stanza in 3D",
+    "smart_laundry_helps_1": "1. Lavanderia personalizzata",
+    "smart_laundry_helps_3": "3. Rapporto sull'utilizzo della lavanderia",
+    "smart_kitchen_helps_1": "1. Ricetta dello chef",
+    "smart_kitchen_helps_2": "2. Assistente alle ricette",
+    "smart_kitchen_helps_3": "3. Gestione alimentare",
+    "smart_kitchen_helps_4": "4. Gestione delle bevande",
+    "smart_kitchen_helps_5": "5. Vino Inventario",
+    "smart_kitchen_helps_6": "6. Lista della spesa",
+    "smart_support_helps_1": "1. Suggerimenti per la pulizia e la manutenzione",
+    "smart_support_helps_2": "2. Autodiagnosi con un clic",
+    "smart_support_helps_4": "4. Segnala un problema",
+    "smart_support_helps_5": "5. Contattaci",
+    "air_care_helps_1_content": "Monitora in tempo reale la temperatura e l'umidità di ogni stanza e fornisci valutazioni del comfort e promemoria in base alle condizioni dell'aria.",
+    "smart_energy_helps_2_content": "Calcola il consumo di energia e acqua dell'intera casa su base giornaliera, mensile e annuale. Puoi anche visualizzare le statistiche di consumo dei singoli dispositivi, la percentuale di consumo energetico di ciascun dispositivo nel periodo selezionato, il consumo energetico complessivo e individuale.",
+    "smart_support_helps_3": "3. Risoluzione dei problemi",
+    "CL_SL_CM_about_usage_month_desc": "I dati indicati sono stime, non misurazioni esatte.\n Le nostre stime si basano su test controllati, pertanto i risultati effettivi potrebbero variare.\n Il consumo energetico nel mondo reale dipende dall'ambiente e dalle abitudini specifiche.",
+    "CL_CF_HP_no_card_key": "Nessuna carta"
 }
