--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "습도 조절을 위해 습도 상자를 사용하십시오.",
     "same_day": "당일",
     "w_temp_set": "온도를 어디까지 설정할까요? (Ondo-reul eodikkaji seonghap halkkayo?)",
+    "asko": "아스코",
     "eco_meter": "에코미터",
     "asko_eco_meter_desc": "##은 에너지, 물, 세제 소비와 관련하여 선택한 프로그램과 추가 옵션을 기반으로 환경에 미치는 영향을 판단하는 데 유용한 스마트 지표입니다.",
     "wm86_autodose_desc": "힘들게 세탁기를 돌리는 대신 세탁기가 세제의 정확한 양을 측정하게 하세요. 자동 투여 시스템이 있는 세탁기는 세탁물, 오염도, 물의 경도, 프로그램 유형 및 온도에 따라 세제를 측정합니다. 항상 완벽한 투여량이고 더 이상 과용하지 않습니다. 여기서 자동 투여에 대한 기본 설정을 조정할 수 있습니다.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Smart Support의 주요 기능에 대해 자세히 알아보세요",
     "smart_energy_helps": "Smart Energy는 기기를 모니터링하고 에너지 효율적인 상태로 유지하는 데 도움이 됩니다.",
     "smart_energy_helps_1_content": "가전제품의 활성 ECO 모드. 기기 에너지 소비량을 통계적으로 분석합니다. 에너지 절약 데이터를 모니터링하고 에너지 사용 목표를 설정합니다.",
-    "smart_energy_helps_2": "2. 에너지 소비 모니터링",
-    "smart_energy_helps_2_content": "집 전체의 전기와 물 소비량을 일일, 월간, 연간으로 계산합니다. 또한, 개별 기기의 소비 통계, 선택한 기간 내 각 기기의 에너지 소비 비중, 전체 및 개별 에너지 소비량을 볼 수 있습니다.",
-    "smart_energy_helps_3": "3. 에너지 어시스턴트",
     "smart_energy_helps_3_content": "에너지 절약 목표를 설정하고, 목표치에 도달하면 사용자에게 알림을 보냅니다.",
     "air_care_helps": "에어케어는 집 전체의 온도, 습도, 공기를 지능적으로 제어하는 것을 목표로 합니다.",
-    "air_care_helps_1": "1. 공기 평가",
-    "air_care_helps_1_content": "각 객실의 온도, 습도 상태를 실시간으로 모니터링하고, 공기 상태에 따른 쾌적도 평가 및 알림 제공",
-    "air_care_helps_2": "2. 원클릭 최적화",
     "air_care_helps_2_content": "한 번의 클릭으로 최적화를 시작할 수 있습니다. 우리는 다섯 가지의 다른 최적화 계획을 제공합니다. 각 최적화 모드는 사용자 요구에 따라 조정될 수 있으며, 사용자에게 맞춤형 최적화 솔루션을 제공합니다.",
-    "air_care_helps_3": "3.3D 룸 뷰",
     "air_care_helps_3_content": "집안의 상세한 3D 시각화를 통해 방의 상태와 가전제품을 확인하세요.",
     "smart_laundry_key": "스마트 세탁",
     "smart_laundry_helps": "Smart Laundry는 전문적인 세탁 팁, 직관적인 세탁 보조 기능, 원활한 세제 관리를 제공하여 비교할 수 없는 세탁 경험을 보장합니다.",
-    "smart_laundry_helps_1": "1. 맞춤형 세탁",
     "smart_laundry_helps_1_content": "사용자 프로필과 선호도에 따른 개인화된 사이클을 제공하며, 다양한 계절, 야외 활동, 아기 돌보기 등에 따른 태그도 제공됩니다.",
-    "smart_laundry_helps_2": "2. 세제 관리",
     "smart_laundry_helps_2_content": "스마트 홈 세탁 도우미로 세탁 루틴을 최적화하고, 세제 브랜드를 자동으로 인식하고 세탁기의 세탁량을 관리하세요.",
-    "smart_laundry_helps_3": "3. 세탁물 사용 보고서",
     "smart_laundry_helps_3_content": "사용자의 세탁 프로그램 사용에 대한 주간, 월간, 연간 보고서와 함께 월별 물과 전기 사용량, 드럼 세척에 대한 정보도 표시합니다.",
     "smart_kitchen_key": "스마트 키친",
     "smart_kitchen_helps": "Smart Kitchen은 지능형 레시피, 와인 페어링, 레시피 도우미, 재료, 와인, 음료 관리 등을 포함한 전례 없는 지능형 요리 경험을 제공합니다.",
-    "smart_kitchen_helps_1": "1. 셰프 레시피",
     "smart_kitchen_helps_1_content": "한 번의 클릭만으로 레시피의 조리 지침을 따라 다양한 오븐에서 조리하면 독특한 맛을 느낄 수 있는 마스터 레시피를 경험해 보세요.",
-    "smart_kitchen_helps_2": "2.레시피 어시스턴트",
     "smart_kitchen_helps_2_content": "영양, 요리법, 라이프스타일, 알레르기 등 개인 취향에 맞춰 요리법을 맞춤 설정하고 생성하세요.",
-    "smart_kitchen_helps_3": "3. 식품 관리",
     "smart_kitchen_helps_3_content": "유통기한과 같은 자주 사용되는 재료 세부 정보를 추가하고 확인합니다. 적합한 음식 레시피를 빠르게 매치하고 누락된 재료를 쇼핑 목록에 보냅니다.",
-    "smart_kitchen_helps_4": "감시 장치",
     "smart_kitchen_helps_4_content": "음료를 추가하고 음료 목록을 만들고, 저장된 모든 음료에 대한 자세한 정보를 확인하세요.",
-    "smart_kitchen_helps_5": "와인 인벤토리",
     "smart_kitchen_helps_5_content": "VIvino로 와인 저장고 목록을 만들고, 최적의 음용 기간에 대한 알림을 설정하고, 와인 유형에 따라 음식 페어링을 추천해 드립니다.",
-    "smart_kitchen_helps_6": "6. 쇼핑 목록",
     "smart_kitchen_helps_6_content": "레시피를 기반으로 쇼핑 목록을 생성하고, 이미 소유하고 획득한 품목을 쇼핑 참고 자료로 표시하세요.",
     "smart_support_key": "스마트 지원",
     "smart_support_helps": "Smart Support는 귀하의 기기에 대한 포괄적인 지원을 제공합니다. 일상적인 유지 관리를 위한 세척 및 관리 팁을 얻을 수 있으며, 모든 기기의 상태를 확인하고 비정상적인 작동에 대한 가능한 솔루션을 제공하는 원클릭 자가 진단을 받을 수 있습니다.",
-    "smart_support_helps_1": "1. 청소 및 유지 관리 팁",
     "smart_support_helps_1_content": "제품의 일상적인 청소 및 유지관리에 대한 제안을 해주세요.",
-    "smart_support_helps_2": "2. 원클릭 셀프 진단",
     "smart_support_helps_2_content": "원클릭 셀프 검사로 모든 가전제품의 상태를 파악합니다. 문제가 감지되면 권장 솔루션을 제공합니다.",
-    "smart_support_helps_3": "문제 해결",
     "smart_support_helps_3_content": "장치에 문제가 생기면 사용자는 스스로 문제를 해결하고, 오류 가이드에 따라 문제를 해결할 수 있습니다.",
-    "smart_support_helps_4": "4. 문제 보고",
     "smart_support_helps_4_content": "APP나 제품 사용에 문제가 있는 경우, 사용자는 온라인으로 피드백을 할 수 있어 콜센터와의 소통 시간을 줄일 수 있습니다.",
-    "smart_support_helps_5": "5. 문의하기",
     "smart_support_helps_5_content": "사용자는 전화, 이메일, 공식 웹사이트를 통해 당사에 문의할 수 있습니다.",
     "block_key": "차단하다",
     "guide_tips_device_1": "이것은 <b> 새로운 홈페이지 탭입니다. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "장치에 주의가 필요합니다.",
     "CL_DV_RF_next_cleaning_will_be": "다음 청소는 **입니다",
     "CL_DV_RF_last_clean_was": "마지막 청소는 **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "청소 및 관리 팁",
     "CL_CF_AS_needs_attention": "장치에 주의가 필요합니다.",
     "CL_CF_AS_run_normal_condition": "귀하의 기기는 정상적인 상태에서 작동합니다.",
     "CL_DV_WM_offline_content1": "기기가 연결되어 있고 전원이 켜져 있는지 확인하세요.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "매우 뜨겁다",
     "CL_CF_HP_card": "카드",
     "CL_CF_HP_enter_card_name": "카드 이름을 입력하세요...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "최소한 하나의 재료를 선택하세요.",
     "CL_CF_FM_no_shopping_items": "쇼핑 품목이 없습니다",
     "CL_CF_FM_add_food_from_below": "아래에서 음식을 추가하세요",
     "CL_CF_FM_x_has_been_removed": "** 삭제되었습니다.",
-    "CL_CF_CO_waiting": "대기 중"
+    "CL_CF_CO_waiting": "대기 중",
+    "CL_CF_HP_delete_card_tips": "카드를 삭제하시겠습니까?",
+    "smart_energy_helps_1": "1. 원클릭 에코",
+    "smart_energy_helps_2": "2. 에너지 소비 모니터링",
+    "smart_energy_helps_3": "3. 에너지 어시스턴트",
+    "air_care_helps_1": "1. 공기 평가",
+    "smart_laundry_helps_2": "2. 세제 관리",
+    "air_care_helps_2": "2. 원클릭 최적화",
+    "air_care_helps_3": "3. 3D 룸 뷰",
+    "smart_laundry_helps_1": "1. 맞춤형 세탁",
+    "smart_laundry_helps_3": "3. 세탁물 사용 보고서",
+    "smart_kitchen_helps_1": "1. 셰프 레시피",
+    "smart_kitchen_helps_2": "2. 레시피 어시스턴트",
+    "smart_kitchen_helps_3": "3. 식품 관리",
+    "smart_kitchen_helps_4": "4. 감시 장치",
+    "smart_kitchen_helps_5": "5. 와인 인벤토리",
+    "smart_kitchen_helps_6": "6. 쇼핑 목록",
+    "smart_support_helps_1": "1. 청소 및 유지 관리 팁",
+    "smart_support_helps_2": "2. 원클릭 셀프 진단",
+    "smart_support_helps_4": "4. 문제 보고",
+    "smart_support_helps_5": "5. 문의하기",
+    "air_care_helps_1_content": "각 객실의 온도와 습도 상태를 실시간으로 모니터링하고, 에어컨 상태에 따라 편안함 평가와 알림을 제공합니다.",
+    "smart_energy_helps_2_content": "매일, 매월, 매년 전체 집의 전력 및 물 소비량을 계산합니다. 또한 개별 기기의 소비 통계, 선택한 기간 내 각 기기의 에너지 소비 비율, 전체 및 개별 에너지 소비량을 볼 수 있습니다.",
+    "smart_support_helps_3": "3. 문제 해결",
+    "CL_SL_CM_about_usage_month_desc": "표시된 데이터는 추정치일 뿐 정확한 측정치가 아닙니다.\n 당사의 추정치는 통제된 실험을 기반으로 하므로 실제 결과는 다를 수 있습니다.\n 실제 에너지 사용량은 개인의 환경과 습관에 따라 달라집니다.",
+    "CL_CF_HP_no_card_key": "카드 없음"
 }
