--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Bruk fuktighetsboks for å regulere fuktigheten",
     "same_day": "På samme dag",
     "w_temp_set": "Hvilken temperatur skal stilles inn?",
+    "asko": "ASKO",
     "eco_meter": "Økomåler",
     "asko_eco_meter_desc": "## er en nyttig smart indikator for å bestemme miljøpåvirkningen din basert på valgt program og ekstra alternativer når det kommer til energi-, vann- og vaskemiddelforbruk.",
     "wm86_autodose_desc": "I stedet for å gjøre det til en kamp, ​​la vaskemaskinen måle nøyaktig riktig dosering av vaskemiddel. Våre vaskemaskiner med Auto Dose-system måler vaskemiddelet mot vaskemengde, smussnivå, vannhardhet, programtype og temperatur. Alltid perfekt dosering og ikke mer overdosering. Her kan du justere standardinnstillingene for Auto Dose.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Lær mer om nøkkelfunksjonene til Smart Support",
     "smart_energy_helps": "Smart Energy hjelper deg med å overvåke og holde enheter i energieffektiv tilstand",
     "smart_energy_helps_1_content": "Aktiv ECO-modus for apparatene dine. Analyser enhetens energiforbruk statistisk. Overvåk energisparedata og sett energiforbruksmål.",
-    "smart_energy_helps_2": "2. Overvåking av energiforbruk",
-    "smart_energy_helps_2_content": "Beregn hele husets strøm- og vannforbruk på daglig, månedlig og årlig basis. du kan også se forbruksstatistikken til individuelle enheter, andelen av energiforbruket til hver enhet innenfor den valgte perioden, det totale og individuelle energiforbruket.",
-    "smart_energy_helps_3": "3.Energiassistent",
     "smart_energy_helps_3_content": "Sett energisparingsmål, og send varsler til brukerne når de fastsatte målverdiene er nådd.",
     "air_care_helps": "Air care har som mål å løse intelligent styring av temperatur, fuktighet og luft i hele huset",
-    "air_care_helps_1": "1. Luftevaluering",
-    "air_care_helps_1_content": "Overvåk temperatur- og fuktighetsstatusen til hvert rom i sanntid, og gi komfortevalueringer og påminnelser basert på klimaanlegget",
-    "air_care_helps_2": "2. Optimalisering med ett klikk",
     "air_care_helps_2_content": "Optimalisering kan startes med ett klikk. Vi tilbyr fem forskjellige optimaliseringsopplegg. Hver optimaliseringsmodus kan justeres i henhold til brukerbehov, og gir brukerne tilpassede optimaliseringsløsninger.",
-    "air_care_helps_3": "3.3D romutsikt",
     "air_care_helps_3_content": "Hold øye med rommets status og utstyr gjennom en detaljert 3D-visualisering av hjemmet ditt.",
     "smart_laundry_key": "Smart Klesvask",
     "smart_laundry_helps": "Smart Laundry tilbyr ekspert vasketips, en intuitiv vaskehjelp og sømløs vaskemiddelhåndtering, som sikrer en uovertruffen vaskeopplevelse",
-    "smart_laundry_helps_1": "1. Tilpasset vaskeri",
     "smart_laundry_helps_1_content": "Personlig tilpassede sykluser basert på brukerprofiler og preferanser, med tagger for ulike årstider, utendørsaktiviteter, babypleie og mer.",
-    "smart_laundry_helps_2": "2.Vaskemiddelbehandling",
     "smart_laundry_helps_2_content": "Optimaliser vaskerutinen din med Smart Home Laundry Assistant, gjenkjenne vaskemiddelmerker automatisk og administrer doseringen i vaskemaskinen din.",
-    "smart_laundry_helps_3": "3. Rapport om bruk av klesvask",
     "smart_laundry_helps_3_content": "Viser ukentlige, månedlige og årlige rapporter om brukerens bruk av vaskeprogrammet, samt månedens vann- og strømforbruk og trommelrengjøring.",
     "smart_kitchen_key": "Smart kjøkken",
     "smart_kitchen_helps": "Smart Kitchen gir deg en enestående intelligent matlagingsopplevelse, inkludert intelligente oppskrifter, vinkombinasjoner, oppskriftsassistenter og ingrediens-, vin- og drikkehåndtering",
-    "smart_kitchen_helps_1": "1.Kokkoppskrift",
     "smart_kitchen_helps_1_content": "Opplev mesteroppskrifter i unike smaker når de tilberedes i forskjellige ovner, som følger oppskriftens kokeanvisninger med bare ett klikk.",
-    "smart_kitchen_helps_2": "2.Recipe Assistant",
     "smart_kitchen_helps_2_content": "Tilpass og generer oppskrifter basert på dine personlige preferanser, inkludert ernæring, mat, livsstil og allergier.",
-    "smart_kitchen_helps_3": "3. Mathåndtering",
     "smart_kitchen_helps_3_content": "Legg til og se detaljer om ofte brukte ingredienser som utløpsdato. Match raskt passende matoppskrifter og sendte manglende ingredienser til handlelisten.",
-    "smart_kitchen_helps_4": "Drikkehåndtering",
     "smart_kitchen_helps_4_content": "Legg til drinker og lag en drikkeliste, se detaljert informasjon om hver enkelt lagret drikking.",
-    "smart_kitchen_helps_5": "Vin Lageroversikt",
     "smart_kitchen_helps_5_content": "Skann for å lage vinkjellerliste fra VIvino, angi påminnelser for optimal drikkeperiode og anbefal matsammenkobling basert på vintype.",
-    "smart_kitchen_helps_6": "6. Handleliste",
     "smart_kitchen_helps_6_content": "Generer handlelisten basert på oppskriften, merk varene du allerede eier og har kjøpt som handlereferanse.",
     "smart_support_key": "Smart støtte",
     "smart_support_helps": "Smart Support gir omfattende assistanse for enhetene dine. Du kan få rengjørings- og pleietips for daglig vedlikehold, selvdiagnose med ett klikk for å sjekke statusen til alle enhetene dine og gi mulige løsninger for eventuelle unormale operasjoner",
-    "smart_support_helps_1": "1.Rengjørings- og vedlikeholdstips",
     "smart_support_helps_1_content": "Gi forslag til daglig rengjøring og vedlikehold av produktet.",
-    "smart_support_helps_2": "2.Ett-klikk self Dignosis",
     "smart_support_helps_2_content": "Ett-klikks selvinspeksjon for å forstå statusen til alle husholdningsapparater. Når et problem oppdages, gi anbefalte løsninger.",
-    "smart_support_helps_3": "Feilsøking",
     "smart_support_helps_3_content": "Når enheten har et problem, kan brukere selvhjelpe, feilsøke og løse problemet i henhold til feilguiden.",
-    "smart_support_helps_4": "4. Rapporter problem",
     "smart_support_helps_4_content": "Hvis det er problemer med APP-en eller produktbruken, kan brukere gi tilbakemelding på nettet for å redusere kommunikasjonstiden med kundesenteret.",
-    "smart_support_helps_5": "5.Kontakt oss",
     "smart_support_helps_5_content": "Brukere kan kontakte oss via telefon, e-post og offisiell nettside.",
     "block_key": "Blokkere",
     "guide_tips_device_1": "Dette er kategorien <b> ny hjemmeside. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Enheten trenger oppmerksomhet.",
     "CL_DV_RF_next_cleaning_will_be": "Neste rengjøring vil være **",
     "CL_DV_RF_last_clean_was": "Siste rengjøring var **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Rengjørings- og pleietips",
     "CL_CF_AS_needs_attention": "Enheten trenger oppmerksomhet.",
     "CL_CF_AS_run_normal_condition": "Enheten din kjører i normal tilstand.",
     "CL_DV_WM_offline_content1": "Sjekk om apparatet er plugget inn og strømmen er på.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Ekstra varmt",
     "CL_CF_HP_card": "Kort",
     "CL_CF_HP_enter_card_name": "Skriv inn kortnavn...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Velg minst én ingrediens.",
     "CL_CF_FM_no_shopping_items": "Ingen shoppingvarer",
     "CL_CF_FM_add_food_from_below": "Legg til mat fra undersiden",
     "CL_CF_FM_x_has_been_removed": "** er fjernet.",
-    "CL_CF_CO_waiting": "venter"
+    "CL_CF_CO_waiting": "venter",
+    "CL_CF_HP_delete_card_tips": "Er du sikker på at du vil slette kortet?",
+    "smart_energy_helps_1": "1. Ett-klikk Eco",
+    "smart_energy_helps_2": "2. Energiforbruksovervåking",
+    "smart_energy_helps_3": "3. Energiassistent",
+    "air_care_helps_1": "1. Luftevaluering",
+    "smart_laundry_helps_2": "2. Vaskemiddelhåndtering",
+    "air_care_helps_2": "2. Optimalisering med ett klikk",
+    "air_care_helps_3": "3. 3D romutsikt",
+    "smart_laundry_helps_1": "1. Tilpasset vaskeri",
+    "smart_laundry_helps_3": "3. Rapport om bruk av klesvask",
+    "smart_kitchen_helps_1": "1. Kokkeoppskrift",
+    "smart_kitchen_helps_2": "2. Oppskriftsassistent",
+    "smart_kitchen_helps_3": "3. Mathåndtering",
+    "smart_kitchen_helps_4": "4. Drikkehåndtering",
+    "smart_kitchen_helps_5": "5. Vin Lageroversikt",
+    "smart_kitchen_helps_6": "6. Handleliste",
+    "smart_support_helps_1": "1. Rengjørings- og vedlikeholdstips",
+    "smart_support_helps_2": "2. Ett-klikks self Dignosis",
+    "smart_support_helps_4": "4. Rapporter problem",
+    "smart_support_helps_5": "5. Kontakt oss",
+    "air_care_helps_1_content": "Overvåk temperatur- og fuktighetsstatusen til hvert rom i sanntid, og gi komfortevalueringer og påminnelser basert på klimaanlegget.",
+    "smart_energy_helps_2_content": "Beregn hele husets strøm- og vannforbruk på daglig, månedlig og årlig basis. Du kan også se forbruksstatistikken til individuelle enheter, andelen av energiforbruket til hver enhet innenfor den valgte perioden, det totale og individuelle energiforbruket.",
+    "smart_support_helps_3": "3. Feilsøking",
+    "CL_SL_CM_about_usage_month_desc": "Dataene som vises er estimater, ikke eksakte målinger.\n Våre estimater er basert på kontrollerte tester, så de faktiske resultatene dine kan variere.\n Den virkelige energibruken avhenger av ditt spesifikke miljø og dine vaner.",
+    "CL_CF_HP_no_card_key": "Ingen kort"
 }
