--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Используйте коробку влажности для регулирования влажности.",
     "same_day": "В тот же день",
     "w_temp_set": "Какую температуру установить?",
+    "asko": "АСКО",
     "eco_meter": "Эко метр",
     "asko_eco_meter_desc": "## — это полезный интеллектуальный индикатор, позволяющий определить ваше воздействие на окружающую среду на основе выбранной программы и дополнительных опций, когда речь идет о потреблении энергии, воды и моющих средств.",
     "wm86_autodose_desc": "Вместо того, чтобы доводить дело до борьбы, позвольте стиральной машине точно измерить правильную дозировку моющего средства. Наши стиральные машины с системой Auto Dose измеряют моющее средство в зависимости от загрузки белья, уровня загрязнения, жесткости воды, типа программы и температуры. Всегда идеальная дозировка и больше никаких передозировок. Здесь вы можете настроить параметры по умолчанию для Auto Dose.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Узнайте больше о ключевых функциях Smart Support",
     "smart_energy_helps": "Smart Energy помогает вам контролировать и поддерживать устройства в состоянии энергоэффективности.",
     "smart_energy_helps_1_content": "Активируйте режим ECO для ваших приборов. Статистически анализируйте потребление энергии устройствами. Отслеживайте данные по экономии энергии и устанавливайте целевые показатели потребления энергии.",
-    "smart_energy_helps_2": "2. Мониторинг потребления энергии",
-    "smart_energy_helps_2_content": "Рассчитайте потребление электроэнергии и воды во всем доме за день, месяц и год. Вы также можете просмотреть статистику потребления отдельными устройствами, долю потребления энергии каждым устройством за выбранный период, общее и индивидуальное потребление энергии.",
-    "smart_energy_helps_3": "3.Энергетический помощник",
     "smart_energy_helps_3_content": "Устанавливайте цели по экономии энергии и отправляйте уведомления пользователям при достижении установленных целевых значений.",
     "air_care_helps": "Целью Air Care является решение интеллектуального управления температурой, влажностью и воздухом во всем доме.",
-    "air_care_helps_1": "1.Оценка воздуха",
-    "air_care_helps_1_content": "Контролируйте температуру и влажность в каждой комнате в режиме реального времени, а также предоставляйте оценки комфорта и напоминания на основе состояния воздуха.",
-    "air_care_helps_2": "2.Оптимизация в один клик",
     "air_care_helps_2_content": "Оптимизацию можно запустить одним щелчком мыши. Мы предлагаем пять различных схем оптимизации. Каждый режим оптимизации можно настроить в соответствии с потребностями пользователя, предоставляя пользователям индивидуальные решения по оптимизации.",
-    "air_care_helps_3": "3.3D Вид комнаты",
     "air_care_helps_3_content": "Следите за состоянием вашей комнаты и бытовой техники с помощью подробной 3D-визуализации вашего дома.",
     "smart_laundry_key": "Умная прачечная",
     "smart_laundry_helps": "Smart Laundry предлагает профессиональные советы по стирке, интуитивно понятного помощника по стирке и бесперебойное управление моющими средствами, гарантируя непревзойденный опыт стирки.",
-    "smart_laundry_helps_1": "1. Индивидуальная стирка",
     "smart_laundry_helps_1_content": "Персонализированные циклы на основе профилей и предпочтений пользователей с тегами для разных сезонов, активного отдыха, ухода за детьми и многого другого.",
-    "smart_laundry_helps_2": "2.Управление моющими средствами",
     "smart_laundry_helps_2_content": "Оптимизируйте процесс стирки с помощью Smart Home Laundry Assistant, который автоматически распознает марки моющих средств и управляет дозировкой в стиральной машине.",
-    "smart_laundry_helps_3": "3.Отчет об использовании прачечной",
     "smart_laundry_helps_3_content": "Отображает еженедельные, ежемесячные и годовые отчеты об использовании пользователем программы стирки, а также данные о потреблении воды и электроэнергии за месяц и очистке барабана.",
     "smart_kitchen_key": "Умная кухня",
     "smart_kitchen_helps": "Smart Kitchen предоставляет вам беспрецедентный интеллектуальный опыт приготовления пищи, включая интеллектуальные рецепты, сочетания вин, помощников по рецептам, а также управление ингредиентами, вином и напитками.",
-    "smart_kitchen_helps_1": "1.Рецепт от шеф-повара",
     "smart_kitchen_helps_1_content": "Попробуйте рецепты мастера с уникальными вкусами, приготовленные в разных печах, следуя инструкциям по приготовлению рецепта, всего одним щелчком мыши.",
-    "smart_kitchen_helps_2": "2. Помощник по рецептам",
     "smart_kitchen_helps_2_content": "Создавайте и настраивайте рецепты на основе ваших личных предпочтений, включая питание, кухню, образ жизни и аллергии.",
-    "smart_kitchen_helps_3": "3.Управление продуктами питания",
     "smart_kitchen_helps_3_content": "Добавьте и просмотрите часто используемые ингредиенты, такие как срок годности. Быстро сопоставьте подходящие рецепты еды и отправьте недостающие ингредиенты в список покупок.",
-    "smart_kitchen_helps_4": "Управление напитками",
     "smart_kitchen_helps_4_content": "Добавьте напитки и создайте список выпивки, просматривайте подробную информацию о каждой сохраненной выпивке.",
-    "smart_kitchen_helps_5": "Коллекция вин",
     "smart_kitchen_helps_5_content": "Сканируйте, чтобы создать список винных погребов от VIvino, установить напоминания об оптимальном времени употребления вина и рекомендовать сочетания блюд с определенным типом вина.",
-    "smart_kitchen_helps_6": "6.Список покупок",
     "smart_kitchen_helps_6_content": "Составьте список покупок на основе рецепта, отметьте те товары, которые у вас уже есть и которые вы приобрели, в качестве ссылки на покупки.",
     "smart_support_key": "Умная поддержка",
     "smart_support_helps": "Smart Support предоставляет всестороннюю помощь для ваших устройств. Вы можете получить советы по очистке и уходу для ежедневного обслуживания, самодиагностику одним щелчком для проверки состояния всех ваших устройств и предоставить возможные решения для любых ненормальных операций",
-    "smart_support_helps_1": "1.Советы по чистке и обслуживанию",
     "smart_support_helps_1_content": "Дайте рекомендации по ежедневной чистке и уходу за изделием.",
-    "smart_support_helps_2": "2.Самодиагностика в один клик",
     "smart_support_helps_2_content": "Самопроверка одним щелчком мыши для понимания состояния всех бытовых приборов. При обнаружении проблемы предоставьте рекомендуемые решения.",
-    "smart_support_helps_3": "Поиск неисправностей",
     "smart_support_helps_3_content": "При возникновении неполадок в работе устройства пользователи могут самостоятельно устранить неполадки, следуя руководству по устранению неисправностей.",
-    "smart_support_helps_4": "4.Сообщить о проблеме",
     "smart_support_helps_4_content": "Если возникают проблемы с приложением или использованием продукта, пользователи могут оставить отзыв онлайн, что сокращает время общения с колл-центром.",
-    "smart_support_helps_5": "5.Свяжитесь с нами",
     "smart_support_helps_5_content": "Пользователи могут связаться с нами по телефону, электронной почте и через официальный сайт.",
     "block_key": "Блокировать",
     "guide_tips_device_1": "Это <b> новая вкладка домашней страницы. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Устройство требует внимания.",
     "CL_DV_RF_next_cleaning_will_be": "Следующая уборка будет **",
     "CL_DV_RF_last_clean_was": "Последняя уборка была **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Советы по чистке и уходу",
     "CL_CF_AS_needs_attention": "Устройство требует внимания.",
     "CL_CF_AS_run_normal_condition": "Ваше устройство работает в нормальном состоянии.",
     "CL_DV_WM_offline_content1": "Проверьте, подключен ли ваш прибор и включена ли питание.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Очень горячо",
     "CL_CF_HP_card": "Карточка",
     "CL_CF_HP_enter_card_name": "Введите название карты...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Пожалуйста, выберите хотя бы один ингредиент.",
     "CL_CF_FM_no_shopping_items": "Нет товаров для покупок",
     "CL_CF_FM_add_food_from_below": "Добавить еду снизу",
     "CL_CF_FM_x_has_been_removed": "** был удален.",
-    "CL_CF_CO_waiting": "ожидающий"
+    "CL_CF_CO_waiting": "ожидающий",
+    "CL_CF_HP_delete_card_tips": "Вы уверены, что хотите удалить карту?",
+    "smart_energy_helps_1": "1. Эко в один клик",
+    "smart_energy_helps_2": "2. Мониторинг потребления энергии",
+    "smart_energy_helps_3": "3. Энергетический помощник",
+    "air_care_helps_1": "1. Оценка воздуха",
+    "smart_laundry_helps_2": "2. Управление моющими средствами",
+    "air_care_helps_2": "2. Оптимизация в один клик",
+    "air_care_helps_3": "3. 3D-вид комнаты",
+    "smart_laundry_helps_1": "1. Индивидуальная стирка",
+    "smart_laundry_helps_3": "3. Отчет об использовании прачечной",
+    "smart_kitchen_helps_1": "1. Рецепт от шеф-повара",
+    "smart_kitchen_helps_2": "2. Помощник по рецептам",
+    "smart_kitchen_helps_3": "3. Управление продуктами питания",
+    "smart_kitchen_helps_4": "4. Управление напитками",
+    "smart_kitchen_helps_5": "5. Коллекция вин",
+    "smart_kitchen_helps_6": "6. Список покупок",
+    "smart_support_helps_1": "1. Советы по чистке и обслуживанию",
+    "smart_support_helps_2": "2. Самодиагностика в один клик",
+    "smart_support_helps_4": "4. Сообщить о проблеме",
+    "smart_support_helps_5": "5. Свяжитесь с нами",
+    "air_care_helps_1_content": "Контролируйте температуру и влажность в каждой комнате в режиме реального времени, а также предоставляйте оценки комфорта и напоминания на основе состояния воздуха.",
+    "smart_energy_helps_2_content": "Рассчитать потребление электроэнергии и воды по всему дому на ежедневной, ежемесячной и ежегодной основе. Вы также можете просмотреть статистику потребления отдельных устройств, долю потребления энергии каждым устройством в течение выбранного периода, общее и индивидуальное потребление энергии.",
+    "smart_support_helps_3": "3. Поиск неисправностей",
+    "CL_SL_CM_about_usage_month_desc": "Приведенные данные являются оценочными, а не точными измерениями.\n Наши оценки основаны на контролируемых испытаниях, поэтому ваши фактические результаты могут отличаться.\n Реальное потребление энергии зависит от ваших конкретных условий и привычек.",
+    "CL_CF_HP_no_card_key": "Нет карты"
 }
