--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Користите кутију за влажност да регулишете влажност",
     "same_day": "Исти дан",
     "w_temp_set": "Коју температуру подесити?",
+    "asko": "ASKO",
     "eco_meter": "Eco метар",
     "asko_eco_meter_desc": "## је користан паметни индикатор за одређивање вашег утицаја на животну средину на основу одабраног програма и додатних опција када је у питању потрошња енергије, воде и детерџента.",
     "wm86_autodose_desc": "Уместо да се мучите, оставите машину за прање да тачно измери праву количину детерџента. Наше машине за прање са системом аутоматског дозирања мере детерџент у односу на оптерећење прања, ниво прљавштине, тврдоћу воде, тип програма и температуру. Увек савршено дозирање без прекомерног дозирања. Овде можете подесити подразумевана подешавања за аутоматску дозу.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Сазнајте више о кључним карактеристикама Смарт Суппорт",
     "smart_energy_helps": "Смарт Енерги вам помаже да надгледате и одржавате уређаје у енергетски ефикасном стању",
     "smart_energy_helps_1_content": "Активни ЕЦО режим ваших уређаја. Статистички анализирајте потрошњу енергије уређаја. Пратите податке о уштеди енергије и поставите циљ за потрошњу енергије.",
-    "smart_energy_helps_2": "2. Мониторинг потрошње енергије",
-    "smart_energy_helps_2_content": "Израчунајте потрошњу струје и воде у целој кући на дневној, месечној и годишњој бази. такође можете погледати статистику потрошње појединих уређаја, пропорцију потрошње енергије сваког уређаја у одабраном периоду, укупну и појединачну потрошњу енергије.",
-    "smart_energy_helps_3": "3.Енерги Ассистант",
     "smart_energy_helps_3_content": "Поставите циљеве за уштеду енергије и пошаљите обавештења корисницима када се достигну постављене циљне вредности.",
     "air_care_helps": "Нега ваздуха има за циљ да реши интелигентну контролу температуре, влажности и ваздуха у целој кући",
-    "air_care_helps_1": "1.Аир Евалуатион",
-    "air_care_helps_1_content": "Пратите статус температуре и влажности у свакој просторији у реалном времену и обезбедите процену удобности и подсетнике на основу климатизације",
-    "air_care_helps_2": "2.Оптимизација једним кликом",
     "air_care_helps_2_content": "Оптимизација се може покренути једним кликом. Нудимо пет различитих шема оптимизације. Сваки режим оптимизације се може подесити према потребама корисника, пружајући корисницима прилагођена решења за оптимизацију.",
-    "air_care_helps_3": "3.3Д поглед на собу",
     "air_care_helps_3_content": "Пратите статус ваше собе и уређаја кроз детаљну 3Д визуализацију вашег дома.",
     "smart_laundry_key": "Смарт Лаундри",
     "smart_laundry_helps": "Смарт Лаундри нуди стручне савете за прање, интуитиван помоћник за прање веша и беспрекорно управљање детерџентом, обезбеђујући неупоредиво искуство прања веша",
-    "smart_laundry_helps_1": "1. Прилагођено веш",
     "smart_laundry_helps_1_content": "Персонализовани циклуси засновани на корисничким профилима и преференцијама, са ознакама за различита годишња доба, активности на отвореном, негу беба и још много тога.",
-    "smart_laundry_helps_2": "2. Управљање детерџентом",
     "smart_laundry_helps_2_content": "Оптимизујте своју рутину прања веша помоћу Смарт Хоме Лаундри Ассистант-а, аутоматски препознајте брендове детерџента и управљајте дозом у својој машини за прање веша.",
-    "smart_laundry_helps_3": "3. Извештај о коришћењу веша",
     "smart_laundry_helps_3_content": "Приказује недељне, месечне и годишње извештаје о корисниковом коришћењу програма за прање веша, као и месечну потрошњу воде и струје и чишћење бубња.",
     "smart_kitchen_key": "Смарт Китцхен",
     "smart_kitchen_helps": "Смарт Китцхен вам пружа невиђено интелигентно искуство кувања, укључујући интелигентне рецепте, упаривање вина, помоћнике за рецепте и управљање састојцима, вином и напитцима",
-    "smart_kitchen_helps_1": "1.Цхеф рецепт",
     "smart_kitchen_helps_1_content": "Искусите мајсторске рецепте у јединственим укусима када се кувају у различитим рернама, које прате упутства за кување у рецепту само једним кликом.",
-    "smart_kitchen_helps_2": "Асистент за рецепте",
     "smart_kitchen_helps_2_content": "Прилагодите и креирајте рецепте на основу ваших личних преференција, укључујући исхрану, кухиње, начин живота и алергије.",
-    "smart_kitchen_helps_3": "3. Управљање храном",
     "smart_kitchen_helps_3_content": "Додајте и прегледајте детаље о често коришћеним састојцима као што је датум истека. Брзо спојите одговарајуће рецепте за храну и пошаљите састојке који недостају на листу за куповину.",
-    "smart_kitchen_helps_4": "Управљање пићем",
     "smart_kitchen_helps_4_content": "Додајте пића и направите листу пића, погледајте детаљне информације о сваком поједином похрањеном напитку.",
-    "smart_kitchen_helps_5": "Vino zaliha",
     "smart_kitchen_helps_5_content": "Скенирајте да бисте креирали ВИвино листу винских подрума, поставите подсетнике за оптималан период пијења и препоручите упаривање хране на основу врсте вина.",
-    "smart_kitchen_helps_6": "Списак за куповину",
     "smart_kitchen_helps_6_content": "Генеришите листу за куповину на основу рецепта, означите ставке које већ поседујете и које сте набавили као референцу за куповину.",
     "smart_support_key": "Смарт Суппорт",
     "smart_support_helps": "Смарт Суппорт пружа свеобухватну помоћ за ваше уређаје. Можете добити савете за чишћење и негу за свакодневно одржавање, самодијагностику једним кликом да бисте проверили статус свих својих уређаја и пружили могућа решења за све ненормалне операције",
-    "smart_support_helps_1": "1. Савети за чишћење и одржавање",
     "smart_support_helps_1_content": "Дајте предлоге за свакодневно чишћење и одржавање производа.",
-    "smart_support_helps_2": "2.Сопствена дијагноза једним кликом",
     "smart_support_helps_2_content": "Самопровера једним кликом да схватите статус свих кућних апарата. Када се открије проблем, пружите препоручена решења.",
-    "smart_support_helps_3": "Отклањање проблема",
     "smart_support_helps_3_content": "Када уређај има проблем, корисници могу сами да помогну, отклоне и реше проблем у складу са водичем за грешке.",
-    "smart_support_helps_4": "4.Репорт Иссуе",
     "smart_support_helps_4_content": "Ако постоје проблеми са употребом апликације или производа, корисници могу да поврате информације на мрежи како би скратили време комуникације са позивним центром.",
-    "smart_support_helps_5": "5.Контактирајте нас",
     "smart_support_helps_5_content": "Корисници могу да нас контактирају путем телефона, е-поште и званичног сајта.",
     "block_key": "Блокирај",
     "guide_tips_device_1": "Ово је <b> картица нове почетне странице. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Уређају је потребна пажња.",
     "CL_DV_RF_next_cleaning_will_be": "Следеће чишћење ће бити **",
     "CL_DV_RF_last_clean_was": "Последње чишћење је било **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Савети за чишћење и негу",
     "CL_CF_AS_needs_attention": "Уређају је потребна пажња.",
     "CL_CF_AS_run_normal_condition": "Ваш уређај ради у нормалном стању.",
     "CL_DV_WM_offline_content1": "Проверите да ли је ваш уређај укључен и да ли је напајање укључено.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Екстра вруће",
     "CL_CF_HP_card": "Цард",
     "CL_CF_HP_enter_card_name": "Унесите назив картице...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Молимо изаберите најмање један састојак.",
     "CL_CF_FM_no_shopping_items": "Нема артикала за куповину",
     "CL_CF_FM_add_food_from_below": "Додајте храну одоздо",
     "CL_CF_FM_x_has_been_removed": "** је уклоњено.",
-    "CL_CF_CO_waiting": "чекајући"
+    "CL_CF_CO_waiting": "чекајући",
+    "CL_CF_HP_delete_card_tips": "Да ли сте сигурни да желите да избришете картицу?",
+    "smart_energy_helps_1": "1. Ецо-кликом једним кликом",
+    "smart_energy_helps_2": "2. Праћење потрошње енергије",
+    "smart_energy_helps_3": "3. Енергетски асистент",
+    "air_care_helps_1": "1. Процена ваздуха",
+    "smart_laundry_helps_2": "2. Управљање детерџентом",
+    "air_care_helps_2": "2. Оптимизација једним кликом",
+    "air_care_helps_3": "3. 3Д поглед на собу",
+    "smart_laundry_helps_1": "1. Прилагођено веш",
+    "smart_laundry_helps_3": "3. Извештај о употреби веша",
+    "smart_kitchen_helps_1": "1. Рецепт кувара",
+    "smart_kitchen_helps_2": "Асистент за рецепте",
+    "smart_kitchen_helps_3": "3. Управљање храном",
+    "smart_kitchen_helps_4": "4. Управљање пићем",
+    "smart_kitchen_helps_5": "5. Vino zaliha",
+    "smart_kitchen_helps_6": "6. Листа за куповину",
+    "smart_support_helps_1": "1. Савети за чишћење и одржавање",
+    "smart_support_helps_2": "2. Самодијагноза једним кликом",
+    "smart_support_helps_4": "4. Извештај о проблему",
+    "smart_support_helps_5": "5. Контактирајте нас",
+    "air_care_helps_1_content": "Пратите статус температуре и влажности у свакој просторији у реалном времену и обезбедите процене удобности и подсетнике на основу климатизације.",
+    "smart_energy_helps_2_content": "Израчунајте потрошњу струје и воде у целој кући на дневној, месечној и годишњој бази. Такође можете погледати статистику потрошње појединих уређаја, пропорцију потрошње енергије сваког уређаја у одабраном периоду, укупну и појединачну потрошњу енергије.",
+    "smart_support_helps_3": "3. Отклањање проблема",
+    "CL_SL_CM_about_usage_month_desc": "Приказани подаци су процене, а не тачна мерења.\n Наше процене су засноване на контролисаним тестовима, тако да ваши стварни резултати могу да варирају.\n Коришћење енергије у стварном свету зависи од вашег специфичног окружења и навика.",
+    "CL_CF_HP_no_card_key": "Но Цард"
 }
