--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -3415,6 +3415,7 @@
     "use_humidity": "Sử dụng hộp độ ẩm để điều chỉnh độ ẩm",
     "same_day": "Trong cùng một ngày",
     "w_temp_set": "Cài đặt nhiệt độ nào?",
+    "asko": "ASKO",
     "eco_meter": "Đồng hồ sinh thái",
     "asko_eco_meter_desc": "## là một chỉ báo thông minh hữu ích để xác định tác động môi trường của bạn dựa trên chương trình đã chọn và các tùy chọn bổ sung khi nói đến mức tiêu thụ năng lượng, nước và chất tẩy rửa.",
     "wm86_autodose_desc": "Thay vì phải vật lộn, hãy để máy giặt đo chính xác liều lượng chất tẩy rửa. Máy giặt của chúng tôi có hệ thống Tự động định lượng sẽ đo chất tẩy rửa theo khối lượng giặt, mức độ bẩn, độ cứng của nước, loại chương trình và nhiệt độ. Luôn luôn định lượng hoàn hảo và không còn tình trạng quá liều. Tại đây, bạn có thể điều chỉnh cài đặt mặc định của mình cho Tự động định lượng.",
@@ -4459,50 +4460,29 @@
     "smart_support_l_m": "Tìm hiểu thêm về các tính năng chính của Smart Support",
     "smart_energy_helps": "Smart Energy giúp bạn theo dõi và duy trì các thiết bị ở trạng thái tiết kiệm năng lượng",
     "smart_energy_helps_1_content": "Chế độ ECO chủ động của thiết bị. Phân tích thống kê mức tiêu thụ năng lượng của thiết bị. Theo dõi dữ liệu tiết kiệm năng lượng và Đặt mục tiêu sử dụng năng lượng.",
-    "smart_energy_helps_2": "2. Giám sát mức tiêu thụ năng lượng",
-    "smart_energy_helps_2_content": "Tính toán lượng điện và nước tiêu thụ của toàn bộ ngôi nhà theo ngày, tháng và năm. Bạn cũng có thể xem số liệu thống kê về mức tiêu thụ của từng thiết bị, tỷ lệ tiêu thụ năng lượng của từng thiết bị trong khoảng thời gian đã chọn, mức tiêu thụ năng lượng chung và riêng lẻ.",
-    "smart_energy_helps_3": "3.Trợ lý năng lượng",
     "smart_energy_helps_3_content": "Đặt mục tiêu tiết kiệm năng lượng và gửi thông báo cho người dùng khi đạt được mục tiêu đã đặt ra.",
     "air_care_helps": "Air care hướng đến mục tiêu giải quyết vấn đề kiểm soát thông minh nhiệt độ, độ ẩm và không khí trong toàn bộ ngôi nhà",
-    "air_care_helps_1": "1. Đánh giá không khí",
-    "air_care_helps_1_content": "Theo dõi tình trạng nhiệt độ và độ ẩm của từng phòng theo thời gian thực và đưa ra đánh giá và nhắc nhở về mức độ thoải mái dựa trên tình trạng không khí",
-    "air_care_helps_2": "2. Tối ưu hóa bằng một cú nhấp chuột",
     "air_care_helps_2_content": "Có thể bắt đầu tối ưu hóa chỉ bằng một cú nhấp chuột. Chúng tôi cung cấp năm chương trình tối ưu hóa khác nhau. Mỗi chế độ tối ưu hóa có thể được điều chỉnh theo nhu cầu của người dùng, cung cấp cho người dùng các giải pháp tối ưu hóa tùy chỉnh.",
-    "air_care_helps_3": "Góc nhìn phòng 3.3D",
     "air_care_helps_3_content": "Theo dõi tình trạng phòng và các thiết bị trong nhà thông qua hình ảnh 3D chi tiết về ngôi nhà của bạn.",
     "smart_laundry_key": "Giặt ủi thông minh",
     "smart_laundry_helps": "Smart Laundry cung cấp các mẹo giặt giũ chuyên nghiệp, trợ lý giặt giũ trực quan và quản lý chất tẩy rửa liền mạch, đảm bảo trải nghiệm giặt giũ vô song",
-    "smart_laundry_helps_1": "1. Giặt ủi theo yêu cầu",
     "smart_laundry_helps_1_content": "Chu kỳ được cá nhân hóa dựa trên hồ sơ và sở thích của người dùng, với các thẻ cho các mùa khác nhau, hoạt động ngoài trời, chăm sóc em bé, v.v.",
-    "smart_laundry_helps_2": "2. Quản lý chất tẩy rửa",
     "smart_laundry_helps_2_content": "Tối ưu hóa quy trình giặt giũ của bạn với Smart Home Laundry Assistant, tự động nhận dạng nhãn hiệu bột giặt và quản lý liều lượng trong máy giặt.",
-    "smart_laundry_helps_3": "3.Báo cáo sử dụng đồ giặt",
     "smart_laundry_helps_3_content": "Hiển thị báo cáo hàng tuần, hàng tháng và hàng năm về việc người dùng sử dụng chương trình giặt là, cũng như lượng nước, điện sử dụng trong tháng và việc vệ sinh lồng giặt.",
     "smart_kitchen_key": "Bếp thông minh",
     "smart_kitchen_helps": "Smart Kitchen cung cấp cho bạn trải nghiệm nấu ăn thông minh chưa từng có, bao gồm công thức nấu ăn thông minh, kết hợp rượu vang, trợ lý công thức nấu ăn và quản lý nguyên liệu, rượu vang và đồ uống",
-    "smart_kitchen_helps_1": "1. Công thức nấu ăn của đầu bếp",
     "smart_kitchen_helps_1_content": "Trải nghiệm công thức nấu ăn của bậc thầy với hương vị độc đáo khi nấu trong các loại lò nướng khác nhau, tuân theo hướng dẫn nấu ăn của công thức chỉ bằng một cú nhấp chuột.",
-    "smart_kitchen_helps_2": "2.Trợ lý công thức nấu ăn",
     "smart_kitchen_helps_2_content": "Tùy chỉnh và tạo công thức nấu ăn dựa trên sở thích cá nhân của bạn bao gồm dinh dưỡng, ẩm thực, lối sống và dị ứng.",
-    "smart_kitchen_helps_3": "3. Quản lý thực phẩm",
     "smart_kitchen_helps_3_content": "Thêm và xem thông tin chi tiết về các thành phần thường dùng như ngày hết hạn. Nhanh chóng kết hợp các công thức nấu ăn phù hợp và gửi các thành phần còn thiếu vào danh sách mua sắm.",
-    "smart_kitchen_helps_4": "Giám sát",
     "smart_kitchen_helps_4_content": "Thêm đồ uống và tạo danh sách đồ uống, xem thông tin chi tiết về từng loại đồ uống đã lưu trữ.",
-    "smart_kitchen_helps_5": "Kho rượu",
     "smart_kitchen_helps_5_content": "Quét để tạo danh sách hầm rượu vang của VIvino, đặt lời nhắc về thời gian uống rượu tối ưu và đề xuất kết hợp món ăn dựa trên loại rượu.",
-    "smart_kitchen_helps_6": "6. Danh sách mua sắm",
     "smart_kitchen_helps_6_content": "Tạo danh sách mua sắm dựa trên công thức nấu ăn, đánh dấu những mặt hàng bạn đã sở hữu và mua làm tài liệu tham khảo khi mua sắm.",
     "smart_support_key": "Hỗ trợ thông minh",
     "smart_support_helps": "Smart Support cung cấp hỗ trợ toàn diện cho các thiết bị của bạn. Bạn có thể nhận được các mẹo vệ sinh và chăm sóc để bảo trì hàng ngày, tự chẩn đoán bằng một cú nhấp chuột để kiểm tra trạng thái của tất cả các thiết bị của bạn và cung cấp các giải pháp khả thi cho bất kỳ hoạt động bất thường nào",
-    "smart_support_helps_1": "1. Mẹo vệ sinh và bảo dưỡng",
     "smart_support_helps_1_content": "Đưa ra gợi ý về cách vệ sinh và bảo dưỡng sản phẩm hàng ngày.",
-    "smart_support_helps_2": "2. Tự chẩn đoán chỉ bằng một cú nhấp chuột",
     "smart_support_helps_2_content": "Tự kiểm tra một cú nhấp chuột để nắm bắt tình trạng của tất cả các thiết bị gia dụng. Khi phát hiện ra sự cố, hãy cung cấp các giải pháp được đề xuất.",
-    "smart_support_helps_3": "Xử lý sự cố",
     "smart_support_helps_3_content": "Khi thiết bị gặp sự cố, người dùng có thể tự mình khắc phục, xử lý sự cố theo hướng dẫn lỗi.",
-    "smart_support_helps_4": "4.Báo cáo sự cố",
     "smart_support_helps_4_content": "Nếu có vấn đề với ỨNG DỤNG hoặc cách sử dụng sản phẩm, người dùng có thể phản hồi trực tuyến để giảm thời gian liên lạc với tổng đài.",
-    "smart_support_helps_5": "5. Liên hệ với chúng tôi",
     "smart_support_helps_5_content": "Người dùng có thể liên hệ với chúng tôi qua điện thoại, email và trang web chính thức.",
     "block_key": "Khối",
     "guide_tips_device_1": "Đây là <b> tab trang chủ mới. </b>",
@@ -4598,7 +4578,7 @@
     "CL_CF_CO_device_needs_attention": "Thiết bị này cần được chú ý.",
     "CL_DV_RF_next_cleaning_will_be": "Lần vệ sinh tiếp theo sẽ là **",
     "CL_DV_RF_last_clean_was": "Lần vệ sinh cuối cùng là **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Mẹo vệ sinh và chăm sóc",
     "CL_CF_AS_needs_attention": "Thiết bị này cần được chú ý.",
     "CL_CF_AS_run_normal_condition": "Thiết bị của bạn hoạt động bình thường.",
     "CL_DV_WM_offline_content1": "Kiểm tra xem thiết bị của bạn đã được cắm và nguồn đã được bật.",
@@ -4611,10 +4591,34 @@
     "CL_DV_WM_extra_hot": "Cực nóng",
     "CL_CF_HP_card": "Thẻ",
     "CL_CF_HP_enter_card_name": "Nhập tên thẻ...",
-    "smart_energy_helps_1": "",
     "CL_CF_FM_select_at_list_one_ingredient": "Vui lòng chọn ít nhất một thành phần.",
     "CL_CF_FM_no_shopping_items": "Không có mục mua sắm",
     "CL_CF_FM_add_food_from_below": "Thêm thức ăn từ bên dưới",
     "CL_CF_FM_x_has_been_removed": "** đã bị xóa.",
-    "CL_CF_CO_waiting": "chờ"
+    "CL_CF_CO_waiting": "chờ",
+    "CL_CF_HP_delete_card_tips": "Bạn có chắc chắn muốn xóa thẻ không?",
+    "smart_energy_helps_1": "1. Một cú nhấp chuột Eco",
+    "smart_energy_helps_2": "2. Giám sát mức tiêu thụ năng lượng",
+    "smart_energy_helps_3": "3. Trợ lý năng lượng",
+    "air_care_helps_1": "1. Đánh giá không khí",
+    "smart_laundry_helps_2": "2. Quản lý chất tẩy rửa",
+    "air_care_helps_2": "2. Tối ưu hóa bằng một cú nhấp chuột",
+    "air_care_helps_3": "3. Phòng xem 3D",
+    "smart_laundry_helps_1": "1. Giặt ủi theo yêu cầu",
+    "smart_laundry_helps_3": "3. Báo cáo sử dụng đồ giặt",
+    "smart_kitchen_helps_1": "1. Công thức nấu ăn của đầu bếp",
+    "smart_kitchen_helps_2": "2. Trợ lý công thức nấu ăn",
+    "smart_kitchen_helps_3": "3. Quản lý thực phẩm",
+    "smart_kitchen_helps_4": "4. Giám sát",
+    "smart_kitchen_helps_5": "5. Kho rượu",
+    "smart_kitchen_helps_6": "6. Danh sách mua sắm",
+    "smart_support_helps_1": "1. Mẹo vệ sinh và bảo dưỡng",
+    "smart_support_helps_2": "2. Tự chẩn đoán chỉ bằng một cú nhấp chuột",
+    "smart_support_helps_4": "4. Báo cáo sự cố",
+    "smart_support_helps_5": "5. Liên hệ với chúng tôi",
+    "air_care_helps_1_content": "Theo dõi nhiệt độ và độ ẩm của từng phòng theo thời gian thực và đưa ra đánh giá cũng như lời nhắc nhở dựa trên tình trạng không khí.",
+    "smart_energy_helps_2_content": "Tính toán mức tiêu thụ điện và nước của toàn bộ ngôi nhà theo ngày, tháng và năm. Bạn cũng có thể xem số liệu thống kê mức tiêu thụ của từng thiết bị, tỷ lệ tiêu thụ năng lượng của từng thiết bị trong khoảng thời gian đã chọn, mức tiêu thụ năng lượng chung và riêng lẻ.",
+    "smart_support_helps_3": "3. Xử lý sự cố",
+    "CL_SL_CM_about_usage_month_desc": "Dữ liệu hiển thị chỉ là ước tính, không phải là số đo chính xác.\n Ước tính của chúng tôi dựa trên các thử nghiệm được kiểm soát, do đó kết quả thực tế của bạn có thể khác.\n Mức sử dụng năng lượng thực tế phụ thuộc vào môi trường và thói quen cụ thể của bạn.",
+    "CL_CF_HP_no_card_key": "Không có thẻ"
 }
